Replaces known ligatures

--- a/src/01-confianza.html
+++ b/src/01-confianza.html
@@ -22,7 +22,7 @@
           esenciales son el aprecio y la CONFIANZA recíproca, que lleva al trato
           fraternal y a la participación de todos en la vida y en la acción
           comunitaria, apoyados en la razón, el amor y el espíritu de fe que
-          crea la libertad de los hĳos de Dios.</em
+          crea la libertad de los hijos de Dios.</em
         >
       </li>
       <li>
@@ -306,7 +306,7 @@
           >«Al atardecer de ese mismo día, el primero de la semana, estando
           cerradas las puertas del lugar donde se encontraban los discípulos,
           por temor a los judíos, llegó Jesús y poniéndose en medio de ellos,
-          les dĳo: “¡La paz esté con ustedes!”.</em
+          les dijo: “¡La paz esté con ustedes!”.</em
         >
       </p>
       <p>
@@ -317,7 +317,7 @@
       </p>
       <p>
         <em
-          >Jesús les dĳo de nuevo: “¡La paz esté con ustedes! Como el Padre me
+          >Jesús les dijo de nuevo: “¡La paz esté con ustedes! Como el Padre me
           envió a mí, yo también los envío a ustedes”. Al decirles esto, sopló
           sobre ellos y añadió “Reciban al Espíritu Santo. Los pecados serán
           perdonados a los que ustedes se los perdonen, y serán retenidos a los
@@ -327,7 +327,7 @@
       <p>
         <em
           >Tomás, uno de los Doce, de sobrenombre el Mellizo, no estaba con
-          ellos cuando llegó Jesús. Los otros discípulos le dĳeron: “¡Hemos
+          ellos cuando llegó Jesús. Los otros discípulos le dijeron: “¡Hemos
           visto al Señor!”. Él les respondió: “Si no veo la marca de los clavos
           en sus manos, si no pongo el dedo en el lugar de los clavos y la mano
           en su costado, no lo creeré”.</em
@@ -337,13 +337,13 @@
         <em
           >Ocho días más tarde, estaban de nuevo los discípulos reunidos en la
           casa, y estaba con ellos Tomás. Entonces apareció Jesús, estando
-          cerradas las puertas, se puso en medio de ellos y les dĳo:”¡La paz
+          cerradas las puertas, se puso en medio de ellos y les dijo:”¡La paz
           esté con ustedes!”.</em
         >
       </p>
       <p>
         <em
-          >Luego dĳo a Tomás: “Trae aquí tu dedo: aquí están mis manos. Acerca
+          >Luego dijo a Tomás: “Trae aquí tu dedo: aquí están mis manos. Acerca
           tu mano: Métela en mi costado. En adelante no seas incrédulo, sino
           hombre de fe”.</em
         >
@@ -351,7 +351,7 @@
       <p><em>Tomas respondió: “¡Señor mío y Dios mío!”.</em></p>
       <p>
         <em
-          >Jesús le dĳo: “Ahora crees, porque me has visto. ¡Felices los que
+          >Jesús le dijo: “Ahora crees, porque me has visto. ¡Felices los que
           creen sin haber visto!”.»</em
         >
       </p>
