--- a/src/02-compartir.html
+++ b/src/02-compartir.html
@@ -34,7 +34,7 @@
           esenciales son el aprecio y la confianza recíproca ,que lleva al trato
           fraternal y a la participación de todos en la vida y en la acción
           comunitaria, apoyados en la razón, el amor y el espíritu de fe que
-          crea la libertad de los hĳos de Dios.</em
+          crea la libertad de los hijos de Dios.</em
         >
       </li>
     </ul>
@@ -200,7 +200,7 @@
       al mediodía en la estancia dode pasara la mañana. Reconfortado por dentro,
       preparó su cama: un trozo de plástico negro como colchón que evitaba la
       humedad. Encima dos o tres bolsas que llevaba en el mono, más un par de
-      otras que encontró allí. Para taparse tenía una cobĳa vieja, escasa de
+      otras que encontró allí. Para taparse tenía una cobija vieja, escasa de
       lana y abudante en vida menuda. Como quien se espanta un peligro de
       enfrente, se santiguó y rezó el Bendito que le enseñara su madre.
     </p>
@@ -221,12 +221,12 @@
     <p>
       -Vea, amigo. Yo ya estoy cansado de que los hombres se me anden quejando
       siempre. Parce que nadie está conforme con lo que yo le he destinado. Así
-      que desde ahora le dejo a cada uno que elĳa la cruz que tendrá que llevar.
+      que desde ahora le dejo a cada uno que elija la cruz que tendrá que llevar.
       Pero que después no me vengan con quejas. La que agarren tendrán que
       cargarla para el resto del viaje y sin protestar. Y como usted está aquí,
       será el primero a quien le doy la oportunidad de seleccionar la suya, vea,
       acabo de recorrer el mundo retirando todas las cruces de los hombres, y
-      las he traído a este galpón grande. Levátese y elĳa la que le guste.
+      las he traído a este galpón grande. Levátese y elija la que le guste.
     </p>
     <p>
       Sorprendido el hombre, mira y ve que efectivamente el galpón estaba que
@@ -277,7 +277,7 @@
       Pero el hombre se afirmó en lo hecho y garantizó que realmente lo había
       pensado muy bien, y que con aquella cruz no habría problemas, que era la
       justa para él, y que no pensaba retirar su decisión. Tata Dios casi
-      riéndose le dĳo:
+      riéndose le dijo:
     </p>
 
     <p>
@@ -364,7 +364,7 @@
       <h3>Palabra de Dios: Cargue su cruz y me siga (Mt.16, 24-26)</h3>
       <p>
         <em
-          >«Entonces Jesús dĳo a sus discípulos: “El que quiera venir detrás de
+          >«Entonces Jesús dijo a sus discípulos: “El que quiera venir detrás de
           mí, que renuncie a sí mismo, que cargue con su cruz y me siga. Porque
           él que quiera salvar su vida, la perderá; y el que pierda su vida a
           causa de mí, la encontrará.¿De qué le servirá al hombre ganar el mundo
@@ -480,7 +480,7 @@
     <h4>- Se actúa:</h4>
     <p>
       Al final darles un momento para que cada uno piense de qué maneras puede
-      ser más generoso con los que lo rodean. Pedirles que elĳan una o dos
+      ser más generoso con los que lo rodean. Pedirles que elijan una o dos
       personas con las que tienen que crecer en generosidad y que se comprometan
       a hacer cosas concretas por ellos en la semana. Los que quieran pueden
       ponerlo en común. En el encuentro siguiente, preguntar cómo les fue con lo
