--- a/src/03-afectividad.html
+++ b/src/03-afectividad.html
@@ -158,7 +158,7 @@
         >El amor es paciente, es servicial; el amor no es envidioso, no hace
         alarde, no se envanece, no procede con bajeza, no busca su propio
         interés, no se irrita, no tienen en cuenta el mal recibido, no se alegra
-        de la injusticia, sino que se regocĳa con la verdad. El amor todo lo
+        de la injusticia, sino que se regocija con la verdad. El amor todo lo
         disculpa, todo lo cree, todo lo espera, todo lo soporta.»</em
       >
     </p>
@@ -237,7 +237,7 @@
     </p>
     <h4>- Actividad:</h4>
     <p>
-      Que cada uno elĳa tres personas que se parezcan en algo, las nombre en voz
+      Que cada uno elija tres personas que se parezcan en algo, las nombre en voz
       alta, pero sin decir en qué se parecen para él. Todos los demás tratan de
       descubrirlo arriesgando las posbles razones. Al final, el que los eligió
       dice en que se parecían. Como variante, a modo de juego ir dando puntajes
@@ -301,7 +301,7 @@
       </p>
       <p>
         <em>
-          Al llegar a ese lugar, Jesús miró hacia arriba y le dĳo: “Zaqueo, baja
+          Al llegar a ese lugar, Jesús miró hacia arriba y le dijo: “Zaqueo, baja
           pronto, porque hoy tengo que alojarme en tu casa.”
         </em>
       </p>
@@ -314,15 +314,15 @@
       </p>
       <p>
         <em>
-          Pero Zaqueo dĳo resueltamente al Señor: “Señor, voy a dar la mitad de
+          Pero Zaqueo dijo resueltamente al Señor: “Señor, voy a dar la mitad de
           mis bienes a los pobres, y si he perjudicado a alguien, le daré cuatro
           veces más.”
         </em>
       </p>
       <p>
         <em>
-          Y Jesús le dĳo: “Hoy ha llegado la salvación a esta casa, ya que
-          también este hombres es un hĳo de Abraham, porque el Hĳo del hombre
+          Y Jesús le dijo: “Hoy ha llegado la salvación a esta casa, ya que
+          también este hombres es un hijo de Abraham, porque el Hijo del hombre
           vino a buscar y a salvar lo que estaba perdido”.»
         </em>
       </p>
@@ -492,7 +492,7 @@
       <p>
         <em>
           «María llegó a donde estaba Jesús y, al verlo, se postró a sus pies y
-          le dĳo: “Señor, si hbieras estado aquí, mi hermano no habría muerto”.
+          le dijo: “Señor, si hbieras estado aquí, mi hermano no habría muerto”.
           Jesús, al verla llorar a ella, y también a los judíos que la
           acompañaban, conmovido y turbado, preguntó: “ ¿Dónde lo pusieron?”.
         </em>
@@ -501,7 +501,7 @@
       <p><em> Y Jesús lloró. </em></p>
       <p>
         <em>
-          Los judíos dĳeron: “¡Cómo lo amaba!”. Pero algunos decían: “Este que
+          Los judíos dijeron: “¡Cómo lo amaba!”. Pero algunos decían: “Este que
           abrió los ojos del ciego de nacimiento, ¿no podría impedir que Lázaro
           muriera?”.
         </em>
@@ -509,16 +509,16 @@
       <p>
         <em>
           Jesús, conmoviéndose nuevamente, llegó al sepulcro, que era una cueva
-          con una piedra encima, y le dĳo: “Quiten la piedra”. Marta, la hermana
+          con una piedra encima, y le dijo: “Quiten la piedra”. Marta, la hermana
           del difunto, le respondió: “Señor, huele mal; ya hace cuatro días que
           está muerto”.
         </em>
       </p>
       <p>
         <em>
-          Jesús le dĳo: “¿No te he dicho que si crees, verás la gloria de
+          Jesús le dijo: “¿No te he dicho que si crees, verás la gloria de
           Dios?”. Entonces quitaron la piedra, y Jesús, levantando los ojos al
-          cielo, dĳo: “Padre, te doy grcias porque me oíste. Yo sé que siempre
+          cielo, dijo: “Padre, te doy grcias porque me oíste. Yo sé que siempre
           me oyes, pero le he dicho por esta gente que me rodea, para que crean
           que tú me has enviado”.
         </em>
@@ -527,7 +527,7 @@
         <em>
           Después de decir esto, gritó con voz fuerte: “¡Lázaro, ven afuera!”.
           El muerto salió con los pies y las manos atadas con vendas, y el
-          rostro envuelto en un sudario. Jesús les dĳo: “Desátenlo para que
+          rostro envuelto en un sudario. Jesús les dijo: “Desátenlo para que
           pueda caminar”.
         </em>
       </p>
@@ -541,7 +541,7 @@
     </p>
     <h4>- Actividad:</h4>
     <p>
-      Darle a cada uno una imagen del círculo de personas. Que elĳan una de
+      Darle a cada uno una imagen del círculo de personas. Que elijan una de
       ellas con la que se identifiquen y le pongan su nombre. Proponer que
       piensen un momento en las personas que más quieren y que las ubiquen tam-
       bién en el dibujo, poniéndole nombre.
@@ -609,7 +609,7 @@
     <p>
       pios límites de ser humano, alguien que pone su seguridad no en poderes
       especiales, sino en su sinceridad para vivir y para aportar su propia vida
-      de Hĳo de Dios y en su sentido de amor y de justicia para convocar y para
+      de Hijo de Dios y en su sentido de amor y de justicia para convocar y para
       encontrarse con sus hermanos.
     </p>
     <p>
@@ -1206,7 +1206,7 @@
       El sexo es bueno. Por lógica, el placer que otorga también es bueno, para
       el goce que mutumente se procuran la mujer y el hombre. En otra época
       algunos llegaron a identificar placer con pecado y toleraban, como
-      inevitable, pasar por «eso» para tener hĳos.
+      inevitable, pasar por «eso» para tener hijos.
     </p>
     <p>
       El placer hace palpable y concreto el sentido de la sexualidad. El
@@ -1355,7 +1355,7 @@
           vientre, un bloque de marfil, todo incrustado de zafiros. Sus piernas,
           columnas de alabastro, asentadas sobre bases de oro puro. Su aspecto
           es como el Líbano, esbelto como los cedros. Su paladar rebosa dulzura
-          y todo en él es una delicia. Así es mi amado, así es mi amigo, hĳas de
+          y todo en él es una delicia. Así es mi amado, así es mi amigo, hijas de
           Jerusalén.»
         </em>
       </p>
