--- a/src/04-amistad.html
+++ b/src/04-amistad.html
@@ -114,7 +114,7 @@
       castiga. Pero volvamos al Evangelio y veamos ¿qué nos manda Jesús? “Este
       es mi mandmiento: Ámense los unos los otros, como yo los he amado.” Dios
       nos manda que nos amemos y dejemos de generar divisiones por cosas que no
-      tienen sentido. Somos hĳos de un mismo Padre y por lo tanto hermanos entre
+      tienen sentido. Somos hijos de un mismo Padre y por lo tanto hermanos entre
       nosotros.
     </p>
     <p>
@@ -210,11 +210,11 @@
       hacía. Llegado el momento de la despedida, estaba cnando por última vez
       con sus amigos, cuando se levantó y uno a uno les fue lavando los pies con
       sus manos, enseñándoles a servir a todos los hermanos. Esa misma noche
-      bendĳo el pan,
+      bendijo el pan,
     </p>
     <p>
       lo partió y se lo repartió, enseñándoles a compartir. Y es través de ellos
-      nos dĳo a todos que entre todos hagamos lo mismo y más aún que lo hagamos
+      nos dijo a todos que entre todos hagamos lo mismo y más aún que lo hagamos
       en su memoria.
     </p>
     <p>
@@ -392,7 +392,7 @@
       </p>
       <p>
         <em>
-          Pedro dĳo a Jesús: «Señor, ¡qué bien estamos aquí! Si quieres,
+          Pedro dijo a Jesús: «Señor, ¡qué bien estamos aquí! Si quieres,
           levantará aquí mismo tres carpas, una para ti, otra para Moisés y otra
           para Elías».
         </em>
@@ -400,7 +400,7 @@
       <p>
         <em>
           Todavía estaba hablando, cuando una nube luminosa los cubrió con su
-          sombra y se oyó una voz que decía desde la nube: «Este es mi Hĳo muy
+          sombra y se oyó una voz que decía desde la nube: «Este es mi Hijo muy
           querido, en quien tengo puesta mi predilección: escúchenlo».
         </em>
       </p>
@@ -412,7 +412,7 @@
       </p>
       <p>
         <em>
-          Jesús se acercó a ellos, y tocándolos, les dĳo: “Levántense, no tengan
+          Jesús se acercó a ellos, y tocándolos, les dijo: “Levántense, no tengan
           miedo”.»
         </em>
       </p>
