--- a/src/05-familia.html
+++ b/src/05-familia.html
@@ -16,15 +16,15 @@
       <strong>Inc. 23</strong> Es el elemento primordial de la Comunidad
       Salesiana y, por lo tanto, de la comunidad exploradoril.
       <strong>Inc. 24</strong> Consiste en un clima de afecto correspondido,
-      cuyos elementos esenciales son el aprcio y la conﬁanza recíproca, que
+      cuyos elementos esenciales son el aprcio y la confianza recíproca, que
       lleva al trato fraternal y a la participación de todos en la vida y en la
       acción comunitaria, apoyados en la razón, el amor y el espíritu de fe que
-      crea la libertad de los hĳos de Dios. <strong>Inc. 25</strong> Fruto de
+      crea la libertad de los hijos de Dios. <strong>Inc. 25</strong> Fruto de
       ello son el estilo fraterno de la autoridad, y la obediencia, el diálogo y
-      la crresponsabilidad. <strong>Inc. 92</strong> Cada hombre nace en un
+      la corresponsabilidad. <strong>Inc. 92</strong> Cada hombre nace en un
       hogar, que es la célula de la Patria. El amor y entrega a Dios y a sus
       hermanos debe comenzar por casa, por los seres que Dios puso como signo y
-      ﬁgura de su vida Trinitaria, para lograr así la unidad y el amor.
+      figura de su vida Trinitaria, para lograr así la unidad y el amor.
       <strong>Inc. 93</strong> Este amor familiar lleva al Explorador/a a
       preocuparse también por los padres de los demás, para ponerse a su
       servicio en todo lo que pueda serles útil. <strong>Inc. 131</strong> Al
@@ -48,18 +48,18 @@
     <p>¿Se siente un clima de familia en el grupo?</p>
     <h3>- Orientación:</h3>
     <p>
-      Si las respuestas a las preguntas revelan diﬁcultades que los chicos están
+      Si las respuestas a las preguntas revelan dificultades que los chicos están
       teniendo en el inte-
     </p>
     <p>
-      rior de sus familias, sería apropiado que la elĳas para trabajar. Algunos
+      rior de sus familias, sería apropiado que la elijas para trabajar. Algunos
       de los ejes que se desarrollarán en esta consigna serán:
     </p>
     <p>
       La familia y el hogar comprenden a una célula que conforma la Patria, es
       por ello que el amor y la unión deben reinar en cada casa y con cada
       integrante de la familia. La familia juega un papel fundamental en el
-      desarrollo social de nuestros chicos. La relación padres-hĳos/as va a
+      desarrollo social de nuestros chicos. La relación padres-hijos/as va a
       sentar las bases sobre la que se construirán los cimientos de los demás
       vínculos que establezcan los adolescentes en el resto de su entorno.
     </p>
@@ -97,7 +97,7 @@
     <p>
       Será importante apreciar que como animador te toca una tarea muy
       importante, en la medida que probablemente te tengas que posicionar en la
-      ﬁgura de contención de tus chicos, ya sea por inconvenientes familiares, o
+      figura de contención de tus chicos, ya sea por inconvenientes familiares, o
       porque representes a un hermano mayor, o al hermano que no tienen, o por X
       motivos que te lleven a colocarte en ese lugar.
     </p>
@@ -108,20 +108,20 @@
     <p>
       crea en el bata, tal como se menciona en nuestros principios doctrinales.
       Este espíritu de fmilia consiste en un clima de afecto correspondido,
-      cuyos elementos esenciales son el aprecio y la conﬁanza recíproca, que
+      cuyos elementos esenciales son el aprecio y la confianza recíproca, que
       lleva al trato fraternal y a la participación de todos en la vida y en la
       acción comunitaria, apoyados en la razón, el amor y el espíritu de fe que
-      crea la libertad de los hĳos de Dios.
+      crea la libertad de los hijos de Dios.
     </p>
     <h2>TEXTO PARA REFLEXIONAR Y ORIENTAR EL TRABAJO</h2>
     <h3>- Efesios 6:1-4</h3>
     <p>
       <em
-        >«Hĳos, obedezcan a sus padres. Ustedes son de Cristo, y eso es lo que
+        >«Hijos, obedezcan a sus padres. Ustedes son de Cristo, y eso es lo que
         les corresponde hacer. El primer mandamiento que va acompañado de una
         promesa es el siguiente: “Obedezcan y cuiden a su padre y a su madre.
         Así les irá bien, y podrán vivir muchos años en la tierra”. Y ustedes,
-        padres, no hagan enojar a sus hĳos. Más bien edúquenlos y denles
+        padres, no hagan enojar a sus hijos. Más bien edúquenlos y denles
         enseñanzas cristianas.»</em
       >
     </p>
@@ -140,7 +140,7 @@
         el que no escucha consejo no llega a viejo. Por lo tanto, si honramos a
         nuestros padres, si cumplimos su voluntad, podremos llegar a viejos, tal
         y como ellos lo logrron. Cuando lleguemos a la edad de ellos y tengamos
-        a nuestros hĳos entenderemos porque ellos no nos permitían ir a algunos
+        a nuestros hijos entenderemos porque ellos no nos permitían ir a algunos
         lugares o nos decían que nos alejáramos de alguna amistad.
       </li>
     </ul>
@@ -150,13 +150,13 @@
       furor mediático, rdes sociales y de los amigos genera dilemas y
       controversias entre los padres y el adolescente. Los padres o los
       responsables del adolescente se encuentran en la disyuntiva de dejarlos
-      actuar o ejercer algún control, entre conﬁar en su criterio o insistir en
+      actuar o ejercer algún control, entre confiar en su criterio o insistir en
       que asuman las precaciones indicadas por sus mayores. Las nuevas
       realidades parecen que confunden más a los padres que a los mismos
       adolescentes con respecto a su actuación como tales. Lo cierto es
     </p>
     <p>
-      que el ambiente juega un rol signiﬁcativo en el ser adolescente y en el
+      que el ambiente juega un rol significativo en el ser adolescente y en el
       ser padres. Por lo cual los adolescentes deben ser protegidos de ellos
       mismos al evitarles oportunidades de incurrir en situaciones peligrosas.
       Esto puede lograrse al ocupar su tiempo con actividades positivas que los
@@ -195,7 +195,7 @@
     <h3>ACTIVIDAD N° 2: COMO LA PATRIA</h3>
     <h3>- Orientación:</h3>
     <p>
-      Esta actividad busca que los Rastreadores/Hogueras identiﬁquen la
+      Esta actividad busca que los Rastreadores/Hogueras identifiquen la
       importancia de ayudase entre los miembros de la familia, y los modos más
       simples para hacerlo fortaleciendo los vínculos afectivos.
     </p>
@@ -210,7 +210,7 @@
       Había una vez una señora que se llamaba doña Patrocinio y que lavaba para
       afuera y cocinaba para adentro. La mujer era una criolla más bien gordita,
       y cuando se reía era una gloria: como si la risa le naciera de los pechos.
-      Daba gusto. Doña Patrocinio tenía cinco hĳos ya mozos, bien plantados y de
+      Daba gusto. Doña Patrocinio tenía cinco hijos ya mozos, bien plantados y de
       bastante pinta; no había mu- chacha del barrio que no tejiera alguna
       esperanza con alguno de ellos.
     </p>
@@ -227,15 +227,15 @@
       <li>- Ando mal de fondos, mamá. ¿No me tirás unos pesitos?</li>
       <li>
         - Bueno... me voy a dormir la siesta... El mayor nunca había dado
-        problemas. Era el que más recordaba la ﬁgura serera del padre, de modo
+        problemas. Era el que más recordaba la figura serera del padre, de modo
         que intentaba imitarlo. Se sentía responsable; era el ejemplo de los
         demás hermanos. Siempre había sido un chico serio. Jamás había traído
         malas notas. Era metódico: todo lo tenía anotado. Su mayor orgullo era
-        ser eﬁciente. Jamás había tenido que pedir ayuda a nadie.
+        ser eficiente. Jamás había tenido que pedir ayuda a nadie.
       </li>
     </ul>
     <p>
-      El segundo de los hĳos era escritor y había alcanzado cierta fama con sus
+      El segundo de los hijos era escritor y había alcanzado cierta fama con sus
       libros. En ellos con- taba fabulosas historias de caballos alados,
       palacios de cristal y hadas milagrosas.
     </p>
@@ -245,16 +245,16 @@
       orgulloso era él mismo, de sí mismo.
     </p>
     <p>
-      El tercer hĳo era comerciante. Vivía entre dos maquinitas: la de Calcular
+      El tercer hijo era comerciante. Vivía entre dos maquinitas: la de Calcular
       y el reloj pulsera…. aun- que últimamente vivía también pegado a los
-      noticiosos sobre ﬁnanzas, plazos ﬁjos y cotización
+      noticiosos sobre finanzas, plazos fijos y cotización
     </p>
     <p>
       del dólar. Su preocupación mayor era acumular, sacar ventaja, comprar
       barato y vender caro. Manejaba muchísimo dinero; sin embargo, era el que
       jamás tenía para terminar el mes. Si alguien pretendía distraerlo, él
       mostraba con cuentas y números que no podía descuidarse un instante. Que
-      siempre estaba al borde de la ruina. El hĳo número cuatro era obrero.
+      siempre estaba al borde de la ruina. El hijo número cuatro era obrero.
       Trabajaba en una pequeña industria, y siempre vivía a los tira y aﬂoja con
       el patrón. Si había aumento, trabajaba. Si no había aumento, paraba.
       Naturalmete, entre el obrero y el patrón de la fábrica no había más que
@@ -263,17 +263,17 @@
       triquiñuelas para desbaratar los planes del patrón.
     </p>
     <p>
-      El menor de los hĳos de Doña Patrocinio, el último, no era nada de nada.
-      No había terminado la primaria. Apenas sabía ﬁrmar, leer o escribir. Un
+      El menor de los hijos de Doña Patrocinio, el último, no era nada de nada.
+      No había terminado la primaria. Apenas sabía firmar, leer o escribir. Un
       poco por su salud, otro poco por su falta de ambición, nunca había durado
       en ningún trabajo. Estos fracasos lo hundían más y más; por eso
       últimamente no trabajaba. Era la Vergüenza y la rabia de los demás
-      hermanos, A escondidas, doña Patrocinio solía ayudar a este hĳo, Pero en
+      hermanos, A escondidas, doña Patrocinio solía ayudar a este hijo, Pero en
       su ignorancia, en su falta de horizontes, el muchacho malgastaba el
       esfuerzo de su madre,
     </p>
     <p>
-      Entonces los hermanos mayores decidieron ponerle punto ﬁnal a esta
+      Entonces los hermanos mayores decidieron ponerle punto final a esta
       situación con el menor. Como excepción, haciéndose lugar entre sus
       obligaciones, los cuatro decidieron reunirse a debatir qué hacer con el
       hermano inútil. Por eso una noche, mientras doña Patrocinio cocina- ba,
@@ -281,8 +281,8 @@
       hablar en voz baja,
     </p>
     <ul>
-      <li>- Aquí, el que no trabaja, no come -dĳo uno,</li>
-      <li>- Es como un animalito… -dĳo otro.</li>
+      <li>- Aquí, el que no trabaja, no come -dijo uno,</li>
+      <li>- Es como un animalito… -dijo otro.</li>
       <li>- Es un riesgo para la economía", -comentó otro.</li>
       <li>
         -A mi modo de ver, hay que darle con un caño por la cabeza", -sostuvo
@@ -292,11 +292,11 @@
     <p>
       Así estaban, cuando entró doña Patrocinio. La mujer quedó perpleja. Dejó
       sobre el aparador lo que traía entre manos, y se sentó, a la cabecera de
-      la mesa. Entonces dĳo sonriendo a cada hĳo:
+      la mesa. Entonces dijo sonriendo a cada hijo:
     </p>
     <ul>
       <li>
-        - Esto es un sueño", Esto es casi", ¡un milagro"! Mis hĳos han dejado
+        - Esto es un sueño", Esto es casi", ¡un milagro"! Mis hijos han dejado
         sus ocupaciones para reunirse en la casa de la madre", ¡No saben cuánto
         pedí que se realizara alguna vez éste sueño! Los cuatro muchachos se
         miraban de reojo, y carraspeaban molestos, seguramente la madre no
@@ -308,7 +308,7 @@
         puso suavemente sus dedos sobre la boca del mayor,
       </li>
       <li>
-        -Perdonáme que te tape la boca, hĳo querido, Pero yo quisiera, si me
+        -Perdonáme que te tape la boca, hijo querido, Pero yo quisiera, si me
         dejan, contarles algo. ¿Me permiten? Los muchachos hicieron que sí con
         la cabeza.
       </li>
@@ -316,7 +316,7 @@
     <p>Se hizo silencio, y la mujer habló con voz emocionada:</p>
     <ul>
       <li>
-        - Mis hĳitos queridos… Ustedes, con su hermano menor, que no está aquí,
+        - Mis hijitos queridos… Ustedes, con su hermano menor, que no está aquí,
         son cinco herma- nos, Como estos cinco dedos de mi mano derecha…
       </li>
     </ul>
@@ -331,15 +331,15 @@
         Durante varios días yo sentí en esta mano una sola presencia: la del
         dedo cortado ¡A los sanos ni los sentía…! ¡Sólo al enfermo! Y los demás
         hacían el trabajo del lastimado, y los demás protegían al herido… Los
-        hĳos estaban mudos escuchando aquella voz de llanto.
+        hijos estaban mudos escuchando aquella voz de llanto.
       </li>
     </ul>
     <p>Y de los ojos empezaron a chorrear las lágrimas.</p>
     <ul>
       <li>
         - Ustedes son… ¡Son mi mano derecha...! Mis dedos sanos, ¿me comprenden?
-        y alguna vez, cuando se casen y tengan hĳos, van a entender mejor estas
-        palabras. Van a sentir en la carne cuál es el hĳo débil, cuál es el que
+        y alguna vez, cuando se casen y tengan hijos, van a entender mejor estas
+        palabras. Van a sentir en la carne cuál es el hijo débil, cuál es el que
         está lastimado. Y van a descuidar a las demás ovejas del rebaño…por
         cuidar a la oveja perdida… Entonces vino un silencio largo. Cada uno
         pensó cuántas veces su madre había dejado todo lo demás por una
@@ -349,7 +349,7 @@
         descontado pero que rara vez se pone en práctica: la verdad no es verdad
         si le falta amor. Y esa es la gran revolución posible, porque será una
         revolución festiva. Los hermanos también descubrieron por qué Dios
-        preﬁere a los pobres, a los más desposedos de todo bien, a los menos
+        prefiere a los pobres, a los más desposedos de todo bien, a los menos
         brillantes, a los menos bonitos, a los más lastimados; porque es Padre y
         Madre a la vez y ante todo, es que la patria de los hombres es la carne
         de Dios; como una mano universal que sangra, sangra, sangra…
@@ -375,24 +375,24 @@
       matrimonio.
     </p>
     <p>
-      En un hogar cristiano los hĳos reciben el primer anuncio de fe y el
+      En un hogar cristiano los hijos reciben el primer anuncio de fe y el
       ejemplo de virtudes humnas y de caridad cristiana. En ella se aprende no
       solo a vivir y a trabajar sino también a amar, rezar y perdonar. En la
       primera iglesia eran familias enteras las que formaban las comunidades
       compartiendo su vida y su fe. Jesús quiso venir al mundo a cumplir su
       misión salvadora dentro de una familia. Quiso nacer como todos en un
       parto, tener padre y madre, toda una familia. Fue con María y con José con
-      quienes pasó la mayor parte de su vida, Todos los hombres somos hĳos de
+      quienes pasó la mayor parte de su vida, Todos los hombres somos hijos de
       Dios y hermanos entre nosotros. Formamos la gran familia de Dios.
     </p>
     <p>
       <strong>Primera comunidad:</strong> La familia es la primera comunidad en
       donde nos insertamos, de la cual formamos parte dede el día en que
-      nacemos. En ella, a pesar de nuestras diﬁcultades, somos queridos,
+      nacemos. En ella, a pesar de nuestras dificultades, somos queridos,
       aceptados y valorados, alentados acrecer y superar las que se nos
       presentan. A veces cuesta aceptar el rol que le toca desempeñar a cada uno
       en la familia. El padre siente el agobio de su papel; la madre se cansa de
-      hacer su papel; los hĳos, pretenden ocupar otros sitios en el grupo. No
+      hacer su papel; los hijos, pretenden ocupar otros sitios en el grupo. No
       hay apoyo mutuo, sino más bien cuestionamiento mutuo. Por eso Dios,
       tenemos que aprender a "ponernos en el lugar del otro..." entenderlo y
       regalanos una nueva oportunidad para crecer juntos. Que podamos promover
@@ -408,7 +408,7 @@
       <li>
         • En la vida de familia que se desarrolla principalmente en la casa: en
         las situaciones de convivencia, en el trato mutuo, en el diálogo entre
-        padres e hĳos y entre los hermanos.
+        padres e hijos y entre los hermanos.
       </li>
       <li>
         • Lo barrial, lo vecinal, las relaciones cotidianas surgen de nuestras
@@ -512,7 +512,7 @@
         los hermanos también.• En ambos casos a veces hay peleas y problemas,
         pero seguimos siendo compañeros o hermanos.• Todos al ir creciendo
         iremos armando nuestra vida, transitando caminos diferentes, con
-        familia, hĳos y nietos, pero no dejamos de ser hermanos de nuestros
+        familia, hijos y nietos, pero no dejamos de ser hermanos de nuestros
         hermanos por no estar ya bajo el mismo techo, como no dejamos de ser
         compañeros de nuestros compañeros por no seguir encontrándonos en el
         mismo grupo.
@@ -533,14 +533,14 @@
     </ol>
     <p>
       <strong>Experiencia de Iglesia:</strong> A lo largo nuestra vida en el
-      grupo, vamos teniendo distintas vivencias de fe que deﬁnen una eperiencia
+      grupo, vamos teniendo distintas vivencias de fe que definen una eperiencia
       propia de Iglesia. La Iglesia no es una "cosa" o "algo" que se pueda
       describir, es toda una realidad que se comparte, se expresa, se vive, se
-      celebra, en deﬁnitiva es una experiencia. Animémonos a experimentarla,
+      celebra, en definitiva es una experiencia. Animémonos a experimentarla,
       sintámonos todos parte, crezcamos en ella y hagámosla crecer. Que sea para
       nosotros, y para todos, una verdadera familia donde seamos iguales, donde
       nos tratemos con fraternidad, donde abunde la libertad. No más una Iglesia
-      piramidal ni jerárquica, sino familiar y circular, como venimos aﬁrmando
+      piramidal ni jerárquica, sino familiar y circular, como venimos afirmando
     </p>
     <p>
       con alegría y cada vez más fuerza desde el Concilio Vaticano II a este
@@ -550,13 +550,13 @@
       <strong>Una casa Iglesia:</strong> La casa constituye una visión de
       construcción de la Iglesia donde se valoriza el ámbito de lo pequeño, de
       las situaciones de convivencia, las relaciones familiares, grupales,
-      vecinales, barriales, comunitarias, sin perder de vista el objetivo ﬁnal.
+      vecinales, barriales, comunitarias, sin perder de vista el objetivo final.
       No se abandona el enfrentamiento con las grandes injusticias estructurales
       para la construción del Reino de Dios, se siente que es la misma tarea,
       pero en el ámbito de lo cotidiano. No se renuncia a un proyecto de mayor
       justicia y fraternidad, sino que se lo busca con una nueva insistencia en
       lo cercano, en lo cotidiano, es "la globalización de la esperanza desde la
-      propia casa". Desconﬁamos de los grandes proyectos que quieren imponernos
+      propia casa". Desconfiamos de los grandes proyectos que quieren imponernos
       desde arriba, porque quermos cuidar la vida chiquita que podemos ver, que
       podemos palpar. Queremos abarcar mucho, pero cuidando y respetando la vida
       que va creciendo desde abajo, "porque el fuego para ca- lentar tiene que
