--- a/src/06-dialogo.html
+++ b/src/06-dialogo.html
@@ -30,7 +30,7 @@
       </li>
       <li>
         2. No se hace sólo con las palabras, sino sobre todo con el testimonio y
-        el ejemplo de la vida que se maniﬁesta en la aceptación y respeto del
+        el ejemplo de la vida que se manifiesta en la aceptación y respeto del
         otro, tanto de parte de los Jefes/as como de los Exploradores/ras entre
         sí.
       </li>
@@ -80,7 +80,7 @@
       hermanos de comuni- dad y descubrí cómo habitualmente entró en el interior
       de cada uno sin descalzarme.
     </p>
-    <p>Simplemente entró. Sin ﬁjarme en el modo entró.</p>
+    <p>Simplemente entró. Sin fijarme en el modo entró.</p>
     <p>
       Experimenté una fuerte necesidad de pedir perdón al Señor y a mis
       hermanos. Sentí que el Señor me invitaba a descalzarme y luego a caminar.
@@ -145,7 +145,7 @@
       en otro, en nuestro grupo de Rastreadores-Hogueras, en nuestra comunidad.
       Descalzarnos es tener la valentía de ponernos en el lugar del prójimo, de
       conocerlo. Este acto simbólico se concreta en el diálogo, cuando somos
-      capaces de escuchar. Es estar atento, ﬁjarse en lo que les pasa a los
+      capaces de escuchar. Es estar atento, fijarse en lo que les pasa a los
       demás. Es una manera concreta de estar Siempre Listo. Es lo primero que
       aparece al ofrcerse en servicio a los demás. Sin atender no se puede
       entender y sin entender no podemos educar. Si no estamos atentos y no
@@ -161,16 +161,16 @@
       <em
         >«Jesús partió de allí y se retiró al país de Tiro y de Sidón. Entonces
         una mujer cananea, que procedía de esa región, comenzó a gritar:
-        “¡Señor, ¡Hĳo de David, ten piedad de mí! Mi hĳa está terriblemente
+        “¡Señor, ¡Hijo de David, ten piedad de mí! Mi hija está terriblemente
         atormentada por un demonio”. Pero él no le respondió nada. Sus
         discípulos se acercaron y le pidieron: “Señor, atiéndela, porque nos
         persigue con sus gritos”. Jesús respondió: “Yo he sido enviado solamente
         a las ovejas perdidas del pueblo de Israel”. Pero la mujer fue a
-        postrarse ante él y le dĳo: “¡Señor, socórreme!”. Jesús le dĳo: “No está
-        bien tomar el pan de los hĳos, para tirárselo a los cachorros”. Ella
+        postrarse ante él y le dijo: “¡Señor, socórreme!”. Jesús le dijo: “No está
+        bien tomar el pan de los hijos, para tirárselo a los cachorros”. Ella
         respondió: “¡Y, sin embargo, Señor, los cachorros comen las migas que
-        caen de la mesa de sus dueños!”. Entonces Jesús le dĳo: “Mujer, ¡qué
-        grande es tu fe! ¡Que se cumpla tu deseo!”. Y en ese mo- mento su hĳa
+        caen de la mesa de sus dueños!”. Entonces Jesús le dijo: “Mujer, ¡qué
+        grande es tu fe! ¡Que se cumpla tu deseo!”. Y en ese mo- mento su hija
         quedó curada.»</em
       >
     </p>
@@ -183,7 +183,7 @@
     <p>
       siderados gente llena de pecados y “paganos”. Nos encontramos, en un
       principio, una dura respuesta de Jesús frente al pedido de ayuda de la
-      mujer. Pone distancia, parece desconﬁar. Sin embargo, el desenlace es
+      mujer. Pone distancia, parece desconfiar. Sin embargo, el desenlace es
       claro, tras un resumido diálogo entre estas dos supuestas pesonas
       antagónicas (y de creencias diferentes) Jesús rompe sus propios prejuicios
       y acude a servir a la mujer.
@@ -219,7 +219,7 @@
     <h3>- Orientación:</h3>
     <p>
       La actividad busca que el Rastreador/Hoguera comprenda la importancia del
-      diálogo, enten- diendo sus diﬁcultades tanto en la escucha como la
+      diálogo, enten- diendo sus dificultades tanto en la escucha como la
       expresión
     </p>
     <h3>-Actividad: Mensaje Escrito</h3>
@@ -270,7 +270,7 @@
     <p>
       <strong><em>Importancia del diálogo:</em></strong> El diálogo, la actitud
       de escucha, la expresión de lo que pasa y se siente, son necesarios para
-      lograr un clima de conﬁanza dentro del grupo. Es el lugar donde pueden
+      lograr un clima de confianza dentro del grupo. Es el lugar donde pueden
       contarse sus problemas y hasta ayudarse a solucionarnos, o simplemente
       brindar alguna palabra de aliento a quien más lo necesite.
     </p>
@@ -321,25 +321,25 @@
     <h3>La mujer samaritana (Jn 4, 7-34).</h3>
     <p>
       <em
-        >«Una mujer de Samaría fue a sacar agua, y Jesús le dĳo: “Dame de
+        >«Una mujer de Samaría fue a sacar agua, y Jesús le dijo: “Dame de
         beber”. Sus discípulos habían ido a la ciudad a comprar alimentos. La
         samaritana le respondió “:¡Cómo! ¿Tú, que eres judío, me pides de beber
         a mí, que soy samaritana?”. Los judíos, en efecto, no se trataban con
         los samaritanos. Jesús le respondió: “Si conocieras el don de Dios y
         quién es el que te dice: Dame de beber, tú misma se lo hubieras pedido,
-        y él te habría dado agua viva”. “Señor - le dĳo ella- no tienes nada
+        y él te habría dado agua viva”. “Señor - le dijo ella- no tienes nada
         para sacar el agua y el pozo es profundo. ¿De dónde scas esa agua viva?
         ¿Eres acaso más grande que nuestro padre Jacob, que nos ha dado este
-        pozo, donde él bebió, lo mismo que sus hĳos y sus animales?”. Jesús le
+        pozo, donde él bebió, lo mismo que sus hijos y sus animales?”. Jesús le
         respondió: “El que beba de esta agua tendrá nuevamente sed, pero el que
         beba del agua que yo le daré, nunca más volverá a tener sed. El agua que
         yo le daré se convertirá en él en manantial que brotará hasta la Vida
-        eterna.” “Señor- le dĳo la mujer- dame de esa agua para que no tenga más
+        eterna.” “Señor- le dijo la mujer- dame de esa agua para que no tenga más
         sed y no necesite venir hasta aquí a sacarla.” Jesús le respondió: “Ve,
         llama a tu marido y vuelve aquí.” La mujer respondió: “No tengo marido”.
         Jesús continuó: Tienes razón al decir que no tienes marido, porque has
         tenido cinco y el que ahora tienes no es tu marido; en eso has dicho la
-        verdad.La mujer le dĳo: “Señor, veo que eres un profeta. Nuestros padres
+        verdad.La mujer le dijo: “Señor, veo que eres un profeta. Nuestros padres
         adoraron en esta montña, y ustedes dicen que es en Jerusalén donde se
         debe adorar.” Jesús le respondió: “Créeme, mujer, llega la hora en que
         ni en esta montaña ni en Jerusalén</em
@@ -352,16 +352,16 @@
         la hora se acerca, y ya ha llegado, en que los verdaderos adoradores
         adorarán al Padre en espíritu y en verdad, porque esos son los
         adoradores que quiere el Padre. Dios es espíritu, y los que lo adoran
-        deben hacerlo en espíritu y en verdad”. La mujer le dĳo: “Yo sé que el
+        deben hacerlo en espíritu y en verdad”. La mujer le dijo: “Yo sé que el
         Mesías, llamado Cristo, debe venir. Cuando él venga, nos anunciará
         todo.” Jesús le respondió: “Soy yo, el que habla contigo.” En ese
         momento llegaron sus discípulos y quedaron sorprendidos al verlo hablar
         con una mujer. Sin embargo, ninguno le preguntó: “¿Qué quieres de ella?”
         o ¿Por qué hablas con ella?”.La mujer, dejando allí su cántaro, corrió a
-        la ciudad y dĳo a la gente: “Vengan a ver a un hombre que me ha dicho
+        la ciudad y dijo a la gente: “Vengan a ver a un hombre que me ha dicho
         todo lo que hice. ¿No será el Mesías?” Salieron entonces de la ciudad y
         fueron a su encuentro. Mientras tanto, los discípulos le insistían a
-        Jesús, diciendo: “Come, Maestro”. Pero él les dĳo: “Yo tengo para comer
+        Jesús, diciendo: “Come, Maestro”. Pero él les dijo: “Yo tengo para comer
         un alimento que ustedes no conocen.” Los discípulos se preguntaban entre
         sí: “¿Alguien le habrá traído de comer?”. Jesús les respondió: “Mi
         comida es hacer la voluntad de aquel que me envió y llevar a cabo su
@@ -372,15 +372,15 @@
     <h3>ACTIVIDAD N° 2:</h3>
     <h3>- Orientación:</h3>
     <p>
-      La actividad busca que el grupo identiﬁque las posibles causas de
-      incomunicación y diﬁcultad en el diálogo, haciendo una autocrítica al
+      La actividad busca que el grupo identifique las posibles causas de
+      incomunicación y dificultad en el diálogo, haciendo una autocrítica al
       funcionamiento del mismo.
     </p>
     <h3>- Actividad: Los rectángulos</h3>
     <ol>
       <li>1. Ubicarlos en un lugar cómodo donde puedan escribir.</li>
       <li>
-        2. Pedir un voluntario y darle un dibujo con rectángulos y otras ﬁguras
+        2. Pedir un voluntario y darle un dibujo con rectángulos y otras figuras
         geométricas medio superpuestas, sin que los demás lo vean.
       </li>
       <li>
@@ -425,10 +425,10 @@
       <strong><em>Causas de la incomunicación:</em></strong> La primera causa
       que suele aparecer es "El otro explicó mal". En general no se sale de este
       argumento. La segunda: "Nosotros lo interpretamos mal. Lo vimos según
-      nuestro esquema, desde nuestro punto de vista". La tercera se reﬁere al
+      nuestro esquema, desde nuestro punto de vista". La tercera se refiere al
       ambiente; concretamente son las condiciones o prohibiciones de la
       actividad, que pudieron servir de camino o de obstáculo para la
-      realización del trabajo. Ellas signiﬁcan las presiones sociales y los
+      realización del trabajo. Ellas significan las presiones sociales y los
       condicionamientos personales que inciden en nuestras acciones y en
       nuestros proyectos. Esta tercera causa no suele ser descubierta
       sencillamente por el grupo. Hay que ayudar a descubrirla.
@@ -445,7 +445,7 @@
     <h3>ACTIVIDAD N° 3: SIN PALABRAS</h3>
     <h3>- Orientación:</h3>
     <p>
-      La actividad busca que el grupo identiﬁque las otras formas de
+      La actividad busca que el grupo identifique las otras formas de
       comunicación que hacen al diálogo e identidad de todos ellos.
     </p>
     <h3>- Actividad:</h3>
@@ -453,7 +453,7 @@
       <li>
         <strong>1.</strong> Realizar algún deporte o juego pero con la condición
         que no pueden hablarse. También podés hacer un rompecabezas, donde le
-        entregás varias ﬁchas a cada integrante del grupo.
+        entregás varias fichas a cada integrante del grupo.
       </li>
     </ol>
     <ol>
@@ -479,7 +479,7 @@
         situaciones que se vieron intentando realizar la tarea.
       </li>
       <li>
-        <strong>7.</strong> Enumerar las diﬁcultades que se hayan presentado
+        <strong>7.</strong> Enumerar las dificultades que se hayan presentado
       </li>
       <li>
         <strong>8.</strong> Reconocer que es imposible lograr completamente la
@@ -504,15 +504,15 @@
       <strong><em>Otras formas de comunicación:</em></strong> Además de las
       palabras, existen muchas formas de expresase que muchas veces ni nos damos
       cuenta que usamos de tan acostumbrados que estamos. Hay muchos gestos que
-      tienen signiﬁcados que todos conocen. Hay expresiones de la cara, como
+      tienen significados que todos conocen. Hay expresiones de la cara, como
       sonrisas, miradas, etc. que dicen tanto o más que las palabras. Incluso no
-      decir nada o no hacer ningún gesto, también comunica algo. Son inﬁnitos
+      decir nada o no hacer ningún gesto, también comunica algo. Son infinitos
       los ejemplos que existen y se van creando nuevos constantemente. Algunas
       de estas formas de expresarse no son tan claras como las palabras y puedan
       intepretarse de maneras diferentes, por lo que hay que ser cuidadoso
       cuando se las utilizan para que no se cambie el mensaje que se transmite.
       En la medida que las personas se van conociendo, estos gestos y
-      expresiones son cada vez más profundos y con mayor signiﬁcado. En el grupo
+      expresiones son cada vez más profundos y con mayor significado. En el grupo
       nos vamos conociendo por ejemplo las miradas y llega un punto que con solo
       mirar a un amigo nos damos cuenta cómo está.
     </p>
@@ -564,7 +564,7 @@
     </p>
     <p>
       Entre los cristianos, ya hay una gran Verdad que todos compartimos y que
-      es más que sﬁciente para poner por encima de cualquier diferencia, con más
+      es más que sficiente para poner por encima de cualquier diferencia, con más
       razón en los grupos de una misma parroquia, capilla, colegio o incluso en
       el mismo movimiento de exploradores.
     </p>
