--- a/src/07-oracion.html
+++ b/src/07-oracion.html
@@ -54,7 +54,7 @@
     <p>Suelen creer que vida y oración van por caminos separados.</p>
     <h3>- Orientación:</h3>
     <p>
-      La ﬁnalidad de esta consigna es redescubrir Jesucristo en lo cotidiano a
+      La finalidad de esta consigna es redescubrir Jesucristo en lo cotidiano a
       través de un diálogo más ﬂuido con él en todas las actividades que
       hagamos. San Agustín decía que “cantar es rezar dos veces”, la beata Laura
       Vicuña repetía “para mí es lo mismo rezar o trabajar, rezar o jugar, rezar
@@ -92,17 +92,17 @@
     <p>
       Dios, Uno y Trino, desde el principio es “comunidad”. Por eso Jesús
       recomienda con rezar en comunidad para sentir de lleno su presencia. Cada
-      vez que rezamos nos renovamos, renvamos nuestra conﬁanza en Dios y
+      vez que rezamos nos renovamos, renvamos nuestra confianza en Dios y
       renovamos nuestras energías para seguir creyendo que tenemos un Padre
       bueno que nos acompaña siempre y conoce las gracias que necesitamos para
-      seguir adelante. El don de la fe se maniﬁesta durante la oración cuando
-      “pedimos cosas a Dios con una conﬁanza tan grande que sentimos que las
+      seguir adelante. El don de la fe se manifiesta durante la oración cuando
+      “pedimos cosas a Dios con una confianza tan grande que sentimos que las
       tenemos”.
     </p>
     <h2>ENTENDIÉNDOLOS</h2>
     <p>
       La oración llega a parecerles algo de carácter aburrido, mágico,
-      superﬁcial, hecho por covención o costumbre, normalmente intrascendente,
+      superficial, hecho por covención o costumbre, normalmente intrascendente,
       sin llegar a descubrir en ella un modo de comunicación y unión profunda
       con Dios y sus hermanos simultáneamente. La Misa puede resultarles tediosa
       cuando no logran vivirla como una celebración en la que ellos también son
@@ -175,7 +175,7 @@
     <p>
       Para algunos, la oración lleva a aislarse de la vida, de lo cotidiano, de
       la historia; a sumergirse en la nada, en el vacío; a huir de sí mismo.
-      Otros ven en ella su inutilidad y aﬁrman que es una actividad perjudicial
+      Otros ven en ella su inutilidad y afirman que es una actividad perjudicial
       razonando que frente a tantas realidades serias de la vida, para qué peder
       tiempo rezando. Otros ven en la oración el único lugar en que es posible
       encontrarse con Dios y creen que fuera de estos momentos es como si Dios
@@ -213,10 +213,10 @@
       los valores cristianos en lo que estamos haciendo en ese momento, que nos
       ayude a pensar qué haría Jesús si estuviera en ese momento allí. También
       dar gracias por algo que nos pasó o pedir por alguien que acabamos de ver.
-      Rezar con espontaneidad, con las palabras que nos salen, con conﬁanza,
+      Rezar con espontaneidad, con las palabras que nos salen, con confianza,
       como a un amigo cercano que entiende nuestros propios «códigos». Hablamos
       con un amigo que nos quiere mucho, en el cual podemos depositar toda la
-      conﬁanza sabiendo que no nos va a fallar y que podemos contarle nuestros
+      confianza sabiendo que no nos va a fallar y que podemos contarle nuestros
       problemas más difíciles. Jesús está con nosotros en cada momento y está
       "Siempre Listo" a escucharnos al igual que nuestra madre María
       Auxiliadora.
@@ -229,7 +229,7 @@
     </p>
     <p>
       las acciones de una misma jornada. El contemplativo está tan apasionado
-      por la vida que cotinuamente la uniﬁca con una mirada de síntesis, en la
+      por la vida que cotinuamente la unifica con una mirada de síntesis, en la
       que están implicados inteligencia y corazón, voluntad y sentimiento, para
       aferrar su sentido último.
     </p>
@@ -240,7 +240,7 @@
       contemplativo en lo cotidiano, mientras come, estudia, o hace cualquier
       cosa, es consciente, aunque en aquel instante no lo piense, de que está en
       manos del Señor de la vida. Esto genera en él alegría, paz, optimismo,
-      conﬁanza.
+      confianza.
     </p>
     <p>
       Contemplar no es hacer un intervalo en la acción, sino añadirle una nueva
@@ -262,7 +262,7 @@
     </p>
     <p>
       Ser “contemplativos de la vida cotidiana” es descubrir la obra de Dios en
-      las cosas que nos suceden día a día y conﬁar en su Divina Providencia.
+      las cosas que nos suceden día a día y confiar en su Divina Providencia.
     </p>
     <p>
       La mística exploradoril de la vida al aire libre y en contacto con la
@@ -305,7 +305,7 @@
       cosas. Y no sola- mente agradecer las cosas buenas.
     </p>
     <p>
-      Insistir, creer ﬁrmemente que seremos escuchados y pedir con insistencia
+      Insistir, creer firmemente que seremos escuchados y pedir con insistencia
       es pedir con verddera fe. Para pedir con fe se requiere una honda
       humildad; debemos reconocer que “necesita- mos la fuerza de Dios”. "Pidan
       y se les dará, golpeen y se les abrirá."
@@ -323,14 +323,14 @@
     </p>
     <p>
       La presencia liberadora de Dios da un tono especial a la Eucaristía y a la
-      Reconciliación, que respiran un clima de ﬁesta, de alegría.
+      Reconciliación, que respiran un clima de fiesta, de alegría.
     </p>
     <p>
       Preferimos hablar más del bien que del mal; más de la salvación de Dios
       que de la impotencia del hombre, más de la alegría que de la tristeza, más
       de la felicidad que del dolor. Aunque no olvidamos el fatigoso esfuerzo
       por construir el mundo nuevo, no paramos de hablar del regalo de la
-      salvación, no paramos de anunciar la ﬁesta y la celebración.
+      salvación, no paramos de anunciar la fiesta y la celebración.
     </p>
     <p>
       La oración comunitaria se vive como celebración cuando nos unimos entre
@@ -367,13 +367,13 @@
       un salmo. Otros parten de un hecho de la vida cotidiana, de un diálogo con
       otra persona o de una experiencia personal. Otros toman pie de la música o
       letra de un cantautor o de un poeta moderno, o también de un libro de
-      ciencias naturales, historia o ﬁlosofía. Cada uno está llamado a descubrir
+      ciencias naturales, historia o filosofía. Cada uno está llamado a descubrir
       su meditación. No importa que se arranque de un lado o del otro, con tal
       que en todo caso vida y palabra de Dios se encuentren.
     </p>
     <p>
       En los momentos de oración compartida cada uno puede ir expresando junto
-      con sus compñeros lo que quieren decirle a Dios con conﬁanza, sin
+      con sus compñeros lo que quieren decirle a Dios con confianza, sin
       vergüenza. Es bueno escuchar lo que los otros piden y agradecen
       asumiéndolo como oración propia. Así como el grupo comparte otros momentos
       de actividad, de alegría, de juego, también comparte sus inquietudes y
@@ -392,8 +392,8 @@
       «Nuestro», agradece«mos», pedi«- mos», etc.)
     </p>
     <p>
-      La oración ayuda a conocerse más, a unir al grupo. Nos reconocemos hĳos de
-      Dios y hermanos entre nosotros. Como Iglesia, somos Pueblo de hĳos, Pueblo
+      La oración ayuda a conocerse más, a unir al grupo. Nos reconocemos hijos de
+      Dios y hermanos entre nosotros. Como Iglesia, somos Pueblo de hijos, Pueblo
       de hermanos.
     </p>
     <p>
@@ -410,7 +410,7 @@
       escuchados y valoramos la coincidencia de plantear deseos comunes.
     </p>
     <p>
-      Insistir, creer ﬁrmemente que seremos escuchados y pedir con insistencia
+      Insistir, creer firmemente que seremos escuchados y pedir con insistencia
       es pedir con vedadera fe. Distinguir entre la respuesta de un gobierno u
       otro grupo de personas y la de Dios, destacando "Cuánto más hará por
       ustedes el Padre».
@@ -432,7 +432,7 @@
       Cada etapa tiene sus experiencia religiosas en particular con sus símbolos
       propios que se van descubriendo y viviendo en la patrulla. El pasar de una
       etapa a otra, se convierte en una verdadera celebración comunitaria donde
-      entre otras cosas se presentan los emblemas de la etapa y su signiﬁcado.
+      entre otras cosas se presentan los emblemas de la etapa y su significado.
     </p>
     <p>
       Agradecer, pedir, ofrecer, meditar, contemplar y proclamar con alegría la
@@ -507,13 +507,13 @@
     </p>
     <p>
       <em
-        >dĳo: “Señor, enséñanos a orar, así como Juan enseñó a sus discípulos”.
-        Él les dĳo entonces:</em
+        >dijo: “Señor, enséñanos a orar, así como Juan enseñó a sus discípulos”.
+        Él les dijo entonces:</em
       >
     </p>
     <p>
       <em
-        >“Cuando oren, digan: Padre, santiﬁcado sea tu Nombre, que venga tu
+        >“Cuando oren, digan: Padre, santificado sea tu Nombre, que venga tu
         Reino, danos cada día</em
       >
     </p>
@@ -549,7 +549,7 @@
     </p>
     <p>
       <em
-        >la puerta está cerrada, y mis hĳos y yo estamos acostados. No puedo
+        >la puerta está cerrada, y mis hijos y yo estamos acostados. No puedo
         levantarme para dárte-</em
       >
     </p>
@@ -574,7 +574,7 @@
     <p>
       <em
         >busca, encuentra; y al que llama, se le abre. ¿Hay entre ustedes algún
-        padre que da a su hĳo</em
+        padre que da a su hijo</em
       >
     </p>
     <p>
@@ -591,7 +591,7 @@
     </p>
     <p>
       <em
-        >buenas a sus hĳos, cuánto más el Padre del cielo dará el Espíritu Santo
+        >buenas a sus hijos, cuánto más el Padre del cielo dará el Espíritu Santo
         a aquellos que se lo</em
       >
     </p>
@@ -601,8 +601,8 @@
     </p>
     <p>
       <em
-        >«Y reﬁriéndose a algunos que se tenían por justos y despreciaban a los
-        demás, dĳo también</em
+        >«Y refiriéndose a algunos que se tenían por justos y despreciaban a los
+        demás, dijo también</em
       >
     </p>
     <p>
@@ -620,7 +620,7 @@
         manteniéndose a distancia, no se animaba siquiera a levantar los ojos al
         cielo, sino que se golpeaba el pecho, diciendo: ` ¡Dios mío, ten piedad
         de mí, que soy un pecador!’. Les asguro que este último volvió a su casa
-        justiﬁcado, pero no el primero. Porque todo el que se ensalza será
+        justificado, pero no el primero. Porque todo el que se ensalza será
         humillado y el que se humilla será ensalzado”»</em
       >
     </p>
@@ -642,12 +642,12 @@
     <p>
       <em
         >a gritarle: “¡Jesús, Maestro, ten compasión de nosotros!”. Al verlos,
-        Jesús les dĳo: “Vayan</em
+        Jesús les dijo: “Vayan</em
       >
     </p>
     <p>
       <em
-        >a presentarse a los sacerdotes”. Y en el camino quedaron puriﬁcados.
+        >a presentarse a los sacerdotes”. Y en el camino quedaron purificados.
         Uno de ellos, al com-</em
       >
     </p>
@@ -660,12 +660,12 @@
     <p>
       <em
         >de Jesús con el rostro en tierra, dándole gracias. Era un samaritano.
-        Jesús le dĳo entonces:</em
+        Jesús le dijo entonces:</em
       >
     </p>
     <p>
       <em
-        >“¿Cómo, no quedaron puriﬁcados los diez? Los otros nueve, ¿dónde están?
+        >“¿Cómo, no quedaron purificados los diez? Los otros nueve, ¿dónde están?
         ¿Ninguno volvió a</em
       >
     </p>
@@ -765,7 +765,7 @@
       ¿Quiénes se acordaron de hacer al menos una señal de la cruz al acostarse?
     </p>
     <p>
-      ¿Cuántas veces dĳimos la palabra "gracias" (en la semana o en el mismo día
+      ¿Cuántas veces dijimos la palabra "gracias" (en la semana o en el mismo día
       del encuentro)
     </p>
     <p>
@@ -809,7 +809,7 @@
     </p>
     <p>
       El pobre gritó y lo oyó el Señor, lo libró de todas sus angustias. Amen al
-      Señor todos sus ﬁeles, pues nada le falta al que lo ama.
+      Señor todos sus fieles, pues nada le falta al que lo ama.
     </p>
     <p>
       Guarda tu lengua del mal y tus labios de la mentira, evita el mal y
