--- a/src/09-perdon.html
+++ b/src/09-perdon.html
@@ -60,7 +60,7 @@
       La Cuaresma o el Adviento pueden ser dos buenos momentos del año para que
       los rastredores-hogueras y sus animadores hagan un autoexamen de su
       corazón, limen asperezas con otros exploradores y puedan celebrar el
-      sacramento de la Reconciliación camino a la Pascua, la Navidad o la ﬁesta
+      sacramento de la Reconciliación camino a la Pascua, la Navidad o la fiesta
       de Corpus Christi.
     </p>
     <p>
@@ -79,8 +79,8 @@
       perdonado es hermosa, nos fortalece como familia, por eso creemos que el
       perdón es un reglo de Dios que entre hermanos debemos multiplicarlo. La
       virtud fundamental para alcanzar el perdón será la humildad, que nos
-      permite admitir los errores propios y ser lo suﬁcientemente conscientes de
-      que no somos jueces sino hermanos entre nosotros e hĳos de un mismo Dios
+      permite admitir los errores propios y ser lo suficientemente conscientes de
+      que no somos jueces sino hermanos entre nosotros e hijos de un mismo Dios
       que nos ama, no abraza y nos perdona. La alegría de sentirnos perdonados y
       perdonar siem- pre nos traen la paz.
     </p>
@@ -140,7 +140,7 @@
       rconciliadas en el encuentro con Cristo a través de los hermanos y de los
       sacramentos. Aunque parezca una locura, no tenemos que dejar de
       recordarnos a nosotros mismos, ni dejar de reptirles a nuestros chicos que
-      ¡Dios nos ama inﬁnitamente! Dios está perdidamente enamorado de nosotros,
+      ¡Dios nos ama infinitamente! Dios está perdidamente enamorado de nosotros,
       al punto tal que Jesús se entregó por nosotros y con su entrega ya nos
       salvó y nos perdonó todo. No es Dios quien se cansa de perdonar, ¡somos
       nosotros los que nos cansamos de arrepentirnos y volver a empezar! Él
@@ -207,13 +207,13 @@
     </p>
     <h3>- Actividad:</h3>
     <p>Poner en el medio una imagen de Jesús, que todos la vean.</p>
-    <p>Comenzar leyendo el Evangelio del "Hĳo pródigo" (Lc 15, 11-17)</p>
+    <p>Comenzar leyendo el Evangelio del "Hijo pródigo" (Lc 15, 11-17)</p>
     <p>Hacer que los chicos se den vuelta y atarles las manos con un piolín.</p>
     <p>
       Ayudar a la reﬂexión con un ratito de silencio donde cada uno se
       arrepiente, y si alguien lo desea puede compartir algo a todos.
     </p>
-    <p>Continuar leyendo el Evangelio del "Hĳo pródigo" (Lc. 15, 18-21)</p>
+    <p>Continuar leyendo el Evangelio del "Hijo pródigo" (Lc. 15, 18-21)</p>
     <p>Allí unos a otros se van desatando las manos.</p>
     <p>
       Invitar a que se den vuelta, vuelven a mirar la imagen de Jesús y hagan
@@ -235,7 +235,7 @@
       saber a sus compañeras la razón de por qué se sentía alegre como pájaro en
       primavera.
     </p>
-    <p>¿Saben? - dĳo: He hecho mi confesión general.</p>
+    <p>¿Saben? - dijo: He hecho mi confesión general.</p>
     <p>¿Por qué no la hacen también ustedes?</p>
     <p>
       María desvió la conversación hacia otros temas. Este le quemaba y se
@@ -249,8 +249,8 @@
         para otros es indiferente y para otros es perjudicial"
       </li>
       <li>
-        - Muy bien - dĳo entonces María - para mi es perjudicial, por tanto, no
-        la haré. Cuando decide insinuárselo a Don Pestarino, él le dĳo:
+        - Muy bien - dijo entonces María - para mi es perjudicial, por tanto, no
+        la haré. Cuando decide insinuárselo a Don Pestarino, él le dijo:
       </li>
       <li>
         - Exactamente: para algunos es perjudicial. Pero para ti es necesaria.
@@ -273,7 +273,7 @@
     <p>¿Y ahora qué?</p>
     <p>¿Qué nos produce el perdón?</p>
     <p>
-      Leer la última parte del Evangelio del "Hĳo pródigo" (Lc. 15, 22 - 24; 32)
+      Leer la última parte del Evangelio del "Hijo pródigo" (Lc. 15, 22 - 24; 32)
     </p>
     <p>Ver contenidos: El perdón trae alegría</p>
     <p>
@@ -283,11 +283,11 @@
     <h3>- Reﬂexión:</h3>
     <p>
       El perdón sacramental ofrecido por Cristo es algo muy valioso, es Dios
-      mismo quien viene hacia nosotros, nos propone su perdón y lo conﬁrma,
+      mismo quien viene hacia nosotros, nos propone su perdón y lo confirma,
       ayudándonos a vivir y reconstruir las relaciones que nuestro pecado rompe,
       no es posible reconciliarnos con Dios sin hacerlo con nuestros hermanos, y
       necesitamos la fuerza de Dios para que germine en nuestro corazón el
-      perdón que sana y aﬁanza las relaciones con el prójimo,
+      perdón que sana y afianza las relaciones con el prójimo,
     </p>
     <p>
       Hay algunos que dicen: "Confesar los pecados, ¿para qué? Se vuelve a pecar
@@ -322,7 +322,7 @@
       prójimo.
     </p>
     <p>
-      El perdón es motivo de alegría, de ﬁesta, nos devuelve la paz. Dios nos da
+      El perdón es motivo de alegría, de fiesta, nos devuelve la paz. Dios nos da
       su abrazo de Pa- dre. Nuestras manos sirven para reconciliarnos y
       abrazarnos nuevamente.
     </p>
@@ -438,7 +438,7 @@
         >«Por eso, el Reino de los Cielos se parece a un rey que quiso arreglar
         las cuentas con sus servidores.Comenzada la tarea, le presentaron a uno
         que debía diez mil talentos. Como no podía pagar, el rey mandó que fuera
-        vendido junto con su mujer, sus hĳos y todo lo que tenía, para saldar la
+        vendido junto con su mujer, sus hijos y todo lo que tenía, para saldar la
         deuda.</em
       >
     </p>
@@ -447,12 +447,12 @@
         >El servidor se arrojó a sus pies, diciéndole: "Señor, dame un plazo y
         te pagaré todo". El rey se compadeció, lo dejó ir y, además, le perdonó
         la deuda. Al salir, este servidor encontró a uno de sus compañeros que
-        le debía cien denarios y, tomádolo del cuello hasta ahogarlo, le dĳo:
+        le debía cien denarios y, tomádolo del cuello hasta ahogarlo, le dijo:
         "Págame lo que me debes". El otro se arrojó a sus pies y le suplicó:
         "Dame un plazo y te pagaré la deuda". Pero él no quiso, sino que lo hizo
         poner en la cárcel hasta que pagara lo que debía. Los demás servidores,
         al ver lo que había sucedido, se apenaron mucho y fueron a contarlo a su
-        señor. Este lo mandó llamar y le dĳo: "¡Miserable! Me suplicaste, y te
+        señor. Este lo mandó llamar y le dijo: "¡Miserable! Me suplicaste, y te
         perdoné la deuda. ¿No debías también tú tener compasión de tu compañero,
         como yo me compadecí de ti?". E indignado, el rey lo entregó en manos de
         los verdugos hasta que pagara todo lo que debía. Lo mismo hará también
@@ -460,33 +460,33 @@
         hermanos».</em
       >
     </p>
-    <h3>El hĳo pródigo (Lc, 15, 11-32)</h3>
+    <h3>El hijo pródigo (Lc, 15, 11-32)</h3>
     <p>
       <em
-        >«Jesús dĳo también: “Un hombre tenía dos hĳos. El menor de ellos dĳo a
+        >«Jesús dijo también: “Un hombre tenía dos hijos. El menor de ellos dijo a
         su padre: `Padre, dame la parte de herencia que me corresponde´. Y el
-        padre les repartió sus bienes. Pocos días después, el hĳo menor recogió
+        padre les repartió sus bienes. Pocos días después, el hijo menor recogió
         todo lo que tenía y se fue a un país lejano, donde malgastó sus bienes
         en una vida licenciosa. Ya había gastado todo, cuando sobrevino mcha
         miseria en aquel país, y comenzó a sufrir privaciones. Entonces se puso
         al servicio de uno de los habitantes de esa región, que lo envió a su
         campo para cuidar cerdos. El hubiera deseado calmar su hambre con las
         bellotas que comían los cerdos, pero nadie se las daba. Entonces
-        recapacitó y dĳo: `¡Cuántos jornaleros de mi padre tienen pan en
+        recapacitó y dijo: `¡Cuántos jornaleros de mi padre tienen pan en
         abundancia, y yo estoy aquí muriéndome de hambre!´. Ahora mismo iré a la
         casa de mi padre y le diré: `Padre, pequé contra el Cielo y contra ti;
-        ya no merezco ser llamado hĳo tuyo, trátame como a uno de tus
+        ya no merezco ser llamado hijo tuyo, trátame como a uno de tus
         jornaleros´. Entonces partió y volvió a la casa de su padre. Cuando
         todavía estaba lejos, su padre lo vio y se conmovió profundamente,
-        corrió a su encuentro, lo abrazó y lo besó. El joven le dĳo: `Padre,
-        pequé contra el Cielo y contra ti; no merezco ser llamado hĳo tuyo´.
-        Pero el padre dĳo a sus servidores: `Traigan enseguida la mejor ropa y
+        corrió a su encuentro, lo abrazó y lo besó. El joven le dijo: `Padre,
+        pequé contra el Cielo y contra ti; no merezco ser llamado hijo tuyo´.
+        Pero el padre dijo a sus servidores: `Traigan enseguida la mejor ropa y
         vístanlo, pónganle un anillo en el dedo y sandalias en los pies. Traigan
-        el ternero engordado y mátenlo. Comamos y festejemos, porque mi hĳo
+        el ternero engordado y mátenlo. Comamos y festejemos, porque mi hijo
         estaba muerto y ha vuelto a la vida, estaba perdido y fue encontrado´. Y
-        comenzó la ﬁesta. El hĳo mayor estaba en el campo. Al volver, ya cerca
+        comenzó la fiesta. El hijo mayor estaba en el campo. Al volver, ya cerca
         de la casa, oyó la música y los coros que acompañaban la danza. Y
-        llamando a uno de los sirvientes, le preguntó que signiﬁcaba eso. Él le
+        llamando a uno de los sirvientes, le preguntó que significaba eso. Él le
         respondió: `Tu hermano ha regresado, y tu padre hizo matar el ternero y
         engordado, porque lo ha recobrado sano y salvo´. El se enojó y no quiso
         entrar. Su padre salió para rogarle que entrara, pero él le
@@ -496,11 +496,11 @@
     <p>
       <em
         >`Hace tantos años que te sirvo sin haber desobedecido jamás ni una sola
-        de tus órdenes, y nunca me diste un cabrito para hacer una ﬁesta con mis
-        amigos. ¡Y ahora que ese hĳo tuyo ha vuelto, después de haber gastado
+        de tus órdenes, y nunca me diste un cabrito para hacer una fiesta con mis
+        amigos. ¡Y ahora que ese hijo tuyo ha vuelto, después de haber gastado
         tus bienes con mujeres, haces matar para él el ternero engordado! ´.
-        Pero el padre le dĳo: `Hĳo mío, tú estás siempre conmigo, y todo lo mío
-        es tuyo. Es justo que haya ﬁesta y alegría, porque tu hermano estaba
+        Pero el padre le dijo: `Hijo mío, tú estás siempre conmigo, y todo lo mío
+        es tuyo. Es justo que haya fiesta y alegría, porque tu hermano estaba
         muerto y ha vuelto a la vida, estaba perdido y ha sido encontrado´».</em
       >
     </p>
@@ -529,7 +529,7 @@
       regalar, etc.)
     </p>
     <p>
-      A medida que se van colocando relacionar con lo que signiﬁcan o permiten:
+      A medida que se van colocando relacionar con lo que significan o permiten:
       Amistad, com- partir, diálogo, responsabilidad, alegría.
     </p>
     <p>
@@ -583,7 +583,7 @@
     <p>
       Sacar los elementos que se habían puesto al principio y utilizarlos: Hacer
       merienda, juegos, cantos, baile, etc. por sobre todo destacando el
-      espíritu de ﬁesta y alegría que produce el reencuentro con Dios en
+      espíritu de fiesta y alegría que produce el reencuentro con Dios en
       nuestros hermanos.
     </p>
     <ul>
@@ -615,13 +615,13 @@
     <p>
       Durante el desarrollo de la construcción estar atento a cómo se las
       ingenian para ponerse de acuerdo con el otro lado, el diálogo o la
-      competencia que surja entre ambos, la conﬁanza recíproca, etc.
+      competencia que surja entre ambos, la confianza recíproca, etc.
     </p>
     <p>Invitar a que todos pasen por el puente de un lado a otro.</p>
     <p>
       Ya estando todos en alguno de los dos lados, comentar sobre el puente:
     </p>
-    <p>¿Qué diﬁcultades encontraron?</p>
+    <p>¿Qué dificultades encontraron?</p>
     <p>¿Cómo fue la relación entre las dos partes?</p>
     <p>¿Se animaron a cruzar?</p>
     <p>Relacionar con el grupo y las relaciones:</p>
@@ -639,7 +639,7 @@
     <p>¿Sos capaz de acercarte a quien te hizo daño?</p>
     <p>¿Aceptás el arrepentimiento del otro?</p>
     <p>
-      Según el grado de conﬁanza del grupo proponer comentar algunas respuestas
+      Según el grado de confianza del grupo proponer comentar algunas respuestas
       los que lo deseen, como compromiso, sugerir que cada uno trate de mejorar
       o reestablecer su amistad con alguien en particular.
     </p>
@@ -672,7 +672,7 @@
       preguntando: ¿Tenés en tu corazón rencores o venganzas? ¿Con quién te
       gustaría reconciliarte? ¿Sos capaz de acercarte a esperar a quien te hizo
       daño? ¿Aceptás el arrepentimiento del otro? Ayudar a crear un ambiente de
-      conﬁanza y sinceridad, Dar un momento libre en el que cada uno pueda
+      confianza y sinceridad, Dar un momento libre en el que cada uno pueda
       dialogar personalmente con otro compañero, invitando a que puedan
       dialogar, mejorar las relaciones y perdonarse mutuamente en los csos que
       sea necesario, Ir manejando el tiempo y los movimientos, sin forzar
@@ -710,8 +710,8 @@
       estás perdido.
     </p>
     <p>
-      Porque no vuelves, hĳo mío, si está en mis brazos tu lugar, si tu conoces
-      el camino, por qué, por qué esperar. Por qué no vuelves, hĳo mío, te abro
+      Porque no vuelves, hijo mío, si está en mis brazos tu lugar, si tu conoces
+      el camino, por qué, por qué esperar. Por qué no vuelves, hijo mío, te abro
       la fuente del perdón, que resplandezca nuestra alianza, será un lazo de
       amor.
     </p>
