--- a/src/11-verdad.html
+++ b/src/11-verdad.html
@@ -16,7 +16,7 @@
     <p>
       <strong>Inc 79</strong> E
       <em
-        >l/La Explorador/a es leal, veraz y digno de conﬁanza no realiza nada a
+        >l/La Explorador/a es leal, veraz y digno de confianza no realiza nada a
         medias.</em
       >
     </p>
@@ -37,13 +37,13 @@
     <h3>- Orientación:</h3>
     <p>
       La verdad hay que anunciarla siempre, tanto en palabras como en actitudes.
-      No puede haber lealtad ni ﬁdelidad si hay mentira. Para que haya conﬁanza
+      No puede haber lealtad ni fidelidad si hay mentira. Para que haya confianza
       se necesita que haya sinceridad. No se es sincero "a medias". Decir una
       parte de la verdad y ocultar las otras es también una forma de mentir. El
       explorador es veraz, la veracidad no es simplemente decir verdades sino
       también tener una determinada conducta que se mantiene en diferentes
       situaciones y ambientes, es decir, "ser coherente". También hay que tener
-      en cuenta que no existe una verdad deﬁnitiva, mucho menos “mi verdad”. La
+      en cuenta que no existe una verdad definitiva, mucho menos “mi verdad”. La
       verdad no es única ni propia, necesitamos del otro para profundizarla e ir
       acercándonos más a ella.
     </p>
@@ -57,7 +57,7 @@
         pide que no nos cerrmos al diálogo y al encuentro, sino que captemos
         todo lo que de válido y de positivo nos es ofrecido también por quien
         piensa de manera distinta de nosotros o se coloca en posturas
-        diferentes. Nos pide que no ﬁjemos la mirada en lo que divide, sino
+        diferentes. Nos pide que no fijemos la mirada en lo que divide, sino
         sobre todo en lo que nos une, buscando conocer mejor y amar a Jesús y
         compartir la riqueza de su amor. Y esto coporta concretamente la
         adhesión a la verdad (…) de considerarse uno un don para el otro y hacer
@@ -76,8 +76,8 @@
     <h3>- La verdad los hará libres (Jn 8, 31-32)</h3>
     <p>
       <em
-        >«Jesús dĳo a aquellos judíos que habían creído en él: “Si ustedes
-        permanecen ﬁeles a mi pala- bra, serán verdaderamente mis discípulos:
+        >«Jesús dijo a aquellos judíos que habían creído en él: “Si ustedes
+        permanecen fieles a mi pala- bra, serán verdaderamente mis discípulos:
         conocerán la verdad y la verdad los hará libres”.»</em
       >
     </p>
@@ -93,7 +93,7 @@
     <p>
       Les cuesta mucho decir la verdad, sobre todo si no les son favorables las
       consecuencias, a la vez que reclaman sinceridad y verdad en sus vínculos.
-      Necesitan momentos de respeto, conﬁanza, fraternidad para poder conversar
+      Necesitan momentos de respeto, confianza, fraternidad para poder conversar
       sobre la vida del grupo.
     </p>
     <h2>OBJETIVOS CUMPLIDOS:</h2>
@@ -140,7 +140,7 @@
     </p>
     <ol>
       <li>
-        <strong>1.</strong> Reunirse el grupo en círculo, a ﬁn de que todos
+        <strong>1.</strong> Reunirse el grupo en círculo, a fin de que todos
         pueden ver y ser vistos por sus compañeros al momento de hablar.
       </li>
       <li>
@@ -210,7 +210,7 @@
       <li>
         <strong>15.</strong> Hacer ver cómo la sinceridad fue necesaria para la
         actividad realizada y lo malo que sería para el grupo si todo lo que se
-        dĳo fuera mentira. .
+        dijo fuera mentira. .
       </li>
       <li>
         <strong>16.</strong> Leer el Evangelio de "La corrección fraterna" (Mt.
@@ -232,7 +232,7 @@
       cada uno de los compañeros.
     </p>
     <p>
-      Mi verdad no es completa ni deﬁnitiva. Nos acercamos a una verdad más
+      Mi verdad no es completa ni definitiva. Nos acercamos a una verdad más
       profunda si copartimos nuestros puntos de vista. La verdad, no es propia
       ni única de cada uno, sino que necesitamos de los otros para poder
       obtenerla. Cada uno tiene su opinión, pero la verdad es una sola y hacia
@@ -268,7 +268,7 @@
       alterarla ni interferirla con otras cosas.
     </p>
     <p>
-      Los hombres no podrían vivir juntos si no tuvieran conﬁanza recíproca, es
+      Los hombres no podrían vivir juntos si no tuvieran confianza recíproca, es
       decir, si no se mnifestasen la verdad. Esta es un elemento fundamental en
       la convivencia de las personas y en el crecimiento de los grupos.
     </p>
@@ -278,7 +278,7 @@
       debe ser guardado: implica la honradez y la discreción; evita la
       duplicidad, la simulación y la hipocresía. En cada momento debemos elgir
       entre la verdad o la mentira (disfrazando o acomodando la verdad). No
-      siempre es beneﬁcio- sa para uno (por lo menos en lo inmediato) pero
+      siempre es beneficio- sa para uno (por lo menos en lo inmediato) pero
       igualmente debe ser responsablemente dicha.
     </p>
     <h3>Palabra de Dios: La corrección fraterna" (Mt. 18, 15-17)</h3>
@@ -310,7 +310,7 @@
       </li>
       <li>
         <strong>3.</strong> Todos harán lo mismo hasta el último que corre hasta
-        un aﬁche y escribe el mensaje recibido.
+        un afiche y escribe el mensaje recibido.
       </li>
       <li>
         <strong>4.</strong> Otra alternativa es hacer una ronda y que cada uno
@@ -319,13 +319,13 @@
         mensaje que escucho en voz alta.
       </li>
       <li>
-        <strong>5.</strong> Comparar si el mensaje ﬁnal coincide con el mensaje
+        <strong>5.</strong> Comparar si el mensaje final coincide con el mensaje
         emitido al principio, es decir si el mensaje es el "verdadero" o fue
         distorsionado a lo largo del juego.
       </li>
       <li>
         <strong>6.</strong> Analizar situaciones de la vida real donde se cambie
-        la verdad, se la oculte, o se la acomo- de para beneﬁcio propio.
+        la verdad, se la oculte, o se la acomo- de para beneficio propio.
       </li>
       <li>
         <strong>7.</strong> Buscar ejemplos donde los chicos sean los
@@ -366,17 +366,17 @@
       y la mentira.
     </p>
     <p>
-      La verdad es un compromiso importante al que hay que serle ﬁel, como
+      La verdad es un compromiso importante al que hay que serle fiel, como
       decimos en la orción del explorador. Las promesas o compromisos asumidos
       sólo tienen sentido si son autén- ticos, verdaderos y sé los mantiene con
-      ﬁdelidad.
+      fidelidad.
     </p>
     <p>
       Se puede cambiar la verdad con la intención de hacerlo, sabiendo que en
       realidad las cosas no son como se dicen: eso es mentir. En cambio, se
       pueden decir cosas que en realidad no son así pero sin saberlo: eso es
       equivocarse. Todo el mundo tiene derecho a equivocarse y no hay por qué
-      saberlo todo, pero una actitud sincera es decir "no sé" antes de aﬁrmar
+      saberlo todo, pero una actitud sincera es decir "no sé" antes de afirmar
       algo de lo que no se está seguro.
     </p>
     <p>
@@ -402,14 +402,14 @@
         en la cima de una montaña.Y no se enciende una lámpara para meterla
         debajo de un cajón, sino que se la pone sobre el candelero para que
         ilumine a todos los que están en la casa. Así debe brillar ante los ojos
-        de los hombres la luz que hay en ustedes, a ﬁn de que ellos vean sus
-        buenas obras y gloriﬁquen al Padre que está en el cielo.»</em
+        de los hombres la luz que hay en ustedes, a fin de que ellos vean sus
+        buenas obras y glorifiquen al Padre que está en el cielo.»</em
       >
     </p>
     <h3>ACTIVIDAD N° 3: REPRESENTACIONES A MEDIAS. JAIME DE NEVARES</h3>
     <h3>- Orientación:</h3>
     <p>
-      Esta actividad busca introducir la ﬁgura de Jaime de Nevares, como ejemplo
+      Esta actividad busca introducir la figura de Jaime de Nevares, como ejemplo
       cercano a testi- monio de una verdad comprometida y que denuncia la
       injusticia.
     </p>
@@ -507,7 +507,7 @@
     </p>
     <p>
       En Neuquén pasó a ser "Don Jaime". Fue creciendo esa relación tan fuerte
-      con su gente. Epezó a recorrer las extensas superﬁcies patagónicas de su
+      con su gente. Epezó a recorrer las extensas superficies patagónicas de su
       diócesis, fue recorriendo ciudades pueblos, parajes y casas, se fue
       metiendo en las cosas que pasaban, en la vida de su gente Y la seguridad
       que la verdad nos hace libres" lo hizo hablar y actuar. y comenzaron a
@@ -521,7 +521,7 @@
     </p>
     <p>
       Años después, junto con los sacerdotes de la diócesis deciden no asistir
-      como autoridades a los actos oﬁciales para no avalar ni ser cómplices
+      como autoridades a los actos oficiales para no avalar ni ser cómplices
       silenciosos de las injusticias que realizaba el gobierno militar de
       entonces.
     </p>
@@ -549,7 +549,7 @@
       En la guerra de Malvinas, con otros sacerdotes, emitió un comunicado
       repudiando enérgcamente la guerra, la manipulación que se hacía del
       sentimiento patriótico, el engaño a la población y proponiendo soluciones
-      pacíﬁcas.
+      pacíficas.
     </p>
     <p>
       Su última participación pública fue en la Convención Constituyente en et
@@ -566,7 +566,7 @@
     <p>
       Hasta los últimos momentos de su vida estuvo luchando por la defensa de la
       dignidad, de las personas, de la vida. En todo momento fue un anunciador
-      creíble y ﬁel del evangelio de Jesús, siempre fue un hombre muy
+      creíble y fiel del evangelio de Jesús, siempre fue un hombre muy
       comprometido. Un 19 de mayo de 1995 encontraron su cuerpo muerto. Pero Don
       Jaime no murió, continúa vivo en nuestro corazón, en nuestras palabras y
       en nuestros actos.
@@ -644,7 +644,7 @@
     <p>
       El camino de la verdad es una huellita dolorosa es la cuesta angosta, no
       es autopista No tolera duplicidades ni cobardías, llevar la cruz se hace
-      necesario como dĳo la hermana Martha, la verdad tiene su Calvario
+      necesario como dijo la hermana Martha, la verdad tiene su Calvario
     </p>
     <p>
       El camino de la verdad es desconcertante una santa inseguridad, búsqueda
@@ -660,7 +660,7 @@
     <h3>- Se reﬂexiona:</h3>
     <ol>
       <li>
-        1. Al ﬁnalizar cada uno puede releerla, y marcar la frase que más le
+        1. Al finalizar cada uno puede releerla, y marcar la frase que más le
         llegó
       </li>
       <li>
