--- a/src/12-fe.html
+++ b/src/12-fe.html
@@ -54,7 +54,7 @@
       exterior -que se da por naturaleza- con un crecimiento interior que los
       ayude a madurar sus propias creencias, romper con algunos tabúes y miedos,
       para reconstruir nuevas seguridades más maduras que los ayuden a crecer
-      “desde adentro hacia afuera” y aﬁrmarse en Jesús a lo largo de sus vidas.
+      “desde adentro hacia afuera” y afirmarse en Jesús a lo largo de sus vidas.
     </p>
     <h2>TU MOMENTO</h2>
     <p>“¿Y a vos que te pasa con este tema?”</p>
@@ -74,15 +74,15 @@
       <li>2) Compartir con sus pares animadores estos recuerdos.</li>
       <li>
         3) Realizar un autoexamen y detección de los propios conﬂictos de fe en
-        la actualidad. ¿Qué signiﬁca para vos la fe y en qué cosas se reﬂeja en
-        tu vida? ¿Qué signiﬁca hoy, para vos, ser como explorador una persona de
+        la actualidad. ¿Qué significa para vos la fe y en qué cosas se reﬂeja en
+        tu vida? ¿Qué significa hoy, para vos, ser como explorador una persona de
         fe? ¿Qué prioridad tiene la fe en tu vida?
       </li>
     </ol>
     <h2>ALGUNAS COSAS CLARAS…</h2>
     <p>
       La fe es un don de Dios, un regalo, que crece en la medida que nosotros
-      conﬁamos más en Él y somos más coherentes entre lo que creemos y lo que
+      confiamos más en Él y somos más coherentes entre lo que creemos y lo que
       vivimos. Fe y obras van de la mano, todo el tiempo nuestras acciones
       hablan de la fe que tenemos.
     </p>
@@ -91,12 +91,12 @@
     <p>
       <em
         >«Y la Palabra se hizo carne y habitó entre nosotros. Y nosotros hemos
-        visto su gloria, la gloria que recibe del Padre como Hĳo único, lleno de
+        visto su gloria, la gloria que recibe del Padre como Hijo único, lleno de
         gracia y de verdad.» Reﬂexión: Nuestro Dios, en Jesús, se hizo humano.
         Tenemos un Dios que sale al encuentro de la historia de la humanidad y
         se queda con nosotros. Nuestra fe se basa en el encuentro con Jesús.
         Este encuentro nos cambia la vida, nos sana, nos renueva, nos alienta a
-        seguir adelate y superar diﬁcultades. ¿Dónde lo encontramos a Jesús? En
+        seguir adelate y superar dificultades. ¿Dónde lo encontramos a Jesús? En
         el prójimo, en la Eucaristía, en el abrazo de la Reconciliación, en
         nuestra vida de familia, en nuestras amistades, en el Batallón y las
         personas que nos quieren. Creemos en “Dios con nosotros”, que se entregó
@@ -123,7 +123,7 @@
       soluciones de forma mágica, para dominar el futuro o hacer de la fe algo a
       la medida de mis costumbres. De manera que no haya que hacer grandes
       esfuerzos. Por lo general es una “fe de delivery” donde nadie quiere
-      moverse mucho y preﬁere tomar algunas creencias que se amolden a su
+      moverse mucho y prefiere tomar algunas creencias que se amolden a su
       realidad, pero no lo incomoden mucho.
     </p>
     <h2>OBJETIVOS CUMPLIDOS</h2>
@@ -143,7 +143,7 @@
     <h2>ACTIVIDADES</h2>
     <p>
       <strong
-        >1 - Las tortas del tiempo 2 - Línea de vida 3 - Las diﬁcultades 4 -
+        >1 - Las tortas del tiempo 2 - Línea de vida 3 - Las dificultades 4 -
         Imágenes de Dios 5 - El Espíritu Santo en la vida de todos los
         días</strong
       >
@@ -156,12 +156,12 @@
     </p>
     <h3>- Actividad:</h3>
     <p>
-      Pedir a cada integrante del grupo que realice un gráﬁco similar a una
+      Pedir a cada integrante del grupo que realice un gráfico similar a una
       torta en la que cada poción represente una actividad de su vida. Así
       llegar a la conclusión por ejemplo de que un chico dedica el 20% de su
       tiempo a divertirse, el 25% a estudiar, el 30% a dormir, etc. Construir un
-      nuevo gráﬁco en un aﬁche que represente el promedio de las gráﬁcas
-      individules del grupo. Analizar y conversar sobre los gráﬁcos personales y
+      nuevo gráfico en un afiche que represente el promedio de las gráficas
+      individules del grupo. Analizar y conversar sobre los gráficos personales y
       comunitarios. No limitar el análisis a que hayan puesto o no una porción
       de ''fe'', sino ver si en cada una de las porciones que pusieron se
       encuentran con Dios.
@@ -170,10 +170,10 @@
     <p>¿En qué cosas lo descubro?</p>
     <p>¿Dónde lo tengo más presente?</p>
     <p>
-      ¿Cómo llego a ser testigo de Cristo en mi vida a la luz del gráﬁco que
-      hice? Armar, entre todos, otro gráﬁco donde se muestren la proporción
+      ¿Cómo llego a ser testigo de Cristo en mi vida a la luz del gráfico que
+      hice? Armar, entre todos, otro gráfico donde se muestren la proporción
       entre las distintas actividdes o momentos de la vida como grupo. En base
-      al gráﬁco conversar sobre el vida de fe como grupo:
+      al gráfico conversar sobre el vida de fe como grupo:
     </p>
     <p>¿Qué lugar ocupa Dios en el grupo?</p>
     <p>¿En qué cosas lo descubrimos?</p>
@@ -202,13 +202,13 @@
       crecer en la fe. En las manos de Dios:
     </p>
     <p>
-      De la mano de Dios pasamos por las diﬁcultades, por la oscuridad de la
+      De la mano de Dios pasamos por las dificultades, por la oscuridad de la
       vida y llegamos sa-
     </p>
-    <p>nos y salvos al ﬁnal.</p>
+    <p>nos y salvos al final.</p>
     <p>
       Lo que tenemos que hacer es extenderle la mano, dejarlo acercarse y seguir
-      el camino por el que nos lleva, conﬁando en él.
+      el camino por el que nos lleva, confiando en él.
     </p>
     <p>
       Los grandes creyentes nos enseñan que vivir la fe es un riesgo y una
@@ -243,15 +243,15 @@
     <p>
       "Yo quiero seguirte a través de todo, sin miedo y sin tacha" (De la
       oración del explorador) Las distintas situaciones de la vida nos pueden
-      presentar diﬁcultades, dudas y momentos donde es difícil descubrir la
+      presentar dificultades, dudas y momentos donde es difícil descubrir la
       presencia de Dios. No faltan las veces en que nos cuestionamos sí
       realmente creemos y tenemos una fe auténtica. La oración del explorador
-      nos recuerda el compromiso de no dejarnos vencer por las diﬁcultades y
-      seguir conﬁando en Jesús y siguiendo su
+      nos recuerda el compromiso de no dejarnos vencer por las dificultades y
+      seguir confiando en Jesús y siguiendo su
     </p>
     <p>
       camino.La fe cristiana como experiencia de vida no puede quedar reducida a
-      aﬁrmaciones de palbras en el aire que se reﬁeren solo a conocimientos,
+      afirmaciones de palbras en el aire que se refieren solo a conocimientos,
       teorías o datos. Tiene, en cambio, el sabor de la vida, esa experiencia
       que exige poner en práctica el Reino de Dios. Por eso la fe se trduce
       inmediatamente en un estilo de vida y en comportamientos capaces de hacer
@@ -261,12 +261,12 @@
       Vivir nuestra fe implica hacer realidad el Reino de Dios y no simplemente
       conocerlo inteletualmente. Si hablamos de los valores, de los modelos, de
       los afectos y de las experiencias de vida, la fe de los creyentes es
-      concreta y provocante. Lo ha aﬁrmarlo con seguridad Jesús. Lo ha recordado
+      concreta y provocante. Lo ha afirmarlo con seguridad Jesús. Lo ha recordado
       siempre la Iglesia, resistiendo tenazmente contra todo intento de
       desvirtuar la Encarnación. Ser mártir es ser testigo de Jesúcristo.
     </p>
     <p>
-      Las diﬁcultades nacen cuando se plantea la relación entre la experiencia
+      Las dificultades nacen cuando se plantea la relación entre la experiencia
       de fe y el culto
     </p>
     <p>
@@ -305,7 +305,7 @@
       el amor (papá, mamá, esposo/a). Si creemos en un Dios cercano, pensemos en
       qué personas nos acompañan de cerca (amigos, educadores, mayores). Y así
       podemos seguir con un Dios que es justo, tra- bajador, paciente, fuerte,
-      seguro, ﬁel, tierno, creador, etc.
+      seguro, fiel, tierno, creador, etc.
     </p>
     <p>Cómo es Jesús:</p>
     <p>
@@ -350,7 +350,7 @@
     </p>
     <p>
       Desde una defensa de la vida, un Jesús que no es "descartable", que
-      signiﬁca el rechazo a una cultura que le pone a todo precio, que usa y
+      significa el rechazo a una cultura que le pone a todo precio, que usa y
       luego destruye a las personas en nombre de ganancias.Desde una fe sin
       barreras, Jesús como "soñador", como "loco del Reino" que nos propone una
       aventura esperanzadora que vale la pena seguir viviéndola.
@@ -364,7 +364,7 @@
       perfuma.
     </p>
     <p>
-      <strong>Mano:</strong> Que bendice, que sostiene con ﬁrmeza, que acaricia
+      <strong>Mano:</strong> Que bendice, que sostiene con firmeza, que acaricia
       con cariño
     </p>
     <p>
@@ -373,7 +373,7 @@
     </p>
     <p>
       <strong>Fuego:</strong> Que da energía, calor, luz, que reúne, que
-      transforma, que puriﬁca, que viene desde abajo, que te lo quedás
+      transforma, que purifica, que viene desde abajo, que te lo quedás
       contemplando en silencio.
     </p>
     <p>
@@ -395,7 +395,7 @@
     <p>
       <strong>Montañas:</strong> Que nos da aire puro, que nos hace sentir la
       belleza de la creación, que amplía nuestros horizontes, que muestran
-      ﬁrmeza, eternidad.
+      firmeza, eternidad.
     </p>
     <p>
       <strong>Mar:</strong> Que es inmenso, que invita a zambullirse, que
@@ -419,7 +419,7 @@
     </p>
     <p>
       <strong>Caricia:</strong> Que hace sentir ternura, que consuela, perdona,
-      que da conﬁanza y seguridad
+      que da confianza y seguridad
     </p>
     <p>
       <strong>Rosa:</strong> Que irradia perfume, que expresa el amor, que
@@ -486,9 +486,9 @@
       <em
         >«Cuando terminó de hablar, un fariseo lo invitó a cenar a su casa.
         Jesús entró y se sentó a la mesa. El fariseo se extrañó de que no se
-        lavara antes de comer. Pero el Señor le dĳo: “¡Así son ustedes, los
-        fariseos! Puriﬁcan por fuera la copa y el plato, y por dentro están
-        llenos de voracidad y perﬁdia. ¡Insensatos! El que hizo lo de afuera,
+        lavara antes de comer. Pero el Señor le dijo: “¡Así son ustedes, los
+        fariseos! Purifican por fuera la copa y el plato, y por dentro están
+        llenos de voracidad y perfidia. ¡Insensatos! El que hizo lo de afuera,
         ¿no hizo también lo de adentro? Den más bien como limosna lo que tienen
         y todo será puro. Pero ¡ay de ustedes, fariseos, que pagan el impuesto
         de la menta, de la ruda y de todas las legumbres, y descuidan la
@@ -496,7 +496,7 @@
         aquello.¡Ay de ustedes, fariseos, porque les gusta ocupar el primer
         asiento en las sinagogas y ser saludados en las plazas! ¡Ay de ustedes,
         porque son como esos sepulcros que no se ven y sobre los cuales se
-        camina sin saber!”. Un doctor de la Ley tomó entonces la palabra y dĳo:
+        camina sin saber!”. Un doctor de la Ley tomó entonces la palabra y dijo:
         “Maestro, cuando hablas así, nos insutas también a nosotros”. Él le
         respondió: “¡Ay de ustedes también, porque imponen a las demás cargas
         insoporta-</em
@@ -520,7 +520,7 @@
     <p>
       <em
         >«Cuando Jesús terminó de hablar, una mujer levantó la voz en medio de
-        la multitud y le dĳo: “¡Feliz el seno que te llevó y los pechos que te
+        la multitud y le dijo: “¡Feliz el seno que te llevó y los pechos que te
         amamantaron!”. Jesús le respondió: “Felices más bien los que escuchan la
         Palabra de Dios y la practican.”»</em
       >
@@ -529,7 +529,7 @@
     <h3>- Orientaciones:</h3>
     <p>
       La actividad pretende que los rastreadores-hogueras puedan reconocer la
-      presencia de Dios a lo largo de los hechos más signiﬁcativos de sus vidas.
+      presencia de Dios a lo largo de los hechos más significativos de sus vidas.
     </p>
     <h3>- Actividad:</h3>
     <p>
@@ -573,11 +573,11 @@
       por una persona del grupo. Preguntar:¿Cómo se sintieron los que cruzaron?
     </p>
     <p>¿Los que guiaban?</p>
-    <p>¿Qué diﬁcultades tenemos en nuestra vida real?</p>
+    <p>¿Qué dificultades tenemos en nuestra vida real?</p>
     <p>Leer el cuento de "Las huellas en la arena" y comentarlo entre todos.</p>
     <p>
       Que cada uno pueda contar la presencia de Jesús en su experiencia de
-      diﬁcultad que com-
+      dificultad que com-
     </p>
     <p>partió antes.</p>
     <p>¿En qué hechos estuvo presente Dios?</p>
@@ -590,23 +590,23 @@
     <h3>- Orientaciones:</h3>
     <p>
       La actividad busca que el grupo revise las certezas que tiene acerca de la
-      ﬁgura de Dios que tiene para sí mismo.
+      figura de Dios que tiene para sí mismo.
     </p>
     <h3>- Actividad:</h3>
     <p>
-      Presentar un aﬁche con fotos de personas en distintas situaciones:
+      Presentar un afiche con fotos de personas en distintas situaciones:
       imágenes de padres, de
     </p>
     <p>
       trabajadores, de reyes, de jueces, de amigos; que haya varones y mujeres,
       viejos y jóvenes, blancos y negros, que sea lo más variado posible.
-      Preguntar sobre las personas del aﬁche:
+      Preguntar sobre las personas del afiche:
     </p>
     <p>¿Quiénes son?</p>
     <p>¿Qué están haciendo?</p>
     <p>
       ¿Qué le dirían a cada una? Ir descubriendo las distintas formas que usan
-      para hablar al dirigirse a distintas personas. Detectar la conﬁanza, el
+      para hablar al dirigirse a distintas personas. Detectar la confianza, el
       trato cercano, las palabras que usa con cada una. Leer de la Biblia "A su
       imagen y semejanza" (Génesis 1,27) Preguntar:¿De qué manera describis a
       Dios?
@@ -645,7 +645,7 @@
       por el sol Hacer ejercicio de observación con el mar, las montañas, una
       rosa, paloma o panal. Para cada signo de los seleccionados, preguntar:
     </p>
-    <p>¿Qué signiﬁcan en nuestra vida real?</p>
+    <p>¿Qué significan en nuestra vida real?</p>
     <p>
       ¿Con qué acciones del Espíritu lo relacionamos? Según el elemento del que
       se trate se puede abordar algún aspecto en particular. Profundizar
@@ -730,7 +730,7 @@
       no está muerta. Allí lo espera otra vida, una nueva vida en un lugar
       especial donde las ﬂores nunca se marchitan, sino que siguen perfumando
       eternamente. Las otras ﬂores no podemos verlo, pero estamos seguros que
-      allí está. Tenemos una fe ciega en nuestro ﬁel jardinero.
+      allí está. Tenemos una fe ciega en nuestro fiel jardinero.
     </p>
     <p>
       Está junto con otras tantas ﬂores. Junto con las ﬂores de todos aquellos
@@ -757,7 +757,7 @@
       te necesitamos. Nos sentimos heridos y agobiados. Precisamos tu alivio y
       fortaleza. Queremos ser nación, una nación cuya identidad sea la pasión
       por la verdad y el compromiso por el bien común. Danos la valentía de la
-      libertad de los hĳos de Dios para amar a todos sin excluir a nadie,
+      libertad de los hijos de Dios para amar a todos sin excluir a nadie,
       privilegiando a los pobres y perdonando a los que nos ofenden,
       aborreciendo el odio y construyendo la paz. Concédenos la sabiduría del
       diálogo y la alegría de la esperanza que no defrauda. Tú nos convocas.
