--- a/src/13-conciencia.html
+++ b/src/13-conciencia.html
@@ -14,7 +14,7 @@
     </p>
     <h2>PRINCIPIOS DOCTRINALES</h2>
     <p>
-      <strong>Inc. 10</strong> La ﬁnalidad del M.E.S. es ayudar a la promoción
+      <strong>Inc. 10</strong> La finalidad del M.E.S. es ayudar a la promoción
       educación integral de los adolescentes y jóvenes, como honrados ciudadanos
       y buenos cristianos. <strong>Inc. 12</strong> Ayudarlos a vivir los
       valores de la vida de grupos de formación y acción comunitaria en una
@@ -24,7 +24,7 @@
       espíritu cristiano exploradoril hace que todos se esfuercen por romper el
       cerco de sus propios intereses y vivan también la vida y necesidades de
       los demás. <strong>Inc. 66</strong> Por eso, el/la Explorador/a aprende a
-      seguir el camino del sacriﬁcio, voluntario y credor, y del amor concreto
+      seguir el camino del sacrificio, voluntario y credor, y del amor concreto
       al prójimo, realizado en el ambiente en que le toca vivir. Ama a su Patria
       y promueve activamente el bien común.
     </p>
@@ -34,12 +34,12 @@
     <ul>
       <li>
         - En esta etapa los chicos se caracterizan por ser poco sensibles a las
-        diﬁcultades ajenas y por tomar partido por aquellas situaciones lejanas
+        dificultades ajenas y por tomar partido por aquellas situaciones lejanas
         que sacuden la emoción. Es frecuente que se replieguen sobre sí mismos.
       </li>
       <li>
         - Su desarrollo social está relacionado con el desarrollo de la
-        emotividad, las modiﬁcacio- nes psicológicas y las actividades
+        emotividad, las modificacio- nes psicológicas y las actividades
         intelectuales.
       </li>
       <li>
@@ -86,8 +86,8 @@
     </p>
     <p>
       Esta frase busca interiorizarse en el propio termino de conciencia el cual
-      se deﬁne en téminos generales como el conocimiento que alguien tiene de sí
-      mismo y de su entorno, pero también se reﬁere a la moral o bien a la
+      se define en téminos generales como el conocimiento que alguien tiene de sí
+      mismo y de su entorno, pero también se refiere a la moral o bien a la
       recepción normal de los estímulos del mundo interior y exterior. Por lo
       cual para tomar postura sobre una idea o hecho hay que tener conocimiento
       y por lo tanto informarse y conocer antes de emitir juicios de valor.
@@ -95,7 +95,7 @@
     <h2>ALGUNAS COSAS CLARAS</h2>
     <h3>- Como animador:</h3>
     <p>
-      Serás una ﬁgura muy importante frente a los chicos por lo que deberás
+      Serás una figura muy importante frente a los chicos por lo que deberás
       tomarte muy en srio el hecho de transmitirle la idea de “tomar
       conciencia”, ya que sos vos quien tendrá que “animarlos” para que vivan y
       sigan viviendo los valores de la vida de grupos de formación y acción
@@ -128,7 +128,7 @@
       <em
         >«Jesús estaba viendo a los ricos echar dinero en los cofres de las
         ofrendas, y vio también a una viuda pobre que echaba dos moneditas de
-        cobre. Entonces dĳo: “De veras les digo que esta viuda pobre ha dado más
+        cobre. Entonces dijo: “De veras les digo que esta viuda pobre ha dado más
         que todos, pues todos dan ofrendas de los que les sobra, pero ella, en
         su pobreza, ha dado todo lo que tenía para vivir”.»</em
       >
@@ -142,10 +142,10 @@
         es indiferente cuanto podamos hacer, sobre todo, cuando son pequeñas
         cosas que sólo Él ha visto y que sabrá premiar en su debido tiempo. Hay
         en la escena algunos ricos echando grandes cantidades de dinero para
-        Dios. Es lo que signiﬁca su ofrenda al Templo. Está lejos de Él una
+        Dios. Es lo que significa su ofrenda al Templo. Está lejos de Él una
         condena a los ricos, al contrario, segramente se sintió a gusto al ver
         cómo los que cuentan con los medios necesarios, ponen en práctica la
-        hermosa virtud de la magniﬁcencia. ¡Qué sería del Templo, de las grandes
+        hermosa virtud de la magnificencia. ¡Qué sería del Templo, de las grandes
         obras de la Iglesia si no hubiera gente generosa a lo grande! Además,
         está muy lejos de Cristo esa clase de favoritismos por unos o por otros.
         Y es que Dios no mira las apariencias como los hombres, precisamente
@@ -176,7 +176,7 @@
       operaciones formles, lo que implica que ya son capaces de formular y
       comprobar hipótesis, estableciendo crítcas sobre los valores familiares y
       sociales que les permiten evaluar lo que consideran bueno o malo, pudiendo
-      percibir los conﬂictos que provienen de sus diferentes roles (hĳo, amigo,
+      percibir los conﬂictos que provienen de sus diferentes roles (hijo, amigo,
       estudiante, ciudadanos de una sociedad, comunidad etc.) Así pues, el logro
       de la autonomía y la formación de la identidad se convierten en los
       procesos fundamentales de esta etapa. Aunque pareciera no ser así, las
@@ -217,7 +217,7 @@
         comunidad?, si ya quedaban unos pocos, los que se ocupaban de poner las
         velas y las ﬂores para un culto cada vez más cerrado. El cura se sentía
         mal, como que todo perdía sentido. Tenía una pregunta que le daba
-        vueltas en la cabeza desde hacía tiempo y que tomando fuerzas se la dĳo
+        vueltas en la cabeza desde hacía tiempo y que tomando fuerzas se la dijo
         al maestro:</em
       >
     </p>
@@ -230,10 +230,10 @@
       Tener preparadas hojas con varias preguntas sobre los problemas de la
       realidad actual de la parroquia, barrio, ciudad o país. Algunas
       orientaciones para la encuesta: Seleccionar preguntas que sean rápidas de
-      contestar, que no necesiten escribir mucho y qué se puedan luego clasiﬁcar
+      contestar, que no necesiten escribir mucho y qué se puedan luego clasificar
       y obtener resultados. Pueden ser del estilo "multiple choice",
-      enmeraciones de elementos, ordenar según prioridades, aﬁrmaciones para
-      decidirse por verddero o falso. Es conveniente tener una ﬁcha impresa con
+      enmeraciones de elementos, ordenar según prioridades, afirmaciones para
+      decidirse por verddero o falso. Es conveniente tener una ficha impresa con
       las preguntas y espacio para las diferentes repuestas (las preguntas sobre
       el margen izquierdo y varias columnas en blanco para las res- puestas de
       cada persona).
@@ -262,7 +262,7 @@
       conteste rápidamente en forma individual.
     </p>
     <p>
-      Al terminar juntar las hojas y clasiﬁcarlas entre todos de manera de
+      Al terminar juntar las hojas y clasificarlas entre todos de manera de
       averiguar cuáles son las respuestas más frecuentes. Sumar las
       repeticiones, sacar porcentajes y detectar el orden de prioridades, según
       las prguntas que sean. Conversar sobre los resultados y sacar alguna
@@ -273,7 +273,7 @@
       <strong>Segunda Parte</strong>
     </p>
     <ul>
-      <li><em>- Si dĳo el maestro- un pecado de indiferencia.</em></li>
+      <li><em>- Si dijo el maestro- un pecado de indiferencia.</em></li>
       <li><em>- ¿Y qué pecado puede ser ese?</em></li>
       <li>
         <em
@@ -339,7 +339,7 @@
     </p>
     <p>
       <strong>Para cerrar las encuestas:</strong> Reunirse y juntar las
-      respuestas de la encuesta que hayan traído los chicos. Clasiﬁcar todas las
+      respuestas de la encuesta que hayan traído los chicos. Clasificar todas las
       respuestas obtenidas, con el mismo criterio con que lo hicieron la semana
       anterior.En base a los resultados obtenidos relacionar con lo conversado
       en el encuentro anterior y preguntar:- ¿Se imaginaban esas respuestas?
@@ -349,7 +349,7 @@
       <li>- ¿A qué conclusiones podemos llegar?</li>
     </ul>
     <p>
-      Hacer algunos esquemas, cuadros y gráﬁcos comparativos para ayudar a
+      Hacer algunos esquemas, cuadros y gráficos comparativos para ayudar a
       entender los resutados y para mostrarlos a los demás, de manera que todos
       puedan conocer las conclusiones y principales resultados.
     </p>
@@ -362,7 +362,7 @@
       situación: desocupación, miseria, ajuste, eclusión, discriminación, crisis
       del Estado, falta de salud, inseguridad, dentro de estas situciones
       globales, aparecen los rostros de las personas que las viven y las sufren:
-      Padres de familia que no tienen para alimentar a sus hĳos, niños que
+      Padres de familia que no tienen para alimentar a sus hijos, niños que
       mueren de enfermedades perfec- tamente evitables, jóvenes que no
       encuentran de qué trabajar y ganarse la vida, personas
     </p>
@@ -372,7 +372,7 @@
     </p>
     <p>
       <strong>Jesús en el rostro de mi hermano necesitado:</strong> Dios se
-      maniﬁesta a través del rostro de cada persona. En ellos descubrimos a un
+      manifiesta a través del rostro de cada persona. En ellos descubrimos a un
       Dios que sufre, a un Dios pobre. Jesús nos invita constantemente a que
       salgamos al encuentro del hermano que nos necesita. Esta invitación la
       podemos vivir concretamente asumiendo una preocupación especial por los
@@ -383,11 +383,11 @@
       que está mal, ya es una manera importante de amar. Luego ver qué podemos
       hacer para consolar, aliviar y revertir el sufrimiento, la debilidad y la
       pobreza marginante. En nuestra patria, Jesús vive en el pobre, allí se nos
-      maniﬁesta y se une con nosotros, desde allí nos salva y nos redime de toda
-      esclavitud, desde allí nos hace hermanos suyos e hĳos de Dios, desde allí
+      manifiesta y se une con nosotros, desde allí nos salva y nos redime de toda
+      esclavitud, desde allí nos hace hermanos suyos e hijos de Dios, desde allí
       nos hace herencia suya y pueblo suyo, desde allí nos moviliza para que
       cons- truyamos juntos su Reino, aquí en este presente y hacia el futuro de
-      nuestros hĳos.
+      nuestros hijos.
     </p>
     <p>
       <strong>Honrados ciudadanos:</strong> Lejos de ser indiferente, a lo largo
@@ -400,7 +400,7 @@
       que le toca vivir, se evita la formación de exploradores que se cierran
       sobre sí mismos o sobre el mismo movimiento de exploradores. Así cuando el
       explorador termina su ciclo en el movimiento, puede alcanzar el objetivo
-      ﬁnal de ser un "ciudadano honrado", "constructor de un mundo mejor".
+      final de ser un "ciudadano honrado", "constructor de un mundo mejor".
     </p>
     <p>
       De los principios doctrinales hacer referencia a los principios
@@ -414,10 +414,10 @@
     <h3>Palabra de Dios: Mc. 10,23-27. Los ricos</h3>
     <p>
       <em
-        >«Jesús miró entonces a su alrededor, y dĳo a sus discípulos: “¡Qué
+        >«Jesús miró entonces a su alrededor, y dijo a sus discípulos: “¡Qué
         difícil va a ser para los ricos entrar en el Reino de Dios!”. Estas
         palabras dejaron asombrados a los discípulos, pero Jesús les volvió a
-        decir: “Hĳos ¡qué difícil es entrar en el Reino de Dios! Es más fácil
+        decir: “Hijos ¡qué difícil es entrar en el Reino de Dios! Es más fácil
         para un camello pasar por el ojo de una aguja, que para un rico entrar
         en el reino de Dios”. Al oírlo, se asombraron más aún, y se preguntaban
         unos a otros: “¿Y quién podría salvarse?” Jesús los miro y les contestó:
@@ -428,7 +428,7 @@
     <h3>ACTIVIDAD N° 2: TRABAJO CON DIARIOS Y REVISTAS</h3>
     <h3>- Orientación:</h3>
     <p>
-      Esta actividad busca que los Rastreadores/Hogueras puedan identiﬁcar en
+      Esta actividad busca que los Rastreadores/Hogueras puedan identificar en
       concreto la realidad social presente, para que puedan tomar dimensión de
       la situación e intentar pasar a la acción.
     </p>
@@ -457,20 +457,20 @@
       de la ciudad descubrió otro «verdadero mercado de brazos juveniles". El
       barrio vecino a Porta Palazzo era un hormiguero de vendedores amblantes,
       vendedores de cerillas, lustrabotas, limpiachimeneas, expendedores de
-      folletos, Hĳos de familias desacomodadas, casi siempre sin trabajo,
-      andaban a la busca de cualquier oﬁcio con tal de ir tirando. Les veía
+      folletos, Hijos de familias desacomodadas, casi siempre sin trabajo,
+      andaban a la busca de cualquier oficio con tal de ir tirando. Les veía
       trepar los andamios de los albañiles, buscar un lugar de mozo en una
       tienda, vagar presentándose como deshollinador. Les veía jugándose el
       dinero por las esquinas de las calles, con la cara dura y decidida del que
       está dispuesto a intentar cualquier medio para abrirse camino en la vida.
-      Si intentaba acercarse a ellos se alejaban desconﬁados y despreciadores.
+      Si intentaba acercarse a ellos se alejaban desconfiados y despreciadores.
       No eran los muchachos de I Becchi que buscaban historietas y juegos de
     </p>
     <p>
       manos. Eran los lobos, los animales salvajes de sus sueños, aún cuando en
       sus ojos había más miedo que ferocidad. Hay bandas de jóvenes que vagan
       especialmente los domingos, por las calles y por las orillas de Po.
-      Contemplaban a las personas perfumadas y de ﬁesta, que pa- sean sin hacer
+      Contemplaban a las personas perfumadas y de fiesta, que pa- sean sin hacer
       caso de su miseria. Las familias obreras suben a las buhardillas por la
       noche.
     </p>
@@ -540,7 +540,7 @@
       situación: desocupación, miseria, ajuste, eclusión, discriminación, crisis
       del Estado, falta de salud, inseguridad, dentro de estas situciones
       globales, aparecen los rostros de las personas que las viven y las sufren:
-      Padres de familia que no tienen para alimentar a sus hĳos, niños que
+      Padres de familia que no tienen para alimentar a sus hijos, niños que
       mueren de enfermedades perfetamente evitables, jóvenes que no encuentran
       de qué trabajar y ganarse la vida, personas que trabajan todo el día para
       alcanzar unos pocos pesos, chicos de la calle, campesinos sin tierras,
@@ -550,7 +550,7 @@
       <strong>Ver, compadecerse y actuar:</strong> Se descubren tres momentos en
       la actitud del buen samaritano: Primero "ver" la realidad de necesidad,
       luego "compadecerse", con el corazón, por amor y por último "actuar" dando
-      una respuesta concreta. Más gráﬁcamente:
+      una respuesta concreta. Más gráficamente:
       <strong>"ojos" - "corazón" - “manos".</strong>
     </p>
     <h3>Palabra de Dios: Lc. 10,33-34 “El Buen samaritano”</h3>
@@ -564,7 +564,7 @@
     </p>
     <p>Plantear:- ¿Con qué ojos "vio"?</p>
     <ul>
-      <li>- ¿Qué signiﬁca sentir "compasión"?</li>
+      <li>- ¿Qué significa sentir "compasión"?</li>
       <li>- ¿Qué "hizo" inmediatamente"?</li>
     </ul>
     <h3>ACTIVIDAD N° 3: BUEN SAMARITANO</h3>
@@ -609,18 +609,18 @@
         las heridas con aceite y vino y le puso vendas. Luego lo subió en su
         propia cabalgadura, lo llevo a un alojamiento y lo cuidó. Al día
         siguiente, el samaritano sacó el equivalente al salario de dos días, se
-        lo dio al dueño del alojamiento y le dĳo: ´Cuide a este hombre, y si
+        lo dio al dueño del alojamiento y le dijo: ´Cuide a este hombre, y si
         gasta usted algo mas, yo se lo pagaré cuando vuelva´. Pues bien, ¿cuál
         de estos tres te parece que se hizo prójimo del hombre asaltado por los
         bandidos?”. El maestro de la ley contestó:” El que tuvo compasión de
-        él”. Jesús le dĳo: “Pues ve y haz tu lo mismo”.»</em
+        él”. Jesús le dijo: “Pues ve y haz tu lo mismo”.»</em
       >
     </p>
     <h3>ACTIVIDAD N° 4: HISTORIETA</h3>
     <h3>- Orientación:</h3>
     <p>
       Esta actividad busca que los Rastreadores/Hogueras distingan la diferencia
-      de dar y compar- tir, de identiﬁcar que no es lo mismo dar lo que sobra
+      de dar y compar- tir, de identificar que no es lo mismo dar lo que sobra
       que lo que hace falta.
     </p>
     <h3>- Actividad:</h3>
@@ -674,7 +674,7 @@
       Todo esto será pro- vocado por la insensibilidad de los ricos que no han
       querido ayudarles a salir de la miseria."
     </p>
-    <p><strong>Necesidades y deseos: Beneﬁcencia o justicia:</strong></p>
+    <p><strong>Necesidades y deseos: Beneficencia o justicia:</strong></p>
     <p>
       En las situaciones cotidianas, muchas veces Frente a la pobreza y la
       exclusión, en la sse nos presenta la opción entre comprarme ciedad y en la
@@ -685,7 +685,7 @@
       No alcanza con el planteo de "si me alcanza necesitan de lo elemental para
       sobrevivir. Sin la plata" o "no puedo"; con ese criterio el rico embargo,
       pronto se dieron cuenta que la btendría que comprarse todo lo que quisiera
-      y neﬁcencia no bastaba; era preciso luchar por eso no está bien: cuando
+      y neficencia no bastaba; era preciso luchar por eso no está bien: cuando
       hay personas (y mu- la justicia social, por instituciones y leyes que
       chas) que no tienen para lo más mínimo, los garantizaran los derechos
       humanos. gastos superﬂuos no están de acuerdo con el Esta opción tiene dos
@@ -708,7 +708,7 @@
       Seguramente hay muchas cosas a las que nes es un elemento fundamental para
       la prnos atamos y parecería que no se puede vi- vención y superación de
       las nuevas pobrezas vir sin ellas, y cuando tomamos conciencia de y un
-      aporte especiﬁco y original que podemos la realidad las entendemos de otra
+      aporte especifico y original que podemos la realidad las entendemos de otra
       manera y dar desde nuestro carisma salesiano. nos despojamos de ellas.
       Olvidar, abandonar o negar el vínculo entre
     </p>
@@ -721,7 +721,7 @@
     <p>transformar las situaciones y vivencias de in-</p>
     <p>justicia.</p>
     <p>
-      Hacer una nueva historieta donde el padre le enseñe una cosa buena al hĳo.
+      Hacer una nueva historieta donde el padre le enseñe una cosa buena al hijo.
     </p>
     <ul>
       <li>
@@ -729,7 +729,7 @@
         globales de dominación que cada vez marginan más a nuestros pueblos, y
         permiten que una minoría acumule la riqueza y no la distribuya. Esto es
         antievangélico, atenta contra Dios, contra el derecho de los pueblos. En
-        el mundo hay todo lo suﬁciente para que alcance para cubrir las
+        el mundo hay todo lo suficiente para que alcance para cubrir las
         necesidades de todos. Lo que pasa es que para satisfacer los "deseos" de
         algunos, muchos otros no alcanza a cubrir sus "necesidades". Si el
         sistema económico sigue basándose en la obsesión por consumir y
@@ -758,13 +758,13 @@
       y nuestras familias.
     </p>
     <p>
-      No debemos estar ajenos a todo aquello que interﬁera en el buen vivir, el
+      No debemos estar ajenos a todo aquello que interfiera en el buen vivir, el
       Explorador debe ana- lizar siempre desde la "óptica cristiana", toda
       aquella situación que desvíe sus sanos intereses.
     </p>
     <p>
       Debe demostrar amor a la Patria respetando las leyes, cumpliendo con sus
-      obligaciones dia- rias, ayudando al progreso, sembrando en sus hĳos el
+      obligaciones dia- rias, ayudando al progreso, sembrando en sus hijos el
       amor a la cultura de su país.
     </p>
     <p>
@@ -778,7 +778,7 @@
       <em
         >«Jesús estaba viendo a los ricos echar dinero en los cofres de las
         ofrendas, y vio también a una viuda pobre que echaba dos moneditas de
-        cobre. Entonces dĳo: “De veras les digo que esta viuda pobre ha dado más
+        cobre. Entonces dijo: “De veras les digo que esta viuda pobre ha dado más
         que todos, pues todos dan ofrendas de los que les sobra, pero ella, en
         su pobreza, ha dado todo lo que tenía para vivir.”»</em
       >
