--- a/src/14-critica.html
+++ b/src/14-critica.html
@@ -26,7 +26,7 @@
       decubrimiento y desarrollo de las diversas y originales cualidades que
       cada uno ha recibido de la naturaleza.
       <strong>Inc. 39. EDUCACIÓN PERSONALIZANTE:</strong> Para evitar sus
-      miembros una masiﬁcación alienante de la persona, el M.E.S. se esfuerza
+      miembros una masificación alienante de la persona, el M.E.S. se esfuerza
       por cultivar una educación personalizada, personalizante y liberadora.
       <strong>Inc. 40.</strong> Tiene siempre presentes sus objetivos
       fundamentales, para hacer de cada miembro un sujeto activo de su propia
@@ -50,7 +50,7 @@
       y su estilo de vida exploradoril.
     </p>
     <p>
-      Los rastreadores-hogueras no cuentan con herramientas suﬁcientes para
+      Los rastreadores-hogueras no cuentan con herramientas suficientes para
       hacer juicios críticos sobre su realidad social y suelen desarrollar
       prejuicios relacionados con el sentido común o la incorporación de
       interpretaciones que realizan algunos adultos.
@@ -61,7 +61,7 @@
       requiere que los Rastreadores / Hogueras estén dispuestos a deconstruir su
       propio pensamiento y por lo tanto a cuestionar sus formas habituales de
       actuar, para comenzar a pensar con mayor autonomía y menos inﬂuencias. La
-      conﬁanza y el diálogo ﬂuido dentro del grupo son dos condiciones
+      confianza y el diálogo ﬂuido dentro del grupo son dos condiciones
       importantes para llevar adelante la consigna.
     </p>
     <h2>TU MOMENTO</h2>
@@ -77,7 +77,7 @@
       moda” de ese momento? ¿Cuán inﬂuenciables éramos cuando teníamos la edad
       de los chicos? ¿Qué publicidades de los medios de comunicación nos imponen
       modelos de belleza o de éxito? ¿Qué queremos decir cuando describimos a
-      nuestra sociedad como materialista o consumista? Ejempliﬁquen con
+      nuestra sociedad como materialista o consumista? Ejemplifiquen con
       situaciones de la vida cotidiana.
     </p>
     <h2>TEXTO PARA REFLEXIONAR Y ORIENTAR EL TRABAJO</h2>
@@ -105,7 +105,7 @@
         señalan caminos sin comprometer la propia vida con nuevas propuestas. Es
         un camino que “compra” el discurso del mundo a través de las imágenes de
         éxito que nos vende, se basa en la auto prservación y en el evitar toda
-        clase de peligros que no tengan que ver con mi propio beneﬁcio (ej. ¿Y
+        clase de peligros que no tengan que ver con mi propio beneficio (ej. ¿Y
         para qué vas a ese grupo los sábados? ¿Te pagan por lo que haces?).
       </li>
     </ol>
@@ -201,7 +201,7 @@
     <h3>- Reﬂexión:</h3>
     <p>
       Cuando juzgamos lo bueno o malo de algo, partimos siempre de una formación
-      ética previa. Ello signiﬁca que el resultado de un juicio no depende de la
+      ética previa. Ello significa que el resultado de un juicio no depende de la
       técnica de análisis o investigación
     </p>
     <p>
@@ -212,7 +212,7 @@
     </p>
     <p>
       Es cierto también que todos contamos con una base mínima que proviene de
-      una conciencia natural, pero que no es conﬁable ni única. Es precisamente
+      una conciencia natural, pero que no es confiable ni única. Es precisamente
       en el análisis crítico donde encon- traremos las diferencias más fuertes.
     </p>
     <p>
@@ -238,7 +238,7 @@
     <p>
       Nosotros no tenemos dudas de la autenticidad del mensaje de Jesús, pero
       ¿cómo separarlo de tantas "voces" que gritan a la vez que lo contradicen y
-      hasta a veces nos parecen que tvieran razón? ¿Cómo identiﬁcarlo de tantos
+      hasta a veces nos parecen que tvieran razón? ¿Cómo identificarlo de tantos
       mensajes pseudocristianos (nuevos movimientos religiosos, sectas, etc.)
       que nos confunden ofreciéndonos respuestas fáciles? Tenemos que tener
       ideas claras para forma una actitud crítica.
@@ -317,8 +317,8 @@
     <h3>Palabra de Dios: Los crímenes de Jerusalén. (Ez. 22, 23-29)</h3>
     <p>
       <em
-        >«La palabra del Señor me llegó en estos términos: Hĳo de hombre, dile a
-        Jerusalén: Tú eres una tierra que no ha sido puriﬁcada, sobre la que no
+        >«La palabra del Señor me llegó en estos términos: Hijo de hombre, dile a
+        Jerusalén: Tú eres una tierra que no ha sido purificada, sobre la que no
         ha llovido en el día de la ira. Hay una conjuración de profetas en medio
         de ella. Como un león rugiente que despedaza la presa, han devorado a la
         gente, se han apoderado de la riqueza y objetos preciosos y han
@@ -327,7 +327,7 @@
         profano, ni han hecho conocer la diferencia entre lo puro y lo impuro;
         han cerrado sus ojos a mis sábados y yo he sido profanado en medio de
         ellos. Sus jefes, en medio de la ciudad, son como lobos que despedazan
-        la presa, derramando sangre y haciendo perecer a la gente, a ﬁn de
+        la presa, derramando sangre y haciendo perecer a la gente, a fin de
         acumular ganancias. Sus profetas los recbren con cal, proponiendo falsas
         visiones y predicciones engañosas. Ellos dicen: “Así habla el Señor”,
         cuando el Señor no había hablado. Los terratenientes practican la
