--- a/src/16-obediencia.html
+++ b/src/16-obediencia.html
@@ -13,12 +13,12 @@
     </p>
     <h2>PRINCIPIOS DOCTRINALES</h2>
     <p>
-      <strong>Inc.45 LA AUTORIDAD:</strong> Para lograr la ﬁnalidad del
+      <strong>Inc.45 LA AUTORIDAD:</strong> Para lograr la finalidad del
       Movimiento es indispensable tener claro el sentido de la autoridad.
       <strong>Inc. 46 a)</strong> En el M.E.S. existe un solo tipo de autoridad:
       la considerada como servicio en espritu evangélico, como la de Cristo que
       vino “no a ser servido, sino a servir y dar la vida por los demás”.
-      <strong>Inc. 47 b)</strong> La ﬁgura de esta autoridad la tenemos
+      <strong>Inc. 47 b)</strong> La figura de esta autoridad la tenemos
       concretamente analizada en las pautas de acción. Siempre que se presente
       así, la autoridad dispone de un auténtico poder de gobierno.
       <strong>Inc. 48 3. LA OBEDIENCIA</strong> : El/La explorador/a responde a
@@ -31,11 +31,11 @@
     <h3>- Dinámica:</h3>
     <p>Es el momento propicio para esta consigna porque:</p>
     <p>
-      Los Rastreadores-Hogueras presentan diﬁcultades a la hora de cumplir
+      Los Rastreadores-Hogueras presentan dificultades a la hora de cumplir
       consignas.
     </p>
     <p>
-      Es habitual que tengan diﬁcultades de relación con sus padres, docentes o
+      Es habitual que tengan dificultades de relación con sus padres, docentes o
       animadores.
     </p>
     <p>
@@ -86,7 +86,7 @@
     <p>
       <em
         >cambio presente del Oratorio es qué un buen número de jóvenes no tienen
-        conﬁanza con los</em
+        confianza con los</em
       >
     </p>
     <p>
@@ -115,14 +115,14 @@
     </p>
     <p>
       <em
-        >ne que romper esa barrera fatal de la desconﬁanza, que ha de ser
-        suplantada por la conﬁanza</em
+        >ne que romper esa barrera fatal de la desconfianza, que ha de ser
+        suplantada por la confianza</em
       >
     </p>
     <p>
       <em
         >más cordial. Es decir: que la obediencia ha de guiar al alumno como la
-        madre a su hĳito;</em
+        madre a su hijito;</em
       >
     </p>
     <p><em>entonces reinará en el Oratorio la paz y la antigua alegría”</em></p>
@@ -142,7 +142,7 @@
       </li>
     </ul>
     <p>
-      Solo podemos encontrarnos con esta conﬁanza que habla Don Bosco, una
+      Solo podemos encontrarnos con esta confianza que habla Don Bosco, una
       autoridad merecida de una alegre obediencia, cuando buscamos el bien
       común. Cuando somos corresponsables. Tampoco tenemos que olvidar que
       dentro del Batallón, la Comunidad, nuestra familia, etc; tabién nosotros
@@ -173,7 +173,7 @@
     <p>
       <em
         >«Después de haberles lavado los pies, se puso el manto, volvió a la
-        mesa y les dĳo: “¿Coprenden lo que acabo de hacer con ustedes? Ustedes
+        mesa y les dijo: “¿Coprenden lo que acabo de hacer con ustedes? Ustedes
         me llaman Maestro y Señor, y tienen razón, porque lo soy. Si yo, que soy
         el Señor y el Maestro, les he lavado los pies, ustedes también deben
         lavarse los pies unos a otros. Les he dado el ejemplo, para que hagan lo
@@ -193,11 +193,11 @@
     <h2>ENTENDIENDOLOS</h2>
     <p>
       El adolescente tiene interés por su propia interioridad, intenta la
-      aﬁrmación de sí mismo. En general busca la independencia de la familia,
+      afirmación de sí mismo. En general busca la independencia de la familia,
       escuela, sociedad. Está en una edad de opsición contra los padres,
       maestros, adultos y las personas mayores en general. Pero sin ebargo
-      necesita identiﬁcarse con "modelos" y personas mayores creíbles y
-      conﬁables. Es fudamental la relación de conﬁanza que tenga con sus padres
+      necesita identificarse con "modelos" y personas mayores creíbles y
+      confiables. Es fudamental la relación de confianza que tenga con sus padres
       o con alguna otra persona mayor que los pueda contener, asesorar y
       acompañar.
     </p>
@@ -227,7 +227,7 @@
     <h3>- Orientación:</h3>
     <p>
       La actividad busca que los Rastreadores-Hogueras vivan, mediante el juego,
-      las diﬁcultades que presenta la dicotomía Autoridad-Obediencia.
+      las dificultades que presenta la dicotomía Autoridad-Obediencia.
     </p>
     <h3>- Actividad:</h3>
     <ol>
@@ -287,7 +287,7 @@
         siervos.
       </li>
       <li>
-        <strong>13.</strong> Esta nueva situación se mantendrá hasta el ﬁnal.
+        <strong>13.</strong> Esta nueva situación se mantendrá hasta el final.
       </li>
       <li>
         <strong>14.</strong> Es fundamental que los chicos no sepan nada del
@@ -296,7 +296,7 @@
       <li>
         <strong>15.</strong> Antes de terminar el día, reunirse e intercambiar
         comentarios: ¿Cómo manejamos el poder y la autoridad? ¿Cómo ejercitamos
-        la obediencia? ¿Cuáles son los beneﬁcios y riesgos del ejercicio de la
+        la obediencia? ¿Cuáles son los beneficios y riesgos del ejercicio de la
         autoridad? ¿Y de la obediencia? ¿Cuáles son los derechos y deberes que
         todo ser humano posee? ¿Qué se siente experimentar el ejercicio del
         poder ajeno y del propio?
@@ -349,7 +349,7 @@
       particular no sea favorable. Tiene sentido cuando hay amor entre las
       personas. Si la persona se siente querida, puede entender que lo que le
       dicen no le hará daño, que es por su bien, y aunque no termine de
-      coprender todo, como hay una relación profunda, tiene conﬁanza en el otro
+      coprender todo, como hay una relación profunda, tiene confianza en el otro
       y obedece con amor. De igual manera, el mismo amor hace que quien tiene la
       autoridad la utilice para el bien de todos y no movido por su propio
       interés.
@@ -358,7 +358,7 @@
       <strong>Poder como servicio:</strong> El poder que nos enseña Jesús es el
       poder como servicio. Nos muestra un poder que se basa en la búsqueda del
       bien común, que brinda la organización y directivas necesarias para la
-      convivencia, que administra los recursos con ﬁrmeza para evitar
+      convivencia, que administra los recursos con firmeza para evitar
       injusticias o desigualdades, que guía por el buen camino y acompaña la
       marcha, que señala los límites y frena los abusos. El poder es una
       herramienta valiosa y necesaria para la construcción grupal y social del
@@ -373,24 +373,24 @@
     <h3>Mat 20, 20-28. Los primeros lugares</h3>
     <p>
       <em
-        >«Entonces la madre de los hĳos de Zebedeo se acercó a Jesús, junto con
-        sus hĳos, y se potró ante él para pedirle algo:”¿Qué quieres?”, le
-        preguntó Jesús. Ella le dĳo: “Manda que mis dos hĳos se sienten en tu
+        >«Entonces la madre de los hijos de Zebedeo se acercó a Jesús, junto con
+        sus hijos, y se potró ante él para pedirle algo:”¿Qué quieres?”, le
+        preguntó Jesús. Ella le dijo: “Manda que mis dos hijos se sienten en tu
         Reino, uno a tu derecha y el otro a tu izquierda”. “No saben lo que
         piden”, respondió Jesús. “¿Pueden beber el cáliz que yo beberé?”.</em
       >
     </p>
     <p>
       <em
-        >“Podemos”, le respondieron. “Está bien, les dĳo Jesús, ustedes beberán
+        >“Podemos”, le respondieron. “Está bien, les dijo Jesús, ustedes beberán
         mi cáliz. En cuanto a sentarse a mi derecha o a mi izquierda, no me toca
         a mí concederlo, sino que esos puestos son para quienes se los ha
         destinado mi Padre”. Al oír esto, los otros diez se indignaron contra
-        los dos hermanos. Pero Jesús los llamó y les dĳo: “Ustedes saben que los
+        los dos hermanos. Pero Jesús los llamó y les dijo: “Ustedes saben que los
         jefes de las naciones dominan sobre ellas y los poderosos les hacen
         sentir su autoridad. Entre ustedes no debe suceder así. Al contrario, el
         que quiera ser grande, que se haga servidor de ustedes; y el que quiera
-        ser el primero que se haga su esclvo: como el Hĳo del hombre, que no
+        ser el primero que se haga su esclvo: como el Hijo del hombre, que no
         vino para ser servido, sino para servir y dar su vida en rescate por una
         multitud”.»</em
       >
@@ -399,14 +399,14 @@
     <h3>- Orientación:</h3>
     <p>
       La actividad busca que el Rastreador-Hoguera reﬂexione sobre sus propias
-      relaciones familia- res y las diﬁcultades que conlleva la
+      relaciones familia- res y las dificultades que conlleva la
       autoridad-obediencia en dicho ambiente.
     </p>
     <h3>- Actividad:</h3>
     <ol>
       <li>
         <strong>1.</strong> Ponerse de acuerdo y elegir alguna situación en la
-        que un hĳo le pide permiso para hacer una determinada cosa a alguno de
+        que un hijo le pide permiso para hacer una determinada cosa a alguno de
         sus padres.
       </li>
       <li>
@@ -417,18 +417,18 @@
       <li>
         <strong>3.</strong> Armar parejas y darle la consigna de pensar como
         seria ese diálogo y escribirlo en dos hojas diferentes, en una lo que va
-        diciendo el padre y en la otra lo que dice el hĳo.
+        diciendo el padre y en la otra lo que dice el hijo.
       </li>
       <li>
         <strong>4.</strong> Se puede acordar que cada personaje intervenga una
-        cantidad ﬁja de veces, que haya tantas preguntas de un personaje y las
+        cantidad fija de veces, que haya tantas preguntas de un personaje y las
         correspondientes respuestas del otro, etc, como para que sigan todo un
         esquema parecido.
       </li>
       <li>
         <strong>5.</strong> Juntarse entre todos e intercambiar las hojas, de
         manera que cada pareja quede nueva- mente con una hoja de un padre y una
-        de un hĳo, pero escrita por diferentes parejas.
+        de un hijo, pero escrita por diferentes parejas.
       </li>
       <li>
         <strong>6.</strong> Cada pareja lee entonces cómo le quedó el diálogo.
@@ -474,7 +474,7 @@
       <li>
         <strong>16.</strong> Comentarlos y compararlos con situaciones reales
         ¿Cómo son los diálogos con nuestros padres? ¿De qué temas hablamos con
-        conﬁanza con ellos?
+        confianza con ellos?
       </li>
     </ol>
     <p>
@@ -483,8 +483,8 @@
     </p>
     <h3>- Reﬂexión:</h3>
     <p>
-      <strong>Crisis de amor:</strong> Existe una crisis de obediencia, hay hĳos
-      que les cuesta obedecer, preﬁeren cortarse solos y hacer la suya, sin
+      <strong>Crisis de amor:</strong> Existe una crisis de obediencia, hay hijos
+      que les cuesta obedecer, prefieren cortarse solos y hacer la suya, sin
       escuchar ni dejarse acompañar por sus padres. Existe también una crisis de
       autoridad: hay padres que no saben mandar, educar, dialogar o hcerse
       obedecer, porque a veces lo hacen autoritariamente o demasiado
@@ -496,13 +496,13 @@
     </p>
     <p>
       <strong>Diálogo con los padres:</strong> Vemos que entre nosotros y
-      nuestros padres puede faltar el respeto, la cercanía o la conﬁanza. Puede
+      nuestros padres puede faltar el respeto, la cercanía o la confianza. Puede
       haber abusos, autoritarismo o excesiva permisividad. Cueta ponerse en el
       lugar del otro, escuchar y abrirse a hablar. Surgen así diálogos que son
       sólo monólogos.Nuestros padres quieren lo mejor para nosotros y nosotros
       los queremos mucho a ellos. Es dfícil creer que haya maldad o mala
-      voluntad por parte de los padres hacia sus hĳos o viceversa. Pero con las
-      buenas intenciones no alcanza, hay que ayudarlas y esforzarse por conﬁar
+      voluntad por parte de los padres hacia sus hijos o viceversa. Pero con las
+      buenas intenciones no alcanza, hay que ayudarlas y esforzarse por confiar
       en los padres, comprender que nos quieren y tienen mucho para darnos,
       entender que dar ese paso de ponerse en el lugar del otro es difícil pero
       no imposible y ciertamente vale la pena. Una vez que se logra sintonizar
@@ -517,20 +517,20 @@
       enseñarnos, protegernos, guiarnos y darnos lo mejor, tenemos que también
       obedecerles con amor. Es una responsabilidad de ida y vuelta. Si la
       autoridad de los padres pierde el amor no tiene sentido, si la obediencia
-      de los hĳos es sin amor también pierde sentido. Si desaparece el amor (o
+      de los hijos es sin amor también pierde sentido. Si desaparece el amor (o
       se lo disimula demasiado) la familia se convierte en un regimiento, el
       miedo y el abso de poder aparece pronto, los retos se vuelven condenas,
       los pedidos órdenes, los favores obligaciones y los regalos
       condecoraciones merecidas.
     </p>
     <h3>Palabra de Dios:</h3>
-    <h3>Recomendaciones a padres e hĳos: Efesios 6, 1-4</h3>
+    <h3>Recomendaciones a padres e hijos: Efesios 6, 1-4</h3>
     <p>
       <em
-        >«Hĳos, obedezcan a sus padres en el Señor porque esto es lo justo, ya
+        >«Hijos, obedezcan a sus padres en el Señor porque esto es lo justo, ya
         que el primer madamiento que contiene una promesa es este: Honra a tu
         padre y a tu madre, para que seas feliz y tengas una larga vida en la
-        tierra. Padres, no irriten a sus hĳos; al contrario, edúquenlos,
+        tierra. Padres, no irriten a sus hijos; al contrario, edúquenlos,
         corrigiéndolos y aconsejándolos, según el espíritu del Señor.»</em
       >
     </p>
@@ -567,9 +567,9 @@
       autoridad solidaria acepta el hecho que somos educados por nuestros
       propios educandos? El explorador es corresponsable en su educación, ¿Cómo
       se relaciona esto con lo que nos dice Freire? Finalmente leemos la
-      siguiente aﬁrmación de María Mazzarello: “Corregid, advertid siempre, pero
+      siguiente afirmación de María Mazzarello: “Corregid, advertid siempre, pero
       compadeced de corazón y usad caridad con todas” (C25, 2) ¿En que se
-      relaciona con el Sistema Preventivo de Don Bosco? ¿A que se reﬁere con
+      relaciona con el Sistema Preventivo de Don Bosco? ¿A que se refiere con
       caridad?
     </p>
   </body>
