--- a/src/17-solidaridad.html
+++ b/src/17-solidaridad.html
@@ -23,7 +23,7 @@
       por la vida de los demás Batallones, a participar en reuniones en el nivel
       local, regional, inspectorial, nacional y a nivel del M.E.S.; renunciando,
       si es necesario, a sus actividades e intereses particulares por el bien de
-      la Cmunidad Exploradoril. <strong>Inc 43</strong> También se maniﬁesta
+      la Cmunidad Exploradoril. <strong>Inc 43</strong> También se manifiesta
       esta solidaridad con la comunidad social que rodea al Explordor/a o
       Batallón/ Escuadra. Por tanto, participa de las iniciativas que surjan
       para el bien de la sociedad.
@@ -46,7 +46,7 @@
     <p>nas según su condición social-econónimica.</p>
     <p>
       Generalmente muestran indiferencia ante un compañero que presenta alguna
-      diﬁcultad
+      dificultad
     </p>
     <p>en su vida.</p>
     <p>
@@ -62,7 +62,7 @@
     <p>
       En el comienzo del camino exploradoril, la “Buena Acción” representa la
       síntesis, concreta y sencilla, de la actividad solidaria. Ya en
-      Rastreadores-Hogueras el desaﬁo debe ser de mayor madurez: “Colaborando
+      Rastreadores-Hogueras el desafio debe ser de mayor madurez: “Colaborando
       con la construcción de un mundo mejor en su comunidad”. Intentar
     </p>
     <p>
@@ -98,7 +98,7 @@
     <p>“Un día fue a visitar al Padre Cottolengo el Padre Juan Bosco.</p>
     <ul>
       <li>
-        -Padre Cottolengo -dĳo el joven Bosco- vengo a pedirle un consejo: ¿qué
+        -Padre Cottolengo -dijo el joven Bosco- vengo a pedirle un consejo: ¿qué
         remedio debo recmendar a las personas que vienen a contar que están
         aburridas de la vida, desesperadas y llenas de mal genio por la pobreza,
         por las enfermedades o por el mal trato que les dan los demás?- Mira,
@@ -106,7 +106,7 @@
         desesperación es el mal moderno más común de todos. Para combatirlo, nos
         ha mandado Dios un gran remedio siepre antiguo y siempre nuevo: pensar
         en el cielo que nos espera. No olvides nunca que: un pedacito de cielo
-        lo arregla todo.” Como dĳo el Padre Cottolengo, hay que pensar en un
+        lo arregla todo.” Como dijo el Padre Cottolengo, hay que pensar en un
         cielo que nos espera. Sin embargo, avazando un poco más, el sacerdote
         terminó su respuesta aclarando que un pedacito de cielo lo arregla todo.
         Es importante considerar que todos tenemos un pedazito del Reino de los
@@ -123,7 +123,7 @@
     <p>
       <strong>La solidaridad exploradoril-salesiana:</strong> La solidaridad
       exploradoril, y por ende salesiana, supone a la vez una acción de
-      compasión ante el prójimo y una búsqueda de eﬁcacia en el compartir con el
+      compasión ante el prójimo y una búsqueda de eficacia en el compartir con el
       otro. Se nos propone que nos integremos en la realidad social que nos toca
       vivir, que sepamos dar respuesta a las distintas situaciones que día a día
       vivimos, tomando actitudes concretas ante nuestros hermanos. Respuesta y
@@ -150,7 +150,7 @@
     <h3>- Reﬂexión:</h3>
     <p>
       ¿Cuáles son las “necesidades” de las que habla esta Palabra? ¿Cómo crees
-      que se relacionan Fe y Obras? Nuestra misión, lo que tiene que deﬁnir
+      que se relacionan Fe y Obras? Nuestra misión, lo que tiene que definir
       nuestra Fe, es transformar los lugares en los que nos movemos, en nuestra
       familia, escuela, amigos y comunidad. Transformación cocretada en obras,
       muestra y alimento de nuestra Fe. Esta es la opción de vida que nos
@@ -183,7 +183,7 @@
       </li>
       <li>
         -Reﬂexionaron sobre la actitud solidaria frente a las necesidades que
-        hay a su alrededor mediante una acción concreta y oración eﬁcaz.
+        hay a su alrededor mediante una acción concreta y oración eficaz.
       </li>
     </ul>
     <h2>ACTIVIDADES CENTRALES</h2>
@@ -228,7 +228,7 @@
       </li>
       <li>
         <strong>4.</strong> Que cada uno diga las tres principales necesidades
-        que descubrió. Ir anotándolas en un aﬁche o pizarrón y conversar sobre
+        que descubrió. Ir anotándolas en un afiche o pizarrón y conversar sobre
         sus causas, consecuencias y gravedad.
       </li>
       <li>
@@ -240,7 +240,7 @@
         que interesante organizar una actividad solidaria concreta que le dé
         respuesta a lo visto durante toda la actividad Criterios para
         seleccionar la actividad: -Lo más importante es que la respuesta
-        signiﬁque un esfuerzo solidario del grupo (no de sus papás). -Que sea
+        signifique un esfuerzo solidario del grupo (no de sus papás). -Que sea
         algo que esté a su alcance y bien concreto. -Conviene una actividad más
         de “compartir” que de sólo “dar” (de lo que sobra) -Puede ser una
         actividad en conjunta para ir de visita a un comedor comunitario,
@@ -260,7 +260,7 @@
       individualismo domina muchas veces nuestras acciones y esfuerzos, debemos
       por lo tanto sensibilizar nuestros corazones y renunciando a nosotros,
       llegar a los demás. Es necesario descubrir la realidad en la que vivimos
-      para que sea posible hacer algo para modﬁcarla, debemos ser conscientes de
+      para que sea posible hacer algo para modficarla, debemos ser conscientes de
       que en todos los lugares en que nos movemos existen per- sonas que
       necesitan de nuestra solidaridad y que siempre podemos hacer algo más por
       alguien.
@@ -269,7 +269,7 @@
       <strong>Constructor de un mundo mejor:</strong> El artículo 10 de nuestra
       Ley de Honor nos marca el camino para vivir el crecimiento como
       exploradores "colaborando con la construcción de un mundo mejor en su
-      comunidad". Reaﬁrmar en nuestros corazones nuestra promesa; romper con la
+      comunidad". Reafirmar en nuestros corazones nuestra promesa; romper con la
       apatía general, con el todo es igual; revivir la fuerza que nos hace
       intentar construir un mundo mejor siguiendo los valores exploradoriles es,
       hoy y siempre, nuestro mayor desafío. Es posible poner nuestra vida en las
@@ -284,7 +284,7 @@
     <h3>"Parábola de los talentos" (Lc 19,12-27)</h3>
     <p>
       <em
-        >«Él les dĳo: “Un hombre de familia noble fue a un país lejano para
+        >«Él les dijo: “Un hombre de familia noble fue a un país lejano para
         recibir la investidura real y regresar en seguida. Llamó a diez de sus
         servidores y les entró cien monedas de plata a cada uno, diciéndoles:
         ‘Háganlas producir hasta que yo vuelva’. Pero sus conciudadanos lo
@@ -292,19 +292,19 @@
         queremos que este sea nuestro rey’. Al regresar, investido de la
         dignidad real, hizo llamar a los servidores a quienes había dado el
         dinero, para saber lo que había ganado cada uno. El primero se presentó
-        y le dĳo: ‘Señor, tus cien monedas de plata han producido diez veces
-        más’. ‘Está bien, buen servidor, le respondió, ya que has sido ﬁel en
+        y le dijo: ‘Señor, tus cien monedas de plata han producido diez veces
+        más’. ‘Está bien, buen servidor, le respondió, ya que has sido fiel en
         tan poca cosa, recibe el gbierno de diez ciudades’. Llegó el segundo y
-        el dĳo: ‘Señor, tus cien monedas de plata han producido cinco veces
-        más’. A él también le dĳo: ‘Tú estarás al frente de cinco ciudades’.
-        Llegó el otro y le dĳo: ‘Señor, aquí tienes tus cien monedas de plata,
+        el dijo: ‘Señor, tus cien monedas de plata han producido cinco veces
+        más’. A él también le dijo: ‘Tú estarás al frente de cinco ciudades’.
+        Llegó el otro y le dijo: ‘Señor, aquí tienes tus cien monedas de plata,
         que guardé envueltas en un pañuelo. Porque tuve miedo de ti, que eres un
         hombre exigente, que quieres percibir lo que no has depositado y
         cosechar lo que no has sembrado’. Él le respondió: ‘Yo te juzgo por tus
         propias palabras, mal servidor. Si sabías que soy un hobre exigente, que
         quiero percibir lo que no deposité y cosechar lo que no sembré, ¿por qué
         no entregaste mi dinero en préstamo? A mi regreso yo lo hubiera
-        recuperado con intereses’ Y dĳo a los que estaban allí: ‘Quítenle las
+        recuperado con intereses’ Y dijo a los que estaban allí: ‘Quítenle las
         cien monedas y dénselas al que tiene diez veces más’. ‘¡Pero, señor, le
         respondieron, ya tiene mil!’. Les aseguro que al que tiene, se le dará;
         pero al que no tiene, se le quitará aún lo que tiene. En cuanto a mis
@@ -405,7 +405,7 @@
       </li>
       <li>
         <strong>6.</strong> A mitad del día, reunirse y conversar sobre cómo les
-        fue con la propuesta hecha: ¿Qué podemos hacer nosotros? ¿Qué signiﬁca
+        fue con la propuesta hecha: ¿Qué podemos hacer nosotros? ¿Qué significa
         en nuestra vida la Buena Acción? ¿Quién los necesita? ¿Cómo respondemos
         como grupo?
       </li>
@@ -420,7 +420,7 @@
       motivaciones de nuestros actos, si es por nuestro prójimo o porque nos
       sentimos bien. No es posible llegar a ser una persona solidaria si solo
       pensamos en nosotros mismos. Algunas personas aparentan trabajar por el
-      prójimo, pero en realidad buscan su beneﬁcio o satisfacción personal o
+      prójimo, pero en realidad buscan su beneficio o satisfacción personal o
       grupal, sin tener en cuenta a los demás. Al tratar de asumir actitudes
     </p>
     <p>
@@ -495,7 +495,7 @@
     <p><em>horizontal e implica respeto mutuo” Eduardo Galeano</em></p>
     <ul>
       <li>
-        - ¿Cómo ejempliﬁcarías caridad y solidaridad, según las deﬁniciones de
+        - ¿Cómo ejemplificarías caridad y solidaridad, según las definiciones de
         Galeano?
       </li>
       <li>
