--- a/src/18-santidad.html
+++ b/src/18-santidad.html
@@ -34,7 +34,7 @@
         <strong>60 b)</strong> S
         <em
           >e busca formar personas en la acepción integral del término, mediante
-          el Exploradoris- mo que nunca es un ﬁn en sí mismo.</em
+          el Exploradoris- mo que nunca es un fin en sí mismo.</em
         >
       </li>
       <li>
@@ -65,7 +65,7 @@
       <li>
         <strong>66. b)</strong>
         <em
-          >Por eso, el/la Explorador/a aprende a seguir el camino del sacriﬁcio,
+          >Por eso, el/la Explorador/a aprende a seguir el camino del sacrificio,
           voluntario y credor, y del amor concreto al prójimo, realizado en el
           ambiente en que le toca vivir. Ama a su Patria y promueve activamente
           el bien común.</em
@@ -90,7 +90,7 @@
     </p>
     <p>
       Los rastreadores-hogueras entienden que los santos son sus amigos y que
-      pueden conﬁar en ellos para que intercedan ante Dios cuando tengan alguna
+      pueden confiar en ellos para que intercedan ante Dios cuando tengan alguna
       necesidad.
     </p>
     <p>
@@ -107,7 +107,7 @@
       Es necesario acercar a los adolescentes y jóvenes una propuesta de
       santidad creíble, cercana y amigable que tenga que ver más con la
       actividad y el servicio, y menos con la pasividad, el enclaustramiento y
-      el alejamiento del mundo. Al ﬁn y al cabo, Jesús nos quiere al servicio
+      el alejamiento del mundo. Al fin y al cabo, Jesús nos quiere al servicio
       del prójimo, no alejados del prójimo; por eso la propuesta de santidad
       cristiana-salesiana-explradoril no puede apartarse de lo que vivimos
       cotidianamente. Para esto será necesario bajar algunos santos de las
@@ -130,7 +130,7 @@
       ronda
     </p>
     <ul>
-      <li>- ¿Qué signiﬁca “ser santo” para vos?</li>
+      <li>- ¿Qué significa “ser santo” para vos?</li>
       <li>- ¿Alguna vez te propusiste ser santo?</li>
       <li>- ¿Le propondrías ser santos a tus chicos? ¿Por qué?</li>
       <li>
@@ -172,7 +172,7 @@
       “pobres de corazón” y tienen “el corzón de un niño” como Jesús describe en
       el Evangelio, por eso necesitan de Dios. La soberbia nos impide reconocer
       que necesitamos ayuda para seguir creciendo, la soberbia nos hace creer
-      que somos autosuﬁcientes… que podemos solos. Ser humilde es reconocer los
+      que somos autosuficientes… que podemos solos. Ser humilde es reconocer los
       propios errores y sentirse necesitado de Dios y de la ayuda que nos brinda
       a través de los hermano. El santo trata de llevar en su corazón los
       sentimientos de amor, solidaridad, servicio y entrega que tiene el Corazón
@@ -184,7 +184,7 @@
       Bosco tiene que ver con eso, es una democratización de la santidad para
       entender que la santidad es alcanzable si tratamos de hacer las cosas bien
       y con amor todos los días, imitado a Jesús con voluntad de
-      superación-paciencia-perseverancia, aún en las diﬁcultades. Don Bosco es
+      superación-paciencia-perseverancia, aún en las dificultades. Don Bosco es
       un padre espitirual para los jóvenes porque les brinda consejos, estos
       consejos son un don del Espíritu Santo que ilumina la vida. Por eso es tan
       necesario que tanto animadores como chicos contemos con un “asesor o
@@ -202,8 +202,8 @@
     <p>
       <em
         >«Por lo tanto, manténganse con el espíritu alerta, vivan sobriamente y
-        pongan toda su espranza en la gracia que recibirán cuando se maniﬁeste
-        Jesucristo. Como hĳos obedientes, no procedan de acuerdo con los malos
+        pongan toda su espranza en la gracia que recibirán cuando se manifieste
+        Jesucristo. Como hijos obedientes, no procedan de acuerdo con los malos
         deseos que tenían antes, mientras vivían en la ignoracia. Así como aquel
         que los llamó es santo, también ustedes sean santos en toda su conducta,
         de acuerdo con lo que está escrito: “Sean santos, porque yo soy
@@ -241,7 +241,7 @@
     <h2>OBJETIVOS CUMPLIDOS</h2>
     <ul>
       <li>
-        - Los rastreadores-hogueras entendieron que ser santo, signiﬁca ser
+        - Los rastreadores-hogueras entendieron que ser santo, significa ser
         "distinguido", "destaca- do" y que todos están llamados a distinguirse
         de la mediocridad.
       </li>
@@ -269,7 +269,7 @@
     <h2>ACTIVIDADES</h2>
     <ol>
       <li><strong>1- Refugios santos</strong></li>
-      <li><strong>2- Oﬁcios y tareas</strong></li>
+      <li><strong>2- Oficios y tareas</strong></li>
     </ol>
     <h3>ACTIVIDAD N° 1-REFUGIOS SANTOS</h3>
     <h3>- Orientaciones:</h3>
@@ -284,10 +284,10 @@
       primero un esquema o proyecto del refugio, teniendo en cuenta los
       materiales disponibles, el terreno, las características que se le quiera
       dar y fundamentalmente su utilidad. A medida que van discutiendo el
-      esquema, comentar sobre posibles diﬁcultades y ver cómo proponen
+      esquema, comentar sobre posibles dificultades y ver cómo proponen
       solucionarlas Armar el refugio entre todos. Una vez terminado, preguntar:
     </p>
-    <p>¿Qué diﬁcultades, problemas o límites se presentaron?</p>
+    <p>¿Qué dificultades, problemas o límites se presentaron?</p>
     <p>¿Qué aciertos hubo?</p>
     <p>¿Qué tan bien hecho quedó?</p>
     <p>
@@ -297,7 +297,7 @@
       entre todos lo relacionado con el armado del refugio.
     </p>
     <p>¿Cómo eran ellos y su ambiente?</p>
-    <p>¿Qué diﬁcultades encontraron?</p>
+    <p>¿Qué dificultades encontraron?</p>
     <p>¿Qué aciertos tuvieron?</p>
     <p>¿Por qué creen que son reconocidos como santos?</p>
     <p>
@@ -336,14 +336,14 @@
       El temperamento nace con cada uno, no se elige. Es un regalo de Dios que
       viene con la vida, que para cada persona. Cada temperamento tiene aspectos
       positivos y negativos. La educción del propio temperamento se denomina
-      carácter. Al carácter lo vamos modiﬁcando, contruyendo y puliendo día a
+      carácter. Al carácter lo vamos modificando, contruyendo y puliendo día a
       día con nuestro esfuerzo, con la ayuda de la comunidad, la familia y la
       Gracia de Dios. Las oportunidades y condicionamientos sociales inﬂuyen en
       el desarrollo y maduración de cada uno. En ellos también hay aspectos que
       escapan a nuestras decisiones y otros en los cuales tenemos plena
       responsabilidad. La realización como persona implica valorar y potenciar
       las características o situaciones favorables y tratar de asumir y superar
-      las diﬁcultades o realidades adversas, tanto en lo que hace a la
+      las dificultades o realidades adversas, tanto en lo que hace a la
       personalidad como a la relación con el ambiente.
     </p>
     <p>
@@ -354,9 +354,9 @@
       Una persona feliz es una persona realizada, que está contenta con su vida
       que la vive plnamente, con todos sus valores. La alegría verdadera,
       procede de una conducta adecuada, solidaria, respetuosa y no caprichosa,
-      superﬁcial o a costa de la infelicidad ajena.
+      superficial o a costa de la infelicidad ajena.
     </p>
-    <p>Estar alegres aún en las diﬁcultades, es algo que nos caracteriza.</p>
+    <p>Estar alegres aún en las dificultades, es algo que nos caracteriza.</p>
     <p>
       Una persona "santa" es alguien que se "distingue" por su forma de vivir,
       por sus gestos y acciones, pero sin aislarse del mundo ni de sus
@@ -364,9 +364,9 @@
       solidariamente.
     </p>
     <p>
-      Es alguien que está en medio de diﬁcultades y problemas, pero que sabe
+      Es alguien que está en medio de dificultades y problemas, pero que sabe
       aportar su granito de arena cuando hace falta en la construcción de un
-      mundo mejor. Es alguien que vive cada día en medio de sus diﬁcultades,
+      mundo mejor. Es alguien que vive cada día en medio de sus dificultades,
       desafíos y situaciones, con sus propios defectos y virtudes, como todos,
       pero no se deja llevar por la mediocridad y la comodidad, sino que procura
       superarlas.
@@ -381,7 +381,7 @@
       decisión que muve a la persona a superar sus limitaciones, fragilidades y
       defectos en búsqueda de un ideal. No hay que dejarse caer en la
       mediocridad cómoda del "está todo bien" que mira todo con la
-      superﬁcialidad y falta de compromiso que en muchos lados "venden" como
+      superficialidad y falta de compromiso que en muchos lados "venden" como
       felicidad. No se
     </p>
     <p>
@@ -392,8 +392,8 @@
       todo lo que tenía y que "aprovechó" su vida, viviéndola intensamente.
     </p>
     <p>
-      La ley de Honor nos propone "ser artíﬁces" de nuestra propia vida. El
-      artíﬁce se identiﬁca con artista, creador, productor, protagonista de la
+      La ley de Honor nos propone "ser artífices" de nuestra propia vida. El
+      artífice se identifica con artista, creador, productor, protagonista de la
       propia existencia, siempre con la ayuda divina, sin la cual nunca
       alcanzaremos la meta. Es preciso trabajar con perseverancia y audacia, sin
       dejarse llevar por los ejemplos contrarios que nos presenta la sociedad en
@@ -405,8 +405,8 @@
     <p>
       <em
         >«Por lo tanto, manténganse con el espíritu alerta, vivan sobriamente y
-        pongan toda su eperanza en la gracia que recibirán cuando se maniﬁeste
-        Jesucristo. Como hĳos obedientes, no procedan de acuerdo con los malos
+        pongan toda su eperanza en la gracia que recibirán cuando se manifieste
+        Jesucristo. Como hijos obedientes, no procedan de acuerdo con los malos
         deseos que tenían antes, mientras vivían en la inorancia. Así como aquel
         que los llamó es santo, también ustedes sean santos en toda su conducta,
         de acuerdo con lo que está escrito: “Sean santos, porque yo soy
@@ -431,9 +431,9 @@
     <p>¿Cómo hicieron sus tareas?</p>
     <p>
       ¿Qué pensaban de las que hacían los otros? Leer el texto completo de "Los
-      santos del siglo XXI" y relacionar los oﬁcios de cada uno con las
+      santos del siglo XXI" y relacionar los oficios de cada uno con las
       actividades realizadas. Buscar también anécdotas de cada uno o ejemplos de
-      personas conocidas en relación a los oﬁcios de los otros santos del texto.
+      personas conocidas en relación a los oficios de los otros santos del texto.
     </p>
     <p>
       <strong>Los santos del siglo XXI</strong> Breves reseñas de vidas de
@@ -441,7 +441,7 @@
     </p>
     <p>
       <strong>San «Taquito» López:</strong> Jugador de futbol. Su vida está
-      llena de milagros. El mejor de todos fue el gol que metió en una ﬁnal, gol
+      llena de milagros. El mejor de todos fue el gol que metió en una final, gol
       recordado como el milagro del siglo. Pero lo más milagroso de todo fue la
       recidumbre con que jugaba sin descontroles y la honestidad con que
       aceptaba las sanciones del árbitro, y que pedía disculpas cuando le
@@ -476,7 +476,7 @@
     </p>
     <p>
       <strong>Santa Irina Perrari:</strong> Quiosquera. Siempre de buen humor.
-      Entre sus numerosos milagros ﬁguran tener siempre cambio y dárselo a todo
+      Entre sus numerosos milagros figuran tener siempre cambio y dárselo a todo
       aquel que se lo pedía y no vender alcohol a los menores. A pesar del
       ejemplo de sus vecinos nunca vendió productos truchos. Plantear:¿Qué
       personas o qué tareas son más importantes que otras?
@@ -502,9 +502,9 @@
         enojan, no se dejen arrastrar al pecado ni pemitan que la noche los
         sorprenda enojados, dando así ocasión al demonio. El que robaba, que
         deje de robar y se ponga a trabajar honestamente con sus manos, para
-        poder ayudar al que está necesitado. No proﬁeran palabras
+        poder ayudar al que está necesitado. No profieran palabras
         inconvenientes; al contrario, que sus palabras sean siempre buenas, para
-        que resulten ediﬁcantes cuando sea necesario y hagan bien a aquellos que
+        que resulten edificantes cuando sea necesario y hagan bien a aquellos que
         las escuchan. No entristezcan al Espíritu Santo de Dios, que los ha
         marcado con un sello para el día de la redención. Eviten la amargura,
         los arrebatos, la ira, los gritos, los insultos y toda clase de maldad.
@@ -552,13 +552,13 @@
     </p>
     <p>
       <em
-        >y conﬁanza, mansedumbre y templanza. Frente a estas cosas, la Ley está
+        >y confianza, mansedumbre y templanza. Frente a estas cosas, la Ley está
         demás, porque los que</em
       >
     </p>
     <p>
       <em
-        >pertenecen a Cristo Jesús han cruciﬁcado la carne con sus pasiones y
+        >pertenecen a Cristo Jesús han crucificado la carne con sus pasiones y
         sus malos deseos.</em
       >
     </p>
@@ -592,11 +592,11 @@
     <h3>- Se reza y se celebra:</h3>
     <p>
       Invitamos a formar una ronda alrededor de una vela encendida y de un
-      cruciﬁjo. Hacer una oración para pedirle luz a Dios. Preguntarle al grupo
+      crucifijo. Hacer una oración para pedirle luz a Dios. Preguntarle al grupo
       para que cada uno se responda a sí mismo:
     </p>
     <p>
-      ¿Qué signiﬁca para mí ser santo? (Dejar un espacio de silencio para que
+      ¿Qué significa para mí ser santo? (Dejar un espacio de silencio para que
       cada uno pueda “rumiar” en silencio su respuesta)
     </p>
     <p>
@@ -606,7 +606,7 @@
       Jesús las virtudes que lo ayuden a mejorar en este camino. Al terminar de
       escribir dejan el papel en el medio de la ronda al pie de la cruz. Cuando
       todos terminan, cada uno toma un papel del centro de la ronda (que no sea
-      el suyo) y lee la oración en voz alta. De esta manera llegamos al ﬁnal del
+      el suyo) y lee la oración en voz alta. De esta manera llegamos al final del
       encuentro rezando los unos por los otros. Cerramos con la oración del
       explorador o cantando la canción “El ideal”
     </p>
@@ -616,8 +616,8 @@
     </p>
     <p>Amar, amar, morir por los demás y así vivir y no volver atrás. [bis]</p>
     <p>
-      Hoy ya comprendo al ﬁn que debo morir si quiero nacer. Pues es muriendo
-      que al ﬁn entraré en la eternidad.
+      Hoy ya comprendo al fin que debo morir si quiero nacer. Pues es muriendo
+      que al fin entraré en la eternidad.
     </p>
     <p>
       <strong><em>Tomando mate</em></strong>
