--- a/src/19-testimonio.html
+++ b/src/19-testimonio.html
@@ -17,8 +17,8 @@
       <li>
         <strong>27</strong>
         <em
-          >El/La Explorador/a, lleno de conﬁanza y optimismo, imprime a todos
-          los aspectos de la vida, una nota de ﬁesta, iluminando a todos con su
+          >El/La Explorador/a, lleno de confianza y optimismo, imprime a todos
+          los aspectos de la vida, una nota de fiesta, iluminando a todos con su
           cálido testimonio, fruto de esperanza cristiana, por- que hace suya la
           exhortación de San Pablo: “Estad siempre alegres” (Tes. 5, 16;
           Filipenses 4, 4).</em
@@ -36,7 +36,7 @@
       <li>
         <em
           >33 No se hace sólo con las palabras, sino sobre todo con el
-          testimonio y el ejemplo de la vida que se maniﬁesta en la aceptación y
+          testimonio y el ejemplo de la vida que se manifiesta en la aceptación y
           respeto del otro, tanto de parte de los Jefes/as como de los
           Exploradores/ras entre sí.</em
         >
@@ -140,18 +140,18 @@
     <h3>Palabra de Dios: Jn. 13,1.4-8.12-17 El lavatorio de pies.</h3>
     <p>
       <em
-        >«Antes de la ﬁesta de Pascua, sabiendo Jesús que había llegado la hora
+        >«Antes de la fiesta de Pascua, sabiendo Jesús que había llegado la hora
         de pasar de este mundo al Padre, él, que había amado a los suyos que
-        quedaban en el mundo, los amó hasta el ﬁn. (...) se levantó de la mesa,
+        quedaban en el mundo, los amó hasta el fin. (...) se levantó de la mesa,
         se sacó el manto y tomando una toalla se la ató a la cintura. Luego echó
         agua en un recipiente y empezó a lavar los pies a los discípulos y a
         secárselos con la toalla que tenía en la cintura. Cuando se acercó a
-        Simón Pedro, este le dĳo: “¿Tú, Señor, me vas a lavar los pies a mí?”.
+        Simón Pedro, este le dijo: “¿Tú, Señor, me vas a lavar los pies a mí?”.
         Jesús le respondió: “No puedes comprender ahora lo que estoy haciendo,
-        pero después lo comprenderás”. “No, le dĳo Pedro, ¡tú jamás me lavarás
+        pero después lo comprenderás”. “No, le dijo Pedro, ¡tú jamás me lavarás
         los pies a mí!”. Jesús le respondió: “Si yo no te lavo, no podrás
         compartir mi suerte”. (…) Después de haberles lavado los pies, se puso
-        el manto, volvió a la mesa y les dĳo: “¿comprenden lo que acabo de hacer
+        el manto, volvió a la mesa y les dijo: “¿comprenden lo que acabo de hacer
         con ustedes? Ustedes me llaman Maestro y Señor, y tienen razón,
         porque</em
       >
@@ -210,7 +210,7 @@
     </p>
     <p>
       <em
-        >Tuve hambre y me diste de comer. «Cuando el Hĳo del hombre venga en su
+        >Tuve hambre y me diste de comer. «Cuando el Hijo del hombre venga en su
         gloria rodeado de</em
       >
     </p>
@@ -282,7 +282,7 @@
       Jesús? Que aceptemos su amistad, sirviendo con amor y alegría a los demás,
       donde nos toque estar. Nuestro Dios es Buen Pastor, Él nos viene a buscar
       y nos invita a seguirlo en el camino de la Verdad y de la Vida. ¿Nosotros
-      somos ﬁeles a la imagen de Jesús Buen Pastor siendo imagen de Cristo para
+      somos fieles a la imagen de Jesús Buen Pastor siendo imagen de Cristo para
       las personas que viven a nuestro alrededor? El camino de la verdad es
       comprometernos con las cosas que valen la pena vivir. Jesús es nuestro
       gran Sol porque la Luz de su ejemplo es una llama de Amor imenso que sale
@@ -360,7 +360,7 @@
       esfuerzo físico. En el destino de ese servicio, debe haber una imagen de
       Jesús que los esté esperando. Una vez que lo hayan terminado, invitarlos a
       ubicarse alrededor y preguntarles con respecto al camino largo y
-      diﬁcultoso:
+      dificultoso:
     </p>
     <ul>
       <li>- ¿Se desanimaron o emprendieron el camino con entusiasmo?</li>
@@ -368,7 +368,7 @@
         - ¿Notaron que algunos compañeros les costaba o se cansaban mucho?
       </li>
       <li>- ¿Se ayudaron o cada uno siguió sin darle mucha importancia?</li>
-      <li>- ¿La ayuda fue por su cuenta o porque se los dĳeron?</li>
+      <li>- ¿La ayuda fue por su cuenta o porque se los dijeron?</li>
     </ul>
     <h3>- Reﬂexión:</h3>
     <p>Plantear relacionando con lo conversado al principio del Día:</p>
@@ -387,7 +387,7 @@
       los acontecimientos que son los que expresan concretamente de la que la
       palabra insinúa. Si todos los valores e ideales de los que hablamos en
       numerosas oportunidades no se transforman en actitudes concretas, queda
-      como una palabra vacías que no permite veriﬁcar aquello que proponen. Por
+      como una palabra vacías que no permite verificar aquello que proponen. Por
       lo tanto nuestra coherencia consiste en protagonizar hechos que permitan
       experimentar lo que las palabras dicen. Este compromiso que asumimos lo
       hacemos realidad con el esfuerzo diario de nuestras ma- nos. Así estamos
@@ -429,7 +429,7 @@
       noche a la mñana Dios transforme los aspectos de la realidad que nos
       duelen: la falta de justicia, el habre, el desempleo, la falta de
       solidaridad, las discordias, las guerras, la corrupción... Pero Jesús es
-      el Emanuel, que signiﬁca “Dios con nosotros”. Jesús quiere cambiar las
+      el Emanuel, que significa “Dios con nosotros”. Jesús quiere cambiar las
       realidades que nos duelen “con nosotros”. Esta actividad invita a los
       Rastreadores / Hogueras a saberse trabajadores del Reino de Dios que se
       construye con el trabajo cotidiano, que como la levadu- ra crece en
@@ -465,7 +465,7 @@
       a nuestras comunidades, la masa se eleva y crece en silencio; sino lo
       hacemos, queda igual. Diariamente contribuimos a construir una vida mejor
       en nuestras comunidades (casa, escula, etc.) con nuestro pequeño esfuerzo
-      de todos los días, con actitudes de servicio que manﬁestan el Amor de Dios
+      de todos los días, con actitudes de servicio que manfiestan el Amor de Dios
       corriendo por nuestras venas. Somos instrumentos de Dios al servicio de
       los demás. Diariamente amasamos el Reino de Dios en nuestro corazón,
       “construyendo” con el Amor de Jesús un mundo mejor. Nosotros ponemos
@@ -487,7 +487,7 @@
     <h3>Palabra de Dios: "La levadura en la masa" (Lc. 13, 20-21)</h3>
     <p>
       <em
-        >«Jesús dĳo también: “¿Con qué podré comparar el Reino de Dios? Se
+        >«Jesús dijo también: “¿Con qué podré comparar el Reino de Dios? Se
         parece a un poco de leva- dura que una mujer mezcló con gran cantidad de
         harina, hasta que fermentó toda la masa.”»</em
       >
@@ -497,14 +497,14 @@
     <p>
       La actividad pretende que los Rastreadores / Hogueras entiendan que el
       bien y el mal vienen del corazón de cada persona y nuestra mejor opción es
-      imitar a Jesús amando a todos, hasta el ﬁnal.
+      imitar a Jesús amando a todos, hasta el final.
     </p>
     <h3>- Actividad:</h3>
     <p>
-      Buscar y recortar de ﬁguras de diarios y revistas, que muestren actitudes
+      Buscar y recortar de figuras de diarios y revistas, que muestren actitudes
       buenas y malas de personas, en las que pueda distinguirse en donde hay
       verdadero testimonio y donde no. Cada uno chicos deberá seleccionar la
-      ﬁgura que más les llame la atención. Comentar en el grupo porqué la
+      figura que más les llame la atención. Comentar en el grupo porqué la
       eligieron y qué opinan de ella. Preguntar:- ¿Ven en la vida diaria y en su
       vida, alguna de estas actitudes?
     </p>
@@ -527,9 +527,9 @@
       acoger este don con disponibilidad total y a jugarse en los distintos
       ámbitos de la vida por el proyecto de Dios, que es el proyecto por la
       Vida, por la dignidad humana de cada persona y la felicidad eterna de cada
-      uno/a de sus hĳos/as.Jesús nos invita a ser testigo de su amor, a ser
+      uno/a de sus hijos/as.Jesús nos invita a ser testigo de su amor, a ser
       esperanza viva entre todos nuestros hermanos y para poder ser testimonio
-      de su misericordia necesitamos conocerlo y tenerlo como nuestro más ﬁel
+      de su misericordia necesitamos conocerlo y tenerlo como nuestro más fiel
       Amigo, necesitamos vivir en comunión permanente con El (en la oración, la
       Eucaristía, la Palabra de Dios y las buenas obras) para llevar con
       nosotros los sentimientos de Jesús que sigue caminando este mundo junto al
@@ -552,15 +552,15 @@
     <h3>Palabra de Dios: El amor a los enemigos. (Mt. 5, 38-45)</h3>
     <p>
       <em
-        >«Ustedes han oído que se dĳo: "Ojo por ojo y diente por diente". Pero
+        >«Ustedes han oído que se dijo: "Ojo por ojo y diente por diente". Pero
         yo les digo que no hagan frente al que les hace mal: al contrario, si
         alguien te da una bofetada en la mejilla dercha, preséntale también la
         otra. Al que quiere hacerte un juicio para quitarte la túnica, déjale
         también el manto; y si te exige que lo acompañes un kilómetro, camina
         dos con él. Da al que te pide, y no le vuelvas la espalda al que quiere
-        pedirte algo prestado. Ustedes han oído que se dĳo: "Amarás a tu
+        pedirte algo prestado. Ustedes han oído que se dijo: "Amarás a tu
         prójimo" y odiarás a tu enemigo. Pero yo les digo: Amen a sus enemigos,
-        rueguen por sus perseguidores; así serán hĳos del Padre que está en el
+        rueguen por sus perseguidores; así serán hijos del Padre que está en el
         cielo, porque él hace salir el sol sobre malos y buenos y hace caer la
         lluvia sobre justos e injustos.»</em
       >
@@ -607,12 +607,12 @@
       concreto y de la sociedad. Que busquemos con imaginación creadora nuevos
       modos de vivir haciendo relidad su anuncio del Reino de Dios, realizar el
       bien y construir un mundo mejor, donde la pala- bra sea creíble y las
-      personas conﬁables.
+      personas confiables.
     </p>
     <p>
       Una forma de dar testimonio como cristiano es en la familia. El amor y la
       entrega a Dios y a sus hermanos debe comenzar por los seres que Dios puso
-      como signo y ﬁgura de su presencia, para lograr así la unidad y el amor.
+      como signo y figura de su presencia, para lograr así la unidad y el amor.
       Promover los lazos familiares como cristiano, en mi famlia, desde mi
       realidad. Darle lugar al diálogo, al entendimiento ya la sinceridad,
       demostrar el cariño, que los demás puedan ver a Jesús en mi. Tenemos que
@@ -664,7 +664,7 @@
     <p>
       Sentarse en ronda en torno al fuego y comenzar a cantar. Poner un poco de
       agua a calentar y tener listo un mate vacío. Mientras tanto ir creando un
-      clima de respeto y conﬁanza. Hacer
+      clima de respeto y confianza. Hacer
     </p>
     <p>
       pasar el mate de mano en mano y que cada uno ponga una cucharada de yerba
@@ -678,7 +678,7 @@
       testimonio y comentarlo entre todos.
     </p>
     <p>
-      Que cada uno elĳa la frase de Angelelli que más le haya llegado y la ponga
+      Que cada uno elija la frase de Angelelli que más le haya llegado y la ponga
       en común como oración comunitaria. Si se hizo la cartelera, seleccionar
       alguna de las frases y escribirla en ella. Terminar cantando "Hay que
       seguir andando"
@@ -700,7 +700,7 @@
     <p>muéstrame tu modo de vivir</p>
     <p>Si te dices teólogo</p>
     <p>no me hables de teología</p>
-    <p>muéstrame qué signiﬁca Dios en tu vida.</p>
+    <p>muéstrame qué significa Dios en tu vida.</p>
     <p>No nos engañemos huyendo con el ruido de palabras</p>
     <p>huecas del vértigo que nos causan los vacíos de</p>
     <p>nuestra vida.</p>
@@ -723,7 +723,7 @@
       corazón esté siempre vacío, siempre con ganas de aprender, corazón de
       calabaza que sabe y conoce su pobreza, corazón de gente que acompaña.
       Señor, hazme de esas personas que cuestionan que no aﬂojan en el camino,
-      que reza con insistencia y conﬁanza en Vos y que pueda comprometerme con
+      que reza con insistencia y confianza en Vos y que pueda comprometerme con
       la realidad del otro. Hazme, más que anunciador, testigo. Así como el mate
       que acompaña la historia de nuestro pueblo... Amén
     </p>
@@ -742,7 +742,7 @@
       riojanos y desde alli para todos los hombres de buena voluntad. Llevaba la
       cruz con Jesús en su pueblo. A Jesús no lo mataron por ir a la sinagoga
       sino porque en sábado curaba enfermos. Lo que contó para Jesús y para él
-      fue: la persona humana, como un ﬁn en sí mismo. Posibilitó que la gente
+      fue: la persona humana, como un fin en sí mismo. Posibilitó que la gente
       fuera dueña de su historia, protagonista. Angelelli comenzó a preguntar:
       ¿Por qué había pobres? ¿Por qué habia tantos marginados en La Rioja? Y
       empezó a formar una Iglesia consciente de esto, luchadora de los derechos
@@ -754,14 +754,14 @@
     <p>Era consciente de que estaba sentenciado, no solo amenazado:</p>
     <p>
       . Me están matando a mi gente, a mis ovejas, porque todavía no me han
-      matado a mí – dĳo Angelell 15 días antes de su morir, mientras sobre una
+      matado a mí – dijo Angelell 15 días antes de su morir, mientras sobre una
       hoja dibujaba un círculo con él en el centro.
     </p>
     <ul>
       <li>
         - Ándate -le decían-. No puedo, seguirán matando a mis ovejas. Las
         autoridades hicieron pasar el asesinato como un accidente de autos. Lo
-        mataron porque fue ﬁel a Dios y a su pueblo. Si en los primeros años de
+        mataron porque fue fiel a Dios y a su pueblo. Si en los primeros años de
         la iglesia se hubieran esperado las declaraciones de los emperadores nos
         hubiéramos quedado sin mártires. Sigue siendo mártir en la voz y en el
         corazón de su pueblo, que es insobornable, la gente lo invoca. Angelelli
@@ -779,7 +779,7 @@
         en el barro." "Con un oído en el pueblo y el otro en el Evangelio." "Hay
         que seguir andando nomás." "Es estupenda para mí la crisis, es cuando la
         Iglesia se hace fuerte, se hace más libre intriormente, no se ata a
-        intereses que la hagan inﬁel a su misión". "El pan es de todos, el agua
+        intereses que la hagan infiel a su misión". "El pan es de todos, el agua
         es de todos, la tierra es de todos". "Luchen con energía contra toda
         esclavitud social o política."
       </li>
@@ -805,7 +805,7 @@
     <p>
       Al hombre nuevo Dios va creando, con nuestro barro lo va engendrando,
       Jesús camina a nuestro lado, no tengas miedo, sumá tu mano. Su Espíritu
-      sigue impulsando a este pueblo cruciﬁcado. El pueblo libre será posible,
+      sigue impulsando a este pueblo crucificado. El pueblo libre será posible,
       muchos testigos hoy nos lo dicen, Angelelli, Oscar Romero, Carlos Mugica,
       mil compañeros, su sangre canta en nuestras cuerdas, este es el tiempo del
       hombre nuevo.
