--- a/src/21-naturaleza.html
+++ b/src/21-naturaleza.html
@@ -78,7 +78,7 @@
     </p>
     <p>
       de alimentos transgénicos, entre otros) y los recursos naturales no
-      renovables derrochados por la falta de ﬁscalización. La Iglesia se hizo
+      renovables derrochados por la falta de fiscalización. La Iglesia se hizo
       eco de esta problemática y el documento “Laudato Si” (sobre la “casa
       cmún”) escrito por el Papa Francisco nos exhorta a asumir nuestro papel de
       cristianos comprmetidos con el cuidado de la creación que Dios puso en
@@ -147,14 +147,14 @@
         abismos, cuando no había fuentes de aguas caudalosas. Antes que fueran
         cimentadas las montañas, antes que las colinas, yo nací. Cuando él no
         hbía hecho aún la tierra ni los espacios ni los primeros elementos del
-        mundo. Cuando él aﬁazaba el cielo, yo estaba allí; cuando trazaba el
+        mundo. Cuando él afiazaba el cielo, yo estaba allí; cuando trazaba el
         horizonte sobre el océano, cuando condensaba las nubes en lo alto,
-        cuando infundía poder a las fuentes del océano, cuando ﬁjaba su límite
-        al mar para que las aguas no transgredieran sus bordes, cuando aﬁrmaba
-        los cimientos de la tierra, yo estaba a su lado como un hĳo querido y lo
+        cuando infundía poder a las fuentes del océano, cuando fijaba su límite
+        al mar para que las aguas no transgredieran sus bordes, cuando afirmaba
+        los cimientos de la tierra, yo estaba a su lado como un hijo querido y lo
         deleitaba día tras día, recreándome delante de él en todo tiempo,
         recreándome sobre la faz de la tierra, y mi delicia era estar con los
-        hĳos de los hombres. Y ahora, hĳos, escúchenme: ¡felices los que
+        hijos de los hombres. Y ahora, hijos, escúchenme: ¡felices los que
         observan mis caminos!»</em
       >
     </p>
@@ -272,12 +272,12 @@
     </p>
     <p>
       El hombre se pregunta por Dios y lo busca en su vida. El que grita con
-      tono desaﬁante: "¿Dóde está Dios? iQue me muestre su existencia!". Ese, no
+      tono desafiante: "¿Dóde está Dios? iQue me muestre su existencia!". Ese, no
       encontrará a Dios. El que desee encon- trar a Dios, debe buscarlo.
     </p>
     <p>
       Esto presupone, en primer lugar, estar atento; y no puede estarlo el que
-      vive superﬁcialmete y envuelto en ruidos. Es preciso saber hacer silencio.
+      vive superficialmete y envuelto en ruidos. Es preciso saber hacer silencio.
       Por otra parte, es necesario saber escuchar y tener paciencia.
     </p>
     <p>
@@ -342,10 +342,10 @@
       <strong>Los animales:</strong> Son los seres de la naturaleza más
       parecidos al hombre, -para muchos- los más queribles. Cada especie tiene
       sus características propias, sus habilidades, su "personaldad" y las más
-      conocidas tienen simbolismos o signiﬁcados particulares. Se los puede
+      conocidas tienen simbolismos o significados particulares. Se los puede
       utilizar fácilmente para comparar su comportamiento con actitudes humanas.
       Nos dan numerosos ejemplos de conjunto, grupo, comunidad. Nos muestran una
-      preocupación por buscar su almento y el de sus hĳos. Nos demuestran la
+      preocupación por buscar su almento y el de sus hijos. Nos demuestran la
       fuerza que tienen a pesar de parecer pequeños y de lo que son capaces al
       unirse en grandes cantidades. Con su velocidad, agilidad y movimientos nos
       invitan a no quedarnos quietos.
@@ -353,7 +353,7 @@
     <p>
       <strong>Las plantas:</strong> Es impresionante la variedad de formas,
       colores, perfumes, texturas, tamaños. En ellas se puede ver también la
-      variedad de formas en las que Dios actúa en medio nuestro: desde la ﬁrmeza
+      variedad de formas en las que Dios actúa en medio nuestro: desde la firmeza
       de los troncos hasta la ternura de una ﬂor. Las plantas nos hablan de
       paciecia, constancia, esperanza y proyectos a largo plazo. Brindan
       generosamente sus ﬂores y frtos que han producido con su trabajo y que
@@ -406,7 +406,7 @@
     <p>
       En las ciudades hay numerosas expresiones de la naturaleza que intentan
       hacernos la vida más agradable, sana y humana. Se la puede ayudar con
-      acciones concretas que deﬁendan la vida en la ciudad.
+      acciones concretas que defiendan la vida en la ciudad.
     </p>
     <p>
       En aquellos ámbitos donde es más difícil descubrir la naturaleza a simple
@@ -426,7 +426,7 @@
     <p><em>y avanzas en alas del viento.</em></p>
     <p><em>Usas como mensajeros a los vientos,</em></p>
     <p><em>y a los relámpagos, como ministros.</em></p>
-    <p><em>Aﬁrmaste la tierra sobre sus cimientos:</em></p>
+    <p><em>Afirmaste la tierra sobre sus cimientos:</em></p>
     <p><em>¡no se moverá jamás!</em></p>
     <p><em>El océano la cubría como un manto,</em></p>
     <p><em>las aguas tapaban las montañas;</em></p>
@@ -435,7 +435,7 @@
     <p><em>Subieron a las montañas,</em></p>
     <p><em>bajaron por los valles,</em></p>
     <p><em>hasta el lugar que les habías señalado:</em></p>
-    <p><em>les ﬁjaste un límite que no pasarán,</em></p>
+    <p><em>les fijaste un límite que no pasarán,</em></p>
     <p><em>ya no volverán a cubrir la tierra.</em></p>
     <p><em>Haces brotar fuentes en los valles,</em></p>
     <p><em>y corren sus aguas por las quebradas.</em></p>
@@ -461,7 +461,7 @@
     <p>
       <em
         >señalaste el sol el momento de su ocaso; mandas la oscuridad, y cae la
-        noche: entonces rondan las ﬁeras de la selva y los cachorros rugen por
+        noche: entonces rondan las fieras de la selva y los cachorros rugen por
         la presa, pidiendo a Dios su alimento. Haces brillar el sol y se
         retiran, van a echarse en sus guardias: entonces sale el hombre a
         trabajar, a cumplir su jornada hasta la tarde. ¡Qué variadas son tus
@@ -472,7 +472,7 @@
         ti que les des la comida a su tiempo: se la das, y ellos la recogen;
         abres tu mano, y quedan saciados. Si escondes tu rostro, se espantan; si
         les quitas el aliento, expiran y vuelven al polvo. Si envías tu aliento,
-        son creados, y renuevas la superﬁcie de la tierra. ¡Gloria al Señor para
+        son creados, y renuevas la superficie de la tierra. ¡Gloria al Señor para
         siempre, alégrese el Señor por sus obras! El mira, y la tierra se
         estremece; toca las montañas, y echan humo. Cantaré al Señor toda mi
         vida; mientras yo exista, celebraré a mi Dios: que mi canto le sea
@@ -547,7 +547,7 @@
     <p>
       Una mañana luego de celebrar una misa salió con los indios para colgar la
       campana de la Iglesia, en ese momento es asesinado en manos de un cacique
-      que le tenía envidia. Fue bea- tiﬁcado en 1934 y luego canonizado en 1988.
+      que le tenía envidia. Fue bea- tificado en 1934 y luego canonizado en 1988.
     </p>
     <p>
       Como relatos alternativos pueden recuperarse hechos trascendentes que
@@ -563,7 +563,7 @@
     </p>
     <p><strong>Preguntar:</strong></p>
     <p>¿Qué sentido que tuvo para él?</p>
-    <p>¿Qué signiﬁca para nosotros estar en contacto con la naturaleza?</p>
+    <p>¿Qué significa para nosotros estar en contacto con la naturaleza?</p>
     <p>¿Que descubrimos en ella?</p>
     <p>
       <strong>Reﬂexión:</strong> Ver actividad N°1
@@ -572,7 +572,7 @@
     <h3>ACTIVIDAD N° 3 – EL ANTIGÉNESIS</h3>
     <h3>- Orientaciones:</h3>
     <p>
-      La actividad busca resigniﬁcar el lugar que como humanos ocupamos dentro
+      La actividad busca resignificar el lugar que como humanos ocupamos dentro
       de la creación.
     </p>
     <h3>- Actividad:</h3>
@@ -580,56 +580,56 @@
       Antes de terminar el campamento o una salida al aire libre, reunirse y
       leer el cuento "El antgénesis":La tierra era bella y fértil, la luz
       brillaba en las montañas y en los mares y el espíritu de Dios llenaba el
-      universo. Y el hombre dĳo: "Que posea yo lodo el poder en el cielo y en la
+      universo. Y el hombre dijo: "Que posea yo lodo el poder en el cielo y en la
       tierra." Y vió que el poder era bueno. Y puso el nombre de “jefes” a los
       que tenían el poder y llamó “des- graciados” a los que buscaban la
-      reconciliación. Y así fue el sexto día antes del ﬁn.
+      reconciliación. Y así fue el sexto día antes del fin.
     </p>
     <p>
-      Y el hombre dĳo: "Que haya gran división entre los pueblos: Que se pongan
+      Y el hombre dijo: "Que haya gran división entre los pueblos: Que se pongan
       a un lado las nciones a mi favor y al otro, las que están contra mí". Y
-      hubo buenos y malos. Y así fue el quinto día antes del ﬁn.
+      hubo buenos y malos. Y así fue el quinto día antes del fin.
     </p>
     <p>
-      El hombre dĳo: "Reunamos todas nuestras fortunas en un lugar y creemos
+      El hombre dijo: "Reunamos todas nuestras fortunas en un lugar y creemos
       instrumentos para defendemos: La radio y la televisión para controlar el
       espíritu de los hombres, el ejército para controlar el paso de los
       hombres, los uniformes para dominar las almas de los hombres". Y así fue.
       El mundo quedó dividido en bloques opuestos, en guerra. El hombre vió que
-      tenía que ser así. Y ese fue el cuarto día antes del ﬁn.
+      tenía que ser así. Y ese fue el cuarto día antes del fin.
     </p>
     <p>
-      El hombre dĳo: "Que haya censura, para distinguir nuestra verdad de la de
+      El hombre dijo: "Que haya censura, para distinguir nuestra verdad de la de
       los demás." Y así fue. El hombre creó dos grandes instituciones de
       censura: Una para ocultar la verdad en el extranjero, y otro para
       "defender la verdad" dentro de casa. El hombre lo vio y lo encontró
-      normal. Así fue el tercer dfa antes del ﬁnal.
+      normal. Así fue el tercer dfa antes del final.
     </p>
     <p>
-      El hombre dĳo: "Fabriquemos armas que puedan destruir grandes multitudes,
+      El hombre dijo: "Fabriquemos armas que puedan destruir grandes multitudes,
       millares y cetenares de millones a distancia." El hombre creó los
       submarinos nucleares que surcan los mares y misiles capaces de cruzar
       continentes y galaxias enteras. El hombre lo vió y se enor-
-      gulleció.Entonces los bendĳo diciendo: "Sean numerosos y grandes sobre la
+      gulleció.Entonces los bendijo diciendo: "Sean numerosos y grandes sobre la
       tierra, llenen las aguas
     </p>
     <p>
       del mar y los espacios celestes: Multiplíquense". Así fue el segundo día
-      antes del ﬁn.
+      antes del fin.
     </p>
     <p>
-      El hombre dĳo: "Hagamos a Dios a nuestra imagen y semejanza, que actúe
+      El hombre dijo: "Hagamos a Dios a nuestra imagen y semejanza, que actúe
       como actuamos nosotros, que mate como matamos nosotros". El hombre creó un
-      dios a medida, y lo bendĳo diciendo: "Muéstrate a nosotros y pon la tierra
+      dios a medida, y lo bendijo diciendo: "Muéstrate a nosotros y pon la tierra
       a nuestros pies: No te faltará nada si haces siempre nuestra propia
       voluntad". Y así fue. El hombre vió que todo lo que había hecho y esta- ba
-      muy satisfecho de ello. Así fue el día antes del ﬁn.
+      muy satisfecho de ello. Así fue el día antes del fin.
     </p>
     <p>
-      De pronto, se produjo una gran hecatombe en toda la superﬁcie de la
-      tierra, el hombre y todo lo que había hecho dejaron de existir. Al ﬁn, el
+      De pronto, se produjo una gran hecatombe en toda la superficie de la
+      tierra, el hombre y todo lo que había hecho dejaron de existir. Al fin, el
       hombre acabó con el cielo y con la tierra. La tierra volvió a ser un mundo
-      vació y sin orden, toda la superﬁcie de la tierra se cubrió de oscuridad.
+      vació y sin orden, toda la superficie de la tierra se cubrió de oscuridad.
     </p>
     <p><strong>Preguntar:</strong></p>
     <p>¿Qué actitudes destruyen la naturaleza?</p>
@@ -651,7 +651,7 @@
       asume el ser humano en cada una de ellas: “Dios puso al hombre para que
       domine la faz de la tierra” “Los humanos somos los administradores de la
       creación, pero no sus dueños.” “La tierra no es el regalo de nuestros
-      padres, sino un préstamos de nuestros hĳos.” ¿Con qué mirada estamos más
+      padres, sino un préstamos de nuestros hijos.” ¿Con qué mirada estamos más
       de acuerdo?Ahora que volvemos a la ciudad, ¿Con qué cosas nos vamos a
       encontrar?
     </p>
@@ -712,7 +712,7 @@
     </p>
     <p>
       Te necesito… No te molesto más. Ya sos grande y libre para elegir. Yo te
-      elegí, te elĳo y te se- guiré eligiendo a vos. Y por esa razón, siempre te
+      elegí, te elijo y te se- guiré eligiendo a vos. Y por esa razón, siempre te
       voy a esperar. Te amo.
     </p>
     <p>Tu amigo Jesús</p>
@@ -771,7 +771,7 @@
       ocupar.
     </p>
     <p>
-      Vela tu mirada en la noche, Firme como el cielo, es tu ﬁdelidad, y aunque
+      Vela tu mirada en la noche, Firme como el cielo, es tu fidelidad, y aunque
       estén quizás muy vacías, nuestras manos elevamos hacia ti, porque sabemos,
       que no hay nada que no llene tu bondad, y eso nos basta.
     </p>
@@ -790,7 +790,7 @@
       >
       Observar con detenimiento las estrellas.
     </p>
-    <p>Que cada uno elĳa una en especial y la mire detenidamente.</p>
+    <p>Que cada uno elija una en especial y la mire detenidamente.</p>
     <p>
       Que se imagine a una persona querida en esa estrella y que dialoga con
       ella en un momento
