--- a/src/22-vida.html
+++ b/src/22-vida.html
@@ -22,7 +22,7 @@
       medios tiende a que el/la Explorador/a tome su vida en sus manos, sea
       protagonista de su desarrollo y maduración como persona libre y
       responsabilidad frente a Dios y a su conciencia, aceptando al mismo
-      tiempo, la ayuda fraterna que le brinda, como contribución a tal ﬁn, la
+      tiempo, la ayuda fraterna que le brinda, como contribución a tal fin, la
       Comunidad Explorado- ril, especialmente a través de sus Jefes.
     </p>
     <ol>
@@ -100,7 +100,7 @@
     <h3>- Dinámica</h3>
     <p>
       Invitamos a los animadores a armar una grilla donde las columnas indiquen
-      los días de la semana y las ﬁlas el horario. Dentro de los casilleros
+      los días de la semana y las filas el horario. Dentro de los casilleros
       escribirán la actividad que realizaron en ese horario durante la última
       semana (si no lo recuerdan para atrás podrán armar una grilla ideal con la
       semana que viene). Luego responder las siguientes preguntas primero
@@ -136,7 +136,7 @@
         serán consolados. Felices los que tienen hambre y sed de justicia,
         porque serán saciados. Felices los misericordiosos, porque obtendrán
         misericordia. Felices los que tienen el corazón puro, porque verán a
-        Dios. Felices los que trabajan por la paz, porque serán llamados hĳos de
+        Dios. Felices los que trabajan por la paz, porque serán llamados hijos de
         Dios. Felices los que son perseguidos por practicar la justicia, porque
         a ellos les pertenece el Reino de los Cielos. Felices ustedes, cuando
         sean insultados y perseguidos, y cuando se los calumnie en toda forma a
@@ -157,7 +157,7 @@
       derecho, es nuestro deber! Las bienaventranzas reúnen en sí la propuesta
       de vida que Jesús nos hace, la cual no está libre de riesgos, pero sí
       llena de sentido. Es una vida que se entrega y se juega, se preocupa y
-      actúa, se hace humilde y trabaja en el silencio. “Animar” signiﬁca dar
+      actúa, se hace humilde y trabaja en el silencio. “Animar” significa dar
       vida al alma, dejemos que Jesús dé vida a nuestras almas a través de este
       mensaje para que con el soplo de su Espíritu nosotros también podamos
       llevar su calor y su amor por la vida al corazón de los chicos. Tenemos un
@@ -204,7 +204,7 @@
     <h2>ACTIVIDADES</h2>
     <ol>
       <li><strong>1- Arden las heridas</strong></li>
-      <li><strong>2- Vía Crucis y ﬁesta de la Resurrección</strong></li>
+      <li><strong>2- Vía Crucis y fiesta de la Resurrección</strong></li>
     </ol>
     <h3>ACTIVIDAD N° 1- ARDEN LAS HERIDAS</h3>
     <h3>- Orientaciones:</h3>
@@ -212,7 +212,7 @@
       La actividad busca ser un espacio para poner en palabras y reconocer los
       problemas que mchas veces los adolescentes ocultan porque les generan
       dolor. Estos problemas son los motvos que buscan una salida en las
-      adicciones. Adicción signiﬁca no hablar. Por eso el ejercicio de poner en
+      adicciones. Adicción significa no hablar. Por eso el ejercicio de poner en
       palabras las situaciones conﬂictivas para esta edad resulta algo sumamente
       sa- nador y necesario.
     </p>
@@ -254,9 +254,9 @@
         <strong><em>- Esteban</em></strong> Su padre es muy estricto. El le dice
         todo que sí, pero después por atrás piensa lo contrario. Con su madre
         tampoco habla mucho, le parece re-antigua, lo reta siempre y no le deja
-        hacer nada. Él preﬁere quedarse solo en su casa y hacer al suya cuando
+        hacer nada. Él prefiere quedarse solo en su casa y hacer al suya cuando
         ellos no están. No tiene muchos amigos. Se consiguió unas cuantas
-        revistas de esas pornográﬁcas y se pasa la tarde leyéndolas.
+        revistas de esas pornográficas y se pasa la tarde leyéndolas.
       </li>
       <li>
         <strong><em>- Susana</em></strong> Su padre no vive con ella. Viene a
@@ -271,7 +271,7 @@
         llevan muy bien. Delante de él disimulan pero se da cuenta que las cosas
         no andan bien. Su padre le regaló una computadora nueva. Él se la pasa
         frente a ella. Cada vez sus padres se llevan peor ya él ni le hablan. No
-        se la banca, preﬁere encerrarse en su pieza. Su hermanita menor se le
+        se la banca, prefiere encerrarse en su pieza. Su hermanita menor se le
         acerca buscando compañía, pero él no quiere saber nada y se la saca de
         encima en cuando puede. Dice estar muy ocupado, pero se la pasa con
         jueguitos y navegando en Internet.
@@ -297,7 +297,7 @@
         boliche de la vuelta y se junta con sus amigtes a tomar cerveza. Más de
         una vez se pasa. Está bueno dice él. Con su madre se lleva cada vez
         peor. El otro día casi le levanta la mano. Su hermano, que es un año
-        menor el otro día le dĳo algo que no le gustó, el estaba medio tomado y
+        menor el otro día le dijo algo que no le gustó, el estaba medio tomado y
         le puso una piña.
       </li>
       <li>
@@ -306,7 +306,7 @@
         madre también trabaja todo el día y cuando llega siempre tiene algo que
         hacer. Entre ellas como que se ignoran. Además cada vez que hablan no se
         entienden. Tiene una copañera que empezó a ir a su casa. La otra vez le
-        convidó un porro. Se resistió al principio pero al ﬁn aceptó. "Está
+        convidó un porro. Se resistió al principio pero al fin aceptó. "Está
         bueno", pensaba. Ahora cada vez se droga más y empezó a probar con
         otras.
       </li>
@@ -351,7 +351,7 @@
     </p>
     <p>
       la adicción tiene mucho de no poder expresarse, comunicarse, ni compartir
-      con los demás. La misma palabra “adicción” signiﬁca que existe algo que no
+      con los demás. La misma palabra “adicción” significa que existe algo que no
       se dice. Quien tiene buenos amigos, una buena relación con su familia y un
       diálogo ﬂuido y sincero, difícilmente necesite buscar "protección" o
       "contención" en estas "drogas".
@@ -421,7 +421,7 @@
     <h3>ACTIVIDAD N° 2- VÍA CRUCIS Y FIESTA DE LA RESURRECCIÓN</h3>
     <p>
       Tener preparado previamente el recorrido con las "estaciones" del Via
-      Crucis por donde ir pasando y organizar la ﬁesta sorpresa del ﬁnal.
+      Crucis por donde ir pasando y organizar la fiesta sorpresa del final.
     </p>
     <p>
       Presentar la actividad explicando que van a empezar a recorrer un camino
@@ -463,11 +463,11 @@
       que cada uno pueda pensar en los Jesuses que cotidianamente atraviesan
       estas situaciones de muerte que fueron viendo.«Al mediodía, se oscureció
       toda la tierra hasta las tres de la tarde; y a esa hora, Jesús exclmó en
-      alta voz: “Eloi, Eloi, lamá sabactani”, que signiﬁca: “Dios mío, Dios mío,
+      alta voz: “Eloi, Eloi, lamá sabactani”, que significa: “Dios mío, Dios mío,
       ¿por qué me has abandonado?”.
     </p>
     <p>
-      Algunos de los que se encontraban allí, al oírlo, dĳeron: “Está llamando a
+      Algunos de los que se encontraban allí, al oírlo, dijeron: “Está llamando a
       Elías”.
     </p>
     <p>
@@ -478,7 +478,7 @@
     <p>El velo del Templo se rasgó en dos, de arriba abajo.</p>
     <p>
       Al verlo expirar así, el centurión que estaba frente a él, exclamó:
-      “¡Verdaderamente, este hombre era Hĳo de Dios!”.
+      “¡Verdaderamente, este hombre era Hijo de Dios!”.
     </p>
     <p>
       Había también allí algunas mujeres que miraban de lejos. Entre ellas
@@ -495,7 +495,7 @@
       partida.
     </p>
     <p>
-      Entonces, llevar al grupo hacia donde los esté esperando la ﬁesta.
+      Entonces, llevar al grupo hacia donde los esté esperando la fiesta.
       Organizar previamente con los padres u otras personas cercanas al grupo.
       No hace falta mucho despliegue: con un poco de música, colorido, luces y
       algo rico para compartir alcanza. Lo importante es este factor sorpresa de
@@ -511,7 +511,7 @@
       puesto el cuerpo de Jesús.
     </p>
     <p>
-      Ellos le dĳeron: “Mujer, ¿por qué lloras?”. María respondió: “Porque se
+      Ellos le dijeron: “Mujer, ¿por qué lloras?”. María respondió: “Porque se
       han llevado a mi Se- ñor y no sé dónde lo han puesto”.
     </p>
     <p>
@@ -524,11 +524,11 @@
       has llevado, dime dónde lo has puesto y yo iré a buscarlo”.
     </p>
     <p>
-      Jesús le dĳo: “¡María!”. Ella lo reconoció y le dĳo en hebreo: “¡Raboní!”,
+      Jesús le dijo: “¡María!”. Ella lo reconoció y le dijo en hebreo: “¡Raboní!”,
       es decir “¡Maestro!”.
     </p>
     <p>
-      Jesús le dĳo: “No me retengas, porque todavía no he subido al Padre. Ve a
+      Jesús le dijo: “No me retengas, porque todavía no he subido al Padre. Ve a
       decir a mis herma- nos: ´Subo a mi Padre, el Padre de ustedes; a mi Dios,
       el Dios de ustedes´”.
     </p>
@@ -539,7 +539,7 @@
     <p>
       Al atardecer de ese mismo día, el primero de la semana, estando cerradas
       las puertas del lugar donde se encontraban los discípulos, por temor a los
-      judíos, llegó Jesús y poniéndose en medio de ellos, les dĳo: “¡La paz esté
+      judíos, llegó Jesús y poniéndose en medio de ellos, les dijo: “¡La paz esté
       con ustedes!”.
     </p>
     <p>
@@ -547,9 +547,9 @@
       llenaron de alegría cuando vieron al Señor.»
     </p>
     <p>
-      Antes de terminar la ﬁesta, reunirse nuevamente un momento y plantear:
+      Antes de terminar la fiesta, reunirse nuevamente un momento y plantear:
     </p>
-    <p>¿Qué signiﬁca para nosotros que Jesús resucitó?</p>
+    <p>¿Qué significa para nosotros que Jesús resucitó?</p>
     <p>¿Cómo resucitar las cosas que están muertas?</p>
     <p>
       ¿Cómo podemos defender y hacer crecer la vida del grupo y de las familias?
@@ -574,17 +574,17 @@
     <p>
       La resurrección de Jesús es el punto central de nuestra Fe y motivo
       principal de la alegría. ¿Qué mayor felicidad que tener una vida más
-      fuerte que la muerte? Y la ﬁesta de la resurreción empieza ya acá, en esta
+      fuerte que la muerte? Y la fiesta de la resurreción empieza ya acá, en esta
       tierra. En Jesús, nosotros también tenemos que "resucitar" los signos de
       muerte en nuestra vida terrenal y comenzar a celebrar aquí esa felicidad
       que se hará plena en la Vida eterna.
     </p>
     <p>
-      Si solo anunciamos la cruz sin la resurrección, acabaremos por magniﬁcar
+      Si solo anunciamos la cruz sin la resurrección, acabaremos por magnificar
       el dolor y dejremos las lágrimas sin consuelo. Si predicamos la
       resurrección sin la cruz, caeremos en una ideología indiferente a los que
       sufren. Alejada de la realidad. Proclamamos la unidad del miterio pascual:
-      aquel que fue rechazado y cruciﬁcado, es el mismo exaltado y resucitado.
+      aquel que fue rechazado y crucificado, es el mismo exaltado y resucitado.
       La resurrección sólo tiene sentido en el telón de fondo de la lucha de
       Jesús en favor de la vida y del Dios vivo. A su vez la muerte de cruz sólo
       se comprende como condenación por parte de los que se opusieron al
@@ -601,12 +601,12 @@
       casas, la injusticia en la distribución de los bienes, el asesinato de
       miles de niños que son abortados, la discrminación por cualquier motivo,
       las guerras entre países y entre vecinos, la discriminación, la droga y el
-      narcotráﬁco, la corrupción, etc. Son pecados sociales, que van contra la
+      narcotráfico, la corrupción, etc. Son pecados sociales, que van contra la
       propuesta de amor que Dios nos hace para construir un mundo de hermanos.
     </p>
     <p>
       Vemos signos de vida en las ganas de vivir que seguimos teniendo, más allá
-      de las diﬁcutades y los miedos que continuamente nos andan rondando; lo
+      de las dificutades y los miedos que continuamente nos andan rondando; lo
       notamos en el grupo que va creciendo a través de las experiencias que
       vamos compartiendo; lo notamos al ayudarnos mutuamente a vivir, lo notamos
       en los pequeños servicios y organizaciones en que nos soldarizamos; lo
@@ -626,12 +626,12 @@
       hechos de muerte. Es propio de un Jesús
     </p>
     <p>
-      Resucitado el que la vida no quede encerrada y ahogada indeﬁnidamente y el
+      Resucitado el que la vida no quede encerrada y ahogada indefinidamente y el
       que siempre pueda haber soluciones nuevas. El triunfo de la vida sobre la
-      muerte, se maniﬁesta en el crazón de nuestra vida grupal. La búsqueda de
-      unidad, diálogo, el ir creciendo en conﬁanza y amistad en el grupo son
+      muerte, se manifiesta en el crazón de nuestra vida grupal. La búsqueda de
+      unidad, diálogo, el ir creciendo en confianza y amistad en el grupo son
       signos de vida frente a los problemas que tenemos. También creemos en la
-      fuerza de la vida que se maniﬁesta en la posibilidad de alternativas
+      fuerza de la vida que se manifiesta en la posibilidad de alternativas
       sociales, políticas y económicas. Sentimos como una mentira cuando se nos
       dice que no hay otra salida para los problemas sociales y cotidianos.
     </p>
@@ -640,7 +640,7 @@
       construyamos. El exploradorismo es un "estilo de vida" muy especial; que
       nos puso en un "camino" diferente a los muchos caminos que el mundo nos
       ofrece. Claro que esto sólo no basta, porque debemos saber para qué
-      debemos construirla, con qué ﬁn, cuál es el sentido que queremos darle a
+      debemos construirla, con qué fin, cuál es el sentido que queremos darle a
       nuestras vidas, hacia dónde va éste nuestro camino.
     </p>
     <h2>EVALUACIÓN</h2>
@@ -649,7 +649,7 @@
     </p>
     <p>
       Reunirse en ronda y colocar en el centro una imagen de un chico todo
-      tapado y un reloj (como símbolo de la vida que pasa) con otras ﬁguras o
+      tapado y un reloj (como símbolo de la vida que pasa) con otras figuras o
       palabras que se relacionen con las adicciones.Por ejemplo pueden ser una
       jeringa, una bolsita de pegamento, una pelea o discusión, una familia que
       no acompaña, una botella de alguna bebida alcohólica, etc.
@@ -659,7 +659,7 @@
       <strong><em>Querida familia:</em></strong>
     </p>
     <p>
-      Lo siento mucho porque creo que es la última vez que me dirĳo a ustedes.
+      Lo siento mucho porque creo que es la última vez que me dirijo a ustedes.
       En serio lo sieto mucho pero creo que es tiempo que sepan la verdad. Voy a
       ser breve y claro, la droga me mató… Conocí a mis asesinos a eso de los 15
       o 16 años. Es horrible, no? ¿Saben cómo fue? Vino una persona bien vestida
@@ -712,8 +712,8 @@
     <h3>- Se comparte:</h3>
     <p>
       Cada uno va poniendo en común algo por lo que quiere dar gracias de su
-      vida, pasa al centro de la ronda y quita una de las ﬁguras de encima de la
-      ﬁgura del chico y el reloj que estaban cubiertos con botellas, jeringas,
+      vida, pasa al centro de la ronda y quita una de las figuras de encima de la
+      figura del chico y el reloj que estaban cubiertos con botellas, jeringas,
       etc. Preguntar: Nosotros que nos decimos cristianos, ¿Cómo vivimos
       realmente? ¿Nuestros rostros anuncian la Vida o la muerte? Buscar un
       compromiso para realizar y ofrecerlo pidiendo a Dios fuerzas para hacerlo
