--- a/src/23-esperanza.html
+++ b/src/23-esperanza.html
@@ -16,8 +16,8 @@
     <p>
       <strong>Inc. 27</strong>
       <em
-        >El/La Explorador/a, lleno de conﬁanza y optimismo, imprime a todos los
-        aspectos de la vida, una nota de ﬁesta, iluminando a todos con su cálido
+        >El/La Explorador/a, lleno de confianza y optimismo, imprime a todos los
+        aspectos de la vida, una nota de fiesta, iluminando a todos con su cálido
         testimonio, fruto de esperanza cristiana, porque hace suya la
         exhortación de San Pablo: “Estad siempre alegres” (Tes. 5, 16;
         Filipenses 4, 4).</em
@@ -35,7 +35,7 @@
         haciendo alusión de que no sirven para nada y que no se los quiere.
       </li>
       <li>
-        - Maniﬁestan que ya es demasiado tarde para remediar alguna situación y
+        - Manifiestan que ya es demasiado tarde para remediar alguna situación y
         que las esperan- zas están totalmente perdidas.
       </li>
       <li>- No tienen proyectos, ideales o metas que cumplir.</li>
@@ -75,7 +75,7 @@
     <p>
       <em
         >«Nuestra alma espera en el Señor; él es nuestra ayuda y nuestro escudo.
-        Nuestro corazón se regocĳa en él: nosotros conﬁamos en su santo Nombre.
+        Nuestro corazón se regocija en él: nosotros confiamos en su santo Nombre.
         Señor, que tu amor descienda sobre nosotros, conforme a la esperanza que
         tenemos en ti.»</em
       >
@@ -102,10 +102,10 @@
       tenga una relación segura con un adulto que lo cuide y lo apoye, ahí
       entramos todos, padres, familiares, referetes, ¡y sí hasta nosotros!, por
       eso es tan importante acompañarlos, escucharlos y guiarlos en sus
-      decisiones, pero para eso debemos hacernos ganarnos su conﬁanza y corazón.
+      decisiones, pero para eso debemos hacernos ganarnos su confianza y corazón.
     </p>
     <p>
-      En esta etapa los adolescentes se sienten identiﬁcados con grandes ideales
+      En esta etapa los adolescentes se sienten identificados con grandes ideales
       y esperanzas que descubren en la sociedad. Tienen actitudes exaltadas y
       vivas que los llevan a preocupar- se por lo inmediato. Les cuesta tomar
       las cosas con una mirada a largo plazo.
@@ -113,11 +113,11 @@
     <p>
       En sumatoria la esperanza tiene dimensiones tanto espirituales como
       psicológicas. Espirtualmente, la esperanza tiene que ver con la fe, con
-      creer y tener conﬁanza en algo, aunque no lo veamos. Desde el punto de
+      creer y tener confianza en algo, aunque no lo veamos. Desde el punto de
       vista de la Psicología, la esperanza se relaciona con las metas y el
-      sentido de formación personal. Se deﬁne como un conjunto de ideas y
+      sentido de formación personal. Se define como un conjunto de ideas y
       creencias que nos ayudan a encontrar caminos para alcanzar nuestras metas
-      y nos dan conﬁanza en que tene- mos la capacidad para lograrlas, por eso
+      y nos dan confianza en que tene- mos la capacidad para lograrlas, por eso
       la gran importancia de que los adolescentes cuenten
     </p>
     <p>
@@ -133,7 +133,7 @@
     </p>
     <p>
       Un aspecto interesante de la esperanza es que se asocia fuertemente con el
-      sentido de la vida, con creer que nuestra vida tiene signiﬁcado y
+      sentido de la vida, con creer que nuestra vida tiene significado y
       propósito. Las personas que tienen altos niveles de esperanza tienden a
       conectarse mejor con los demás, por lo que les interesan no sólo sus
       propias metas, sino las de las otras personas y son más capaces de
@@ -146,7 +146,7 @@
         Reino de Dios que ya se está construyendo y del cual forma parte.
       </li>
       <li>
-        - Los rastreadores Hogueras lograron Identiﬁcarse con un proyecto grupal
+        - Los rastreadores Hogueras lograron Identificarse con un proyecto grupal
         que se construye paso a paso, aprendiendo a no pretender todo de golpe
         ni detener sus esfuerzos.
       </li>
@@ -166,14 +166,14 @@
     <p>
       Esta actividad busca reconocer que todos los días se nos presentan
       opciones y señales de vida de Cristo que nos interpela para que seamos
-      parte de su proyecto dándonos suﬁcientes motivos para vivir con esperanza.
+      parte de su proyecto dándonos suficientes motivos para vivir con esperanza.
     </p>
     <h3>- Actividad:</h3>
     <p>
       Que cada uno dibuje su mano sobre una hoja y escribe brevemente en ella la
-      razón por la que le pusieron ese nombre, o lo que signiﬁca, si es que lo
+      razón por la que le pusieron ese nombre, o lo que significa, si es que lo
       sabe. (Se puede conseguir también uno de esos libros tipo "1000 nombres
-      para su bebé" y que los chicos se vayan ﬁjando y copiando el signiﬁcado).
+      para su bebé" y que los chicos se vayan fijando y copiando el significado).
       Lo importante es que no pongan el nombre.
     </p>
     <p>
@@ -189,12 +189,12 @@
       Luego con la misma consigna que fue dada a todos, presentar una mano
       dibujada con la sguiente frase y luego preguntar:
       <strong
-        >"María tendrá un hĳo a quien pondrás el nombre de, porque él salvará a
+        >"María tendrá un hijo a quien pondrás el nombre de, porque él salvará a
         su pueblo de sus pecados".</strong
       >
     </p>
     <p>¿Qué nombre va ahí?</p>
-    <p>¿Qué signiﬁca entonces el nombre "Jesús"?</p>
+    <p>¿Qué significa entonces el nombre "Jesús"?</p>
     <p>
       Pedir que cada uno agregue en su mano algo que le guste y algo que espera.
       Dar un ratito para eso y luego leerlas.
@@ -257,7 +257,7 @@
         años de cárcel y algunos están desaparecidos. A los 36 años, Miguel
         Ángel es capturado en una madrugada y según testigos de un campo
         clandestino de concentración, muere a consecuencias de las torturas.
-        Desde entonces marcha, al frente de una interminable ﬁla de resucitados
+        Desde entonces marcha, al frente de una interminable fila de resucitados
         que alientan con esperanza la lucha por la fraternidad y la justicia en
         medio del pueblo argentino (+1977).
       </li>
@@ -265,10 +265,10 @@
     <ul>
       <li>
         <strong><em>- Marta González</em></strong> Catequista. Maestra. Casada y
-        madre de dos hĳos. Toda la vida de Marta está signada por el compromiso
+        madre de dos hijos. Toda la vida de Marta está signada por el compromiso
         cristiano, que la lleva después al compromiso político. Dinámica,
         alegre, en el barrio Villa El Libertador y en la parroquia San José
-        Obrero, participa en todas las actividades que signiﬁquen
+        Obrero, participa en todas las actividades que signifiquen
         concientización y organización de los vecinos, para lograr mejores
         condicines de vida. Son años de movilizaciones, de grandes expectativas,
         de profundos deseos de justicia y lbertad después de largos años de
@@ -277,7 +277,7 @@
         más compromtidas en favor del pueblo. Tal entrega no le impide ser la
         esposa y la compañera de un hombre igualmente comprometido. Estando
         embarazada es detenida y encarcelada. Marta da a luz con las manos
-        esposadas y su Mayor dolor es no poder amamantar a su hĳo que le retiran
+        esposadas y su Mayor dolor es no poder amamantar a su hijo que le retiran
         recién nacido. Dos meses después Marta es sacada de la cárcel para ser
         fusilada, pese al comunicado militar que informa que muere en un
         enfrentamiento con civiles que interceptan su vehículo. Sobre su tumba
@@ -291,7 +291,7 @@
       nombre era muy importante. El nombre era la pesonalidad misma. Mostraba la
       misión que una persona estaba llamada a cumplir. Jesús quiere decir
       "salvador". Esa es su misión; esa es su actividad. Ese es su ser más
-      íntimo. Su nombre lo deﬁne a sí mis- mo. Así se comprende lo que predica y
+      íntimo. Su nombre lo define a sí mis- mo. Así se comprende lo que predica y
       lo que vive. Viene a salvar, y eso hace.
     </p>
     <p>
@@ -300,7 +300,7 @@
       Manos curtidas de trabajador, manos cariñosas que saben acariciar a los
       niños, manos que se extienden para bendecir, manos que comparten el pan,
       manos que son atravesadas por clavos en la cruz, manos que sostienen
-      ﬁrmemente el látigo.
+      firmemente el látigo.
     </p>
     <p>
       <strong><em>Transformar la muerte en vida:</em></strong> Todos los días se
@@ -425,8 +425,8 @@
       alegría que…
     </p>
     <p>
-      “El/La Explorador/a, lleno de conﬁanza y optimismo, imprime a todos los
-      aspectos de la vida, una nota de ﬁesta, iluminando a todos con su cálido
+      “El/La Explorador/a, lleno de confianza y optimismo, imprime a todos los
+      aspectos de la vida, una nota de fiesta, iluminando a todos con su cálido
       testimonio, fruto de esperanza cristiana, porque hace suya la exhortación
       de San Pablo: “Estad siempre alegres” (Tes. 5, 16; Filipenses 4, 4”).
     </p>
@@ -454,8 +454,8 @@
     </p>
     <p>
       Armar un recorrido con los signos de pista que incluya alguna parada y que
-      al ﬁnal tenga una señal que indique hacia el lugar donde se inició el
-      trayecto de manera que en realidad sea un camino sin ﬁn.
+      al final tenga una señal que indique hacia el lugar donde se inició el
+      trayecto de manera que en realidad sea un camino sin fin.
     </p>
     <p>
       Colocar también en el trayecto otros signos de pista que no existan pero
@@ -571,7 +571,7 @@
     <p>Orientar la conversación planteando:</p>
     <p>¿Qué cosas hay en común en América Latina?</p>
     <p>¿Cuáles de ellas son signo de vida o de muerte?</p>
-    <p>¿Qué signiﬁca "Patria Grande"?</p>
+    <p>¿Qué significa "Patria Grande"?</p>
     <p>
       Seleccionar algunas de las propuestas y organizarse en grupitos para
       realizarlas el próximo encuentro como parte de una "Feria". " Que sea algo
@@ -604,7 +604,7 @@
       las mismas raíces indígenas y criollas, la misma sangre.
     </p>
     <p>
-      Esa unidad geográﬁca, histórica, cultural y martirial nos permite soñar
+      Esa unidad geográfica, histórica, cultural y martirial nos permite soñar
       conjuntamente. Estmos evolucionado corno pueblos latinoamericanos. El
       movimiento popular de América Latina está creciendo desde distintos
       sectores. Tomemos conciencia de esto, porque nos permite creer en el
@@ -647,7 +647,7 @@
         Medellín, porque fue un paso revolucionario de Dios por nuestras
         tierras. De todo el contnido, cabe resaltar el énfasis puesto en la
         pobreza de la Iglesia, que se va a expresar en la preferente, solidaria,
-        efectiva opción por los pobres. Opción que va a explicitar Puebla a ﬁnes
+        efectiva opción por los pobres. Opción que va a explicitar Puebla a fines
         de los 70 y que retomará Santo Domingo en el año 92. "Que se presente
         cada vez más nítido en América Latina el rostro de una Iglesia
         auténticmente pobre, misionera y pascual, desligada de todo poder
@@ -670,7 +670,7 @@
       nos invita a sembrar el Reino de
     </p>
     <p>
-      Dios. La semilla es muy pequeña, pareciera insuﬁciente e impotente. Pero
+      Dios. La semilla es muy pequeña, pareciera insuficiente e impotente. Pero
       no es así. Ella ecierra un enorme árbol. Es más fuerte que todos los males
       que uno pueda tener. Si nos dcidimos a plantarla, si nos disponemos a
       cuidarla y hacerla crecer, si nos comprometemos a defenderla y luchar por
@@ -694,7 +694,7 @@
         mostaza. Cuando se la siembra, es la más pequeña de todas las semillas
         de la tierra, pero, una vez sembrada, crece y llega a ser la más grande
         de todas las hortalizas, y extiende tanto sus ramas que los pájaros del
-        cielo se cobĳan a su sombra.”»</em
+        cielo se cobijan a su sombra.”»</em
       >
     </p>
     <h3>ACTIVIDAD N° 5: ESPERAR UNA FLOR</h3>
@@ -705,7 +705,7 @@
       una actividad para realizar a continuación de la lectura. Realizarlas en
       una salida o paseo de todo el día, como para tener más tiempo para hacer
       otras actividades entre medio. La idea es comenzar el día con la primer
-      parte del cuento y que la última parte sea al ﬁnal del día. Una
+      parte del cuento y que la última parte sea al final del día. Una
       posibilidad interesante es tener grabado el cuento con las voces de los
       distintos personajes del relato y hacerlo escuchar con un grabador. Ir
       intercalando la lectura de cada parte del cuento y sus correspondientes
@@ -730,7 +730,7 @@
         ellas, y no quería irse. El hombre quedó fascinado. Todas las ﬂores eran
         lindas. Pero había una más hermosa que todas, más blanca que las nubes
         del verano, y le pareció que eran tiernas como los labios de su pequeña
-        hĳa. Pensó para él... ¿Compraría un ramo?... Pero no... El dueño no las
+        hija. Pensó para él... ¿Compraría un ramo?... Pero no... El dueño no las
         va a vender. ¿Le pediría una o dos, entonces?... Para llevarlas conmigo
         a casa... Pero no... Se deshojarían por el camino, o se marchitarían
         pronto en el ﬂorero. Tal vez lo mejor sea cultivaras en mi tierra.
@@ -816,7 +816,7 @@
         abieto". Pero no". Siempre respetó la tierra y la semilla. Para los dos
         vecinos cada mañana empezaba una lucha. Y cada tarde volvía la
         esperanza. En uno esperanza de semilla hundida. En otro ilusión de gajo
-        trasplantado, - Se me secó un gajo - dĳo - Pero me quedan tres todavía.
+        trasplantado, - Se me secó un gajo - dijo - Pero me quedan tres todavía.
         ¿Y usted? - Nada, tampoco, por ahora nada. Pero espero a la ﬂor, Creo en
         el tiempo, en la tierra y en mis manos.El vecino que no sabía esperar, a
         la tarde siguiente, más triste y lentamente fue a contarle que se había
@@ -832,7 +832,7 @@
       </li>
     </ol>
     <p>
-      ser mañana o ahora - se dĳo – Hoy puede ser la hora de la ﬂor. Pero cuánto
+      ser mañana o ahora - se dijo – Hoy puede ser la hora de la ﬂor. Pero cuánto
       cuesta espera que la ﬂor se marchite, se seque, se rompa la semilla y
       enterrada resucite la nueva ﬂor. Estaba cansado, hacía veinte noches que
       no dormía. Se había olvidado de soñar. Que cada chico busque un recipiente
@@ -845,7 +845,7 @@
     <p>¿Nuestro grupo de qué se alimenta?</p>
     <p>¿Cómo hacemos para que la esperanza se mantenga "húmeda"?</p>
     <p>Relacionar con el lema de la meta parcial:</p>
-    <p>¿Qué signiﬁca "Consolidar el camino"?</p>
+    <p>¿Qué significa "Consolidar el camino"?</p>
     <p>¿A dónde queremos llegar?</p>
     <p>¿Cuáles son nuestras esperanzas?</p>
     <p>¿Que necesitamos para ello?</p>
@@ -909,7 +909,7 @@
       justicia, amor y alegría. Un reino para todos. En nuestra vida también a
       veces nos sentimos que los problemas nos rodean, que nuestro grupo anda
       mal, que nuestra familia está desunida, etc. Jesús nos invita a sembrar el
-      Reino de Dios. La semilla es muy pequeña, pareciera insuﬁciente e
+      Reino de Dios. La semilla es muy pequeña, pareciera insuficiente e
       impotente. Pero no es así. Ella encirra un enorme árbol. Es más fuerte que
       todos los males que uno pueda tener. Si nos decidimos a plantarla, si nos
       disponemos a cuidarla y hacerla crecer, si nos comprometemos a defendela y
@@ -942,9 +942,9 @@
       que pasa con la semilla que crece. Tenemos un objetivo que lo lograremos
       en la medida que cada uno aporte su granito de arena que le dé "bases
       sólidas" a la patrulla. La patrulla va creciendo a lo largo del tiempo con
-      esfuerzo y sacriﬁcio. La esperanza de llegar a ser un grupo unido y maduro
+      esfuerzo y sacrificio. La esperanza de llegar a ser un grupo unido y maduro
       permite seguir intentándolo. Siempre la alegría de haber logra- do la meta
-      es mayor que las diﬁcultades previas.
+      es mayor que las dificultades previas.
     </p>
     <h3>Palabra de Dios: (Mc. 4, 30-31) Parábola de la semilla de mostaza</h3>
     <p>
@@ -975,14 +975,14 @@
     </p>
     <h3>- Reﬂexión:</h3>
     <p>
-      <strong>Esperamos contra toda esperanza</strong> Hoy al ﬁn tenemos que
+      <strong>Esperamos contra toda esperanza</strong> Hoy al fin tenemos que
       seguir caminando en paz, esperamos contra toda esperanza. Y es así que
       todo va a cambiar, resucitarás esperando contra toda esperanza Vos sos la
       vida, sos la paz, vos sos nuestra esperanza, sos el camino para andar, sos
-      fuerza y sos conﬁanza.
+      fuerza y sos confianza.
     </p>
     <p>
-      No aﬂojar seguirte hasta el ﬁnal tu cruz abrazar esperamos contra toda
+      No aﬂojar seguirte hasta el final tu cruz abrazar esperamos contra toda
       esperanza. Esperar también es transformar un sueño en realidad, esperamos
       contra toda esperanza
     </p>
