--- a/src/24-servicio.html
+++ b/src/24-servicio.html
@@ -84,7 +84,7 @@
         <em
           >Consiste fundamentalmente en un acto de servicio, un favor que se
           hace a alguien sin tener obligación de realizarlo y sin buscar en ello
-          recompensa o beneﬁcio alguno, pensando tan sólo que se hace a
+          recompensa o beneficio alguno, pensando tan sólo que se hace a
           Cristo.</em
         >
       </li>
@@ -133,7 +133,7 @@
           sienten el llamado a ofrecer su servicio apostólico y de conducción
           dentro de la Institción, y se capacitan para compartir las riquezas y
           valores que recibieron dentro del M.E.S. con los adolescentes y
-          jóvenes que cada año entran en las ﬁlas del Batallón. De este modo
+          jóvenes que cada año entran en las filas del Batallón. De este modo
           garanti- zan la continuidad de la obra educadora del M.E.S.</em
         >
       </li>
@@ -195,7 +195,7 @@
     <h2>TEXTO PARA REFLEXIONAR Y ORIENTAR EL TRABAJO</h2>
     <h3>"El sí de María" (Lc. 1, 38)</h3>
     <p>
-      «María dĳo ent
+      «María dijo ent
       <em
         >onces: “Yo soy la servidora del Señor, que se cumpla en mí lo que has
         dicho”. Y el Angel se alejó</em
@@ -208,7 +208,7 @@
       esta tierra. El servicio es el fruto del amor y siempre nos llena de
       alegría. María acepta con alegría la misión que Dios quee encomienda y se
       hace servidora del Plan que Dios tiene para salvar a los hobres con la
-      venida de su Hĳo, Jesús. A lo largo de la historia de la humanidad, María
+      venida de su Hijo, Jesús. A lo largo de la historia de la humanidad, María
       ocupa un lugar de mediadora entre Dios y los hombres. Por su humildad,
       como madre de Jesús y madre nuestra, ella es intercesora ante Dios de
       nuestras intenciones.
@@ -282,7 +282,7 @@
     </p>
     <p>
       Servir es responder con cariño concreto a las necesidades humanas. Es
-      poner a los hombres en primer lugar sin ﬁjarse en la comodidad que se
+      poner a los hombres en primer lugar sin fijarse en la comodidad que se
       pierde o en la pasividad personal que busca la autopreservación. Servir es
       pensar en el otro y comprometerse con él.
     </p>
@@ -294,7 +294,7 @@
       ¿Por qué no mirar a nuestro lado para descubrir a los otros que tam- bién
       están sirviendo y trabajar organizadamente en conjunto?
     </p>
-    <p>"Servir signiﬁca hacer la felicidad de los demás."</p>
+    <p>"Servir significa hacer la felicidad de los demás."</p>
     <p>"Felices los que trabajan por la felicidad de los demás."</p>
     <p>
       Una forma de vivir mi servicio es en la misma patrulla donde nos
@@ -338,25 +338,25 @@
       <em
         >«El Angel entró en su casa y la saludó, diciendo: “¡Alégrate!, llena de
         gracia, el Señor está contigo”. Al oír estas palabras, ella quedó
-        desconcertada y se preguntaba qué podía signiﬁcar ese saludo. Pero el
-        Angel le dĳo: “No temas, María, porque Dios te ha favorecido. Concebirás
-        y darás a luz un hĳo, y le pondrás por nombre Jesús; él será grande y
-        será llamdo Hĳo del Altísimo. El Señor Dios le dará el trono de David,
+        desconcertada y se preguntaba qué podía significar ese saludo. Pero el
+        Angel le dijo: “No temas, María, porque Dios te ha favorecido. Concebirás
+        y darás a luz un hijo, y le pondrás por nombre Jesús; él será grande y
+        será llamdo Hijo del Altísimo. El Señor Dios le dará el trono de David,
         su padre, reinará sobre la casa de Jacob para siempre y su reino no
-        tendrá ﬁn”. María dĳo al Angel: “¿Cómo puede ser eso, si yo no tengo
+        tendrá fin”. María dijo al Angel: “¿Cómo puede ser eso, si yo no tengo
         relaciones con ningún hombre?”. El Angel le respondió: “El Espíritu
         Santo descenderá sobre ti y el poder del Altísimo te cubrrá con su
-        sombra. Por eso el niño será Santo y será llamado Hĳo de Dios. También
-        tu parienta Isabel concibió un hĳo a pesar de su vejez, y la que era
+        sombra. Por eso el niño será Santo y será llamado Hijo de Dios. También
+        tu parienta Isabel concibió un hijo a pesar de su vejez, y la que era
         considerada estéril, ya se encuentra en su sexto mes, porque no hay nada
-        imposible para Dios”. María dĳo entonces: “Yo soy la servidora del
+        imposible para Dios”. María dijo entonces: “Yo soy la servidora del
         Señor, que se cumpla en mí lo que has dicho”. Y el Angel se alejó. »</em
       >
     </p>
     <h3>La visita de María a su prima Isabel (Lc. 1, 36.39-56)</h3>
     <p>
       <em
-        >«También tu parienta Isabel concibió un hĳo a pesar de su vejez, y la
+        >«También tu parienta Isabel concibió un hijo a pesar de su vejez, y la
         que era considerada estéril, ya se encuentra en su sexto mes (…) En
         aquellos días, María partió y fue sin demora a un pueblo de la montaña
         de Judá. Entró en la casa de Zacarías y saludó a Isabel. Apenas esta oyó
@@ -365,7 +365,7 @@
         bendito es el fruto de tu vientre! ¿Quién soy yo, para que la madre de
         mi Señor venga a visitarme? Apenas oí tu saludo, el niño saltó de
         alegría en mi seno. Feliz de ti por haber creído que se cumplirá lo que
-        te fue anunciado de parte del Señor”. María dĳo entonces: “Mi alma canta
+        te fue anunciado de parte del Señor”. María dijo entonces: “Mi alma canta
         la grandeza del Señor, y mi espíritu se estremece de gozo en Dios, mi
         salvador, porque el miró con bondad la pequeñez de tu servidora. En
         adlante todas las generaciones me llamarán feliz, porque el Todopoderoso
@@ -383,11 +383,11 @@
     <h3>Si el grano de trigo no muere (Jn.12, 20-26)</h3>
     <p>
       <em
-        >« Entre los que había subido para adorar durante la ﬁesta, había unos
+        >« Entre los que había subido para adorar durante la fiesta, había unos
         griegos que se acecaron a Felipe, el de Betsaida de Galilea, y le
-        dĳeron: “Señor, queremos ver a Jesús”. Felipe fue a decírselo a Andrés,
-        y ambos se lo dĳeron a Jesús. El les respondió: “Ha llegado la hora en
-        que el Hĳo del hombre va a ser gloriﬁcado. Les aseguro que si el grano
+        dijeron: “Señor, queremos ver a Jesús”. Felipe fue a decírselo a Andrés,
+        y ambos se lo dijeron a Jesús. El les respondió: “Ha llegado la hora en
+        que el Hijo del hombre va a ser glorificado. Les aseguro que si el grano
         de trigo que cae en la tierra no muere, queda solo; pero si mure, da
         mucho fruto. El que tiene apego a su vida la perderá; y el que no está
         apegado a su vida en este mundo, la conservará para la Vida eterna. El
@@ -396,7 +396,7 @@
         pie de la cruz (Jn. 19, 25-27) «Junto a la cruz de Jesús, estaba su
         madre y la hermana de su madre, María, mujer de Clefás, y María
         Magdalena. Al ver a la madre y cerca de ella al discípulo a quien el
-        amaba, Jesús le dĳo: “Mujer, aquí tienes a tu hĳo”. Luego dĳo al
+        amaba, Jesús le dijo: “Mujer, aquí tienes a tu hijo”. Luego dijo al
         discípulo: “Aquí tienes a tu madre”. Y desde aquel momento, el discípulo
         la recibió en su casa.»</em
       >
@@ -405,13 +405,13 @@
     <p>
       <em
         >«Durante la Cena, cuando el demonio ya había inspirado a Judas
-        Iscariote, hĳo de Simón, el propósito de entregarlo, sabiendo Jesús que
+        Iscariote, hijo de Simón, el propósito de entregarlo, sabiendo Jesús que
         el Padre había puesto todo en sus manos y que él había venido de Dios y
         volvía a Dios, se levantó de la mesa, se sacó el manto y tomando una
         toalla se la ató a la cintura. Luego echó agua en un recipiente y empezó
         a lavar los pies a los discípulos y a secárselos con la toalla que tenía
         en la cintura.(…) Después de haberles lavado los pies, se puso el manto,
-        volvió a la mesa y les dĳo: “¿comprenden lo que acabo de hacer con
+        volvió a la mesa y les dijo: “¿comprenden lo que acabo de hacer con
         ustedes? Ustdes me llaman Maestro y Señor, y tienen razón, porque lo
         soy. Si yo, que soy el Señor y el Maestro, les he lavado los pies,
         ustedes también deben lavarse los pies unos a otros. Les he dado el
@@ -438,9 +438,9 @@
       "Dormía y soñaba que a vida era alegría, desperté y me di cuenta que la
       vida era servicio, serví y comprendí que el servicio era alegría"
     </p>
-    <p>Estas hermosas palabras maniﬁestan la hermosa experiencia de María.</p>
+    <p>Estas hermosas palabras manifiestan la hermosa experiencia de María.</p>
     <p>
-      Aceptó tener un hĳo porque así servía a la humanidad. Ella misma se deﬁne
+      Aceptó tener un hijo porque así servía a la humanidad. Ella misma se define
       de esa manera cuando acepta ser madre. "Soy la servidora del Señor" Ese es
       e! sentido de su vida y su voca- ción más profunda.
     </p>
@@ -453,7 +453,7 @@
     </p>
     <p>
       Es la mujer que vive atenta a la escucha de la palabra que se expresa a
-      través del Magniﬁca.
+      través del Magnifica.
     </p>
     <p>
       Buscó servir y gozó sirviendo. Su vida fue un constante servicio en lo
@@ -520,7 +520,7 @@
       Organizar una merienda o almuerzo para el grupo. Tratar que sea algo que
       necesite coordinación entre las manos. Cada uno tendrá las manos atados a
       los compañeros que tenga a los costados formando una ronda en torno a la
-      comida. Durante toda la comida (o un rato si es suﬁciente) tendrán que
+      comida. Durante toda la comida (o un rato si es suficiente) tendrán que
       estar así y rebuscárselas para poder comer todos. Preguntar:¿Cómo se
       sintieron?
     </p>
@@ -533,10 +533,10 @@
       contenidos: El servicio
     </p>
     <p>
-      Leer el cuento de "El cielo y el inﬁerno" y comentar las impresiones
-      personales Un famoso cuento narra sobre un anciano sacerdote, ﬁel y
+      Leer el cuento de "El cielo y el infierno" y comentar las impresiones
+      personales Un famoso cuento narra sobre un anciano sacerdote, fiel y
       luchador; que un día le asalta la duda sobre si existía el cielo y el
-      inﬁerno. Cuentan que el buen sacerdote fue llevado a un lugar; donde
+      infierno. Cuentan que el buen sacerdote fue llevado a un lugar; donde
       alrededor de una enorme olla llena de comida había una cantidad de
       personas hambrientas que intentaban saciarse. Pero, impedidas de acercarse
       a la olla, detrás de una mesada circular, debían tener atados a sus brazos
@@ -551,7 +551,7 @@
       <tr>
         <td>
           ción, del odio absurdo y del egoísmo desesperado. Profundamente
-          desolado, el sacerdot pidió salir de aquel inﬁerno. Y fue llevado a
+          desolado, el sacerdot pidió salir de aquel infierno. Y fue llevado a
           otra sala semejante. Con la misma disposició y con la gente alrededor
           de la mesa circular. Y éstas con idénticos cucharones atados a su
           brazos y manos, pero donde reinaba una paz maravillosa. Donde no había
@@ -561,7 +561,7 @@
           apagar su hambre, llenaban sus cu charones de alimentos y lo ofrecían
           al que tenían enfrente. Y así, todos comían y ninguno quedaba con
           hambre. Cuando el sacerdote despertó de su sueño, sintió que las dudas
-          se le habían ido. Hay un cielo y un inﬁerno que están a nuestro lado
+          se le habían ido. Hay un cielo y un infierno que están a nuestro lado
           en lo que vivimos diariamente. Son frut del amor o egoísmo que
           vivimos. Pero solemos ser tan miopes a veces que enceguecidos por la
           urgencia de nuestras inseguridades y de nuestras necesidades, nos
@@ -617,7 +617,7 @@
       y sus caractrísticas.Luego, preguntarle a los invitados sobre su servicio
       cuando estaba con sus compañeros de grupo, rescatando principalmente las
       actividades de servicio que hacían todos juntos como grupo.Preguntar:¿Qué
-      signiﬁca el "Siempre Listos"?
+      significa el "Siempre Listos"?
     </p>
     <p>¿Cómo lo ponemos en práctica para servir a los demás?</p>
     <p>¿Qué responsabilidades tenemos como grupo?</p>
@@ -659,7 +659,7 @@
       que sirve. Y vos... ¿Serviste hoy? ¿A quién? ¿Al árbol o al amigo, o a tu
       madre o a ti mismo?
     </p>
-    <p>Compartir entre todos las preguntas del ﬁnal del texto.</p>
+    <p>Compartir entre todos las preguntas del final del texto.</p>
     <h3>- Se reza y se celebra:</h3>
     <p>
       Ponerlo en común, rezar la oración del explorador pidiendo a Dios crecer
@@ -670,7 +670,7 @@
     <p>a vos pa' ser su madre Dios te eligió</p>
     <p>y cuando desde el cielo te mandó un ángel</p>
     <p>para pedir tu consentimiento</p>
-    <p>vos le dĳiste: "Tu esclava soy".(2)</p>
+    <p>vos le dijiste: "Tu esclava soy".(2)</p>
     <p>
       Por eso vaya darte mi corazón, y cantando repetiré tu nombre María de
       Nazareth.(2)
@@ -681,18 +681,18 @@
       con nosotros el Emanuel.(2)
     </p>
     <p>
-      En aquel tallercito de carpintero Dios aprendió el oﬁcio del buen José. y
+      En aquel tallercito de carpintero Dios aprendió el oficio del buen José. y
       vos, yendo y viniendo de la cocina guardabas cosas dentro del alma que te
       sirvieran para después.(2)
     </p>
     <p>
-      Viendo morir a tu hĳo sobre el calvario te hiciste nuestra madre junto a
+      Viendo morir a tu hijo sobre el calvario te hiciste nuestra madre junto a
       la cruz. y quedaste esperando porque sabías que volvería resucitado de
       entre los muertos tu buen Jesús.(2)
     </p>
     <h3>- Se actúa o Tu compromiso:</h3>
     <p>
-      Que cada uno elĳa algún servicio concreto para realizar en la semana
+      Que cada uno elija algún servicio concreto para realizar en la semana
       dentro de sus actividdes cotidianas. Como sugerencia, a partir del ejemplo
       de María, puede ser visitar a un amigo que hace mucho que no ve, mandarle
       una carta a un pariente, colaborar en los quehaceres domésticos, etc.
