--- a/src/26-renovacion.html
+++ b/src/26-renovacion.html
@@ -31,7 +31,7 @@
       chicos y chicas a redactar el compromiso que asumirán como grupo en la
       Renovación. La otra actividad consiste en el desarrollo mismo de la
       Celebrción de la Renovación de la Promesa, con sus momentos y simbolismos
-      esenciales. Es impotante darle un marco de ﬁesta y promover la
+      esenciales. Es impotante darle un marco de fiesta y promover la
       participación de las familias y toda la comunidad, que dan respaldo y son
       testigos del compromiso que hacen los chicos.
     </p>
@@ -106,7 +106,7 @@
       Continuar rápidamente con el debate del valor siguiente, ya que
       seguramente de nuevo se prducirá una situación de peligro. Es fundamental
       recalcar que la eliminación de algunos valores se realiza por razones de
-      fuerza mayor, lo que no signiﬁca que ellos carezcan de importancia.
+      fuerza mayor, lo que no significa que ellos carezcan de importancia.
     </p>
     <p>
       Continuar con el viaje hasta dejar unos seis valores, que serán aquéllos
@@ -130,7 +130,7 @@
     <p>
       Dios no creó libres, la persona se construye libre, se construye mediante
       un largo proceso de opciones, de avances a veces más rápidos y a veces más
-      lentos. Es indispensable tener una ﬁnalidad, un objetivo y los sueños que
+      lentos. Es indispensable tener una finalidad, un objetivo y los sueños que
       tomen forma en un proyecto de vida a realizar. Jesús nos muestra ese ideal
       y tenemos la opción de intentar hacerlo realidad o de resignarnos. Por eso
       si queremos seguir el Reino de Dios, en comunidad podemos ir descubriendo
@@ -146,11 +146,11 @@
       a futuras opciones. Armar la escala de valores es una tarea de toda la
       vida. Constantemente hay que seguir rﬂexionando y puliendo la escala de
       valores tanto personal como comunitariamente. La renovación de la promesa
-      es decir que "sí' nuevamente a la promesa de querer ser ﬁel al llamado de
+      es decir que "sí' nuevamente a la promesa de querer ser fiel al llamado de
       Cristo, de querer realizarse como hombre o como mujer cristiana, de querer
       ser parte de una comunidad, de vivir la Ley de Honor, de seguir siendo
       explorador. Es la opción de volver a decir que si, de hacer más grande y
-      comprometido ese "sí". Es aﬁrmar todo lo caminado a lo largo de la meta,
+      comprometido ese "sí". Es afirmar todo lo caminado a lo largo de la meta,
       todo lo compartido en el grupo, en la familia y en la vida cotidiana para
       poder dar un paso más y continuar caminando por la aventura de ser
       explorador.
@@ -165,7 +165,7 @@
         Nazaret, ciudad de Galilea, y se dirigió a Belén de Judea, la ciudad de
         David, para inscribirse con María, su esposa, que estaba embarazada.
         Mientras se encontraban en Belén, le llegó el tiempo de ser madre; y
-        María dio a luz a su Hĳo primogénito, lo envolvió en pañales y lo acostó
+        María dio a luz a su Hijo primogénito, lo envolvió en pañales y lo acostó
         en un pesebre, porque no había lugar para ellos en el albergue.»</em
       >
     </p>
@@ -213,7 +213,7 @@
       la renovación de la promesa. Acompañar con mucha atención este momento.
     </p>
     <p>
-      Otra posibilidad es dibujar en el suelo o en un aﬁche grande para que
+      Otra posibilidad es dibujar en el suelo o en un afiche grande para que
       quede como memoria de la vida del grupo.
     </p>
     <ul>
@@ -237,7 +237,7 @@
     </p>
     <p>
       Recordar las distintas actividades realizadas y analizar los cambios de
-      actitudes que se no- tan con respecto al comienzo, las diﬁcultades
+      actitudes que se no- tan con respecto al comienzo, las dificultades
       superadas y las cosas que aún falta mejorar.
     </p>
     <p>
@@ -274,7 +274,7 @@
     </p>
     <p>
       celebración.Si en la misma celebración hay también promesas, otras
-      renovaciones o reaﬁrmaciones no hace falta repetir las explicaciones y los
+      renovaciones o reafirmaciones no hace falta repetir las explicaciones y los
       signos ya utilizados o los que se utilizarán próxmamente, sino unirlos en
       una sola celebración en la que se va transitando, representando y
       explicando todo el camino exploradoril.
@@ -286,7 +286,7 @@
       los chicos y la de sus padres.
     </p>
     <p>
-      El esquema de celebración propuesto se puede simpliﬁcar y hacerlo con
+      El esquema de celebración propuesto se puede simplificar y hacerlo con
       menos elementos y despliegue, pero respetando el momento central de la
       transformación de la hoguera en antor- chas que encierra el sentido de la
       Renovación de la Promesa
@@ -382,17 +382,17 @@
     <p>
       <em
         >Pero el emperador había querido saber cuántos hombres estaban bajo su
-        imperio, y ello había obligado a que el hĳo del hombre naciera en
+        imperio, y ello había obligado a que el hijo del hombre naciera en
         ruta.</em
       >
     </p>
     <p>
       <em
         >Allá en Belén había una posada para los peregrinos. Y allí Dios había
-        decidido que naciera su hĳo. Porque entre los miles y miles de techos
+        decidido que naciera su hijo. Porque entre los miles y miles de techos
         que el hombre se había levantado para guarecerse, el Padre había elegido
         desde toda la eternidad a ese albergue para que fuera lo primero que
-        viera su hĳito at nacer. Guarida contra el desamparo, lugar de acogida,
+        viera su hijito at nacer. Guarida contra el desamparo, lugar de acogida,
         un techo de Hombre para un Dios nacido en ruta y el Padre lo había
         elegido en serio. Porque allí había encontrado su complacencia.</em
       >
@@ -400,14 +400,14 @@
     <p>
       <em
         >Allí había ido preparando desde tiempo antiguo todo aquello que quería
-        tenerle dispuesto a su hĳo para su llegada a tierra de hombres. Y esa
+        tenerle dispuesto a su hijo para su llegada a tierra de hombres. Y esa
         tarde todo estaba dispuesto. Todo. Sólo había una cosa. Esa que Dios ha
         querido no poder decidir por sí mismo. Lo único que faltaba era que el
-        dueño del albergue dĳera que sí. y dĳo que no. No sé lo que habrá
+        dueño del albergue dijera que sí. y dijo que no. No sé lo que habrá
         pasado. A lo mejor esa tarde ya había tenido que decir demasiados no.
         Tal vez estaba cansando harto de que vinieran a pdirle alojamiento,
         cuando sus capacidades estaban colmadas. Quizá estaba dolido por algo.
-        Con bronca. No sé. Pero el hecho fue que dĳo que no. Y un "no"
+        Con bronca. No sé. Pero el hecho fue que dijo que no. Y un "no"
         categórico y sin apelación. No había lugar para ellos en la posada.</em
       >
     </p>
@@ -422,7 +422,7 @@
         cristalizado entre los labios. Justamente a él, que estaba destinado
         para encabezar la caravana de hombres que acogerían al Señor en su casa
         y allí quedó su albergue como inmensa tapera histórica. Albergue
-        destinado a acoger a Dios en beneﬁcio de los hombres. Y ahora
+        destinado a acoger a Dios en beneficio de los hombres. Y ahora
         despreciado de los hombres, por no haber aceptado a Dios.</em
       >
     </p>
