--- a/src/27-las-aventuras-de-bui-camey.html
+++ b/src/27-las-aventuras-de-bui-camey.html
@@ -82,7 +82,7 @@
       los vientos del invierno habían maltratado.
     </p>
     <p>
-      Fue otro día en que lo desaﬁaron a BUI CAMEY y a toda la Patrulla a jugar
+      Fue otro día en que lo desafiaron a BUI CAMEY y a toda la Patrulla a jugar
       a la pelota y sin echarse atrás Buí fue en busca de todos sus amigos. Por
       cada casa pasó para conformar el equipo y ese día no lo olvidarán porque
       perdieron casi por escándalo.
@@ -90,14 +90,14 @@
     <p>
       En aquella otra oportunidad Buí fue convocado por el Intendente del pueblo
       que le pediría que junto a toda la patrulla ayuden en la colecta que
-      anualmente se realizaba allí, en beneﬁcio de la casa de ancianos. Ante
+      anualmente se realizaba allí, en beneficio de la casa de ancianos. Ante
       dicho pedido, el jovencito BUI CAMEY volvió a ir en busca de los
       integrantes de la Patrulla y reunidos todos colaboraron en la organización
       de aquella obra de bien.
     </p>
     <p>
       Ese otro día, no era como cualquier otro. Era el cumpleaños de NENEO RUCA
-      y para festjárselo BUI CAMEY organizó una ﬁesta en el refugio en el campo
+      y para festjárselo BUI CAMEY organizó una fiesta en el refugio en el campo
       del árbol, cada uno debía llevar algo, entonces debió pasar casa por casa
       y esa tarde el cumpleaños feliz y la infaltable malteada a NENEO le
       dieron.
@@ -134,7 +134,7 @@
     <p>– Así es Abuelo, pero …</p>
     <p>
       – (El Abuelo lo interrumpió) mi amigo, en la Patrulla reina el espíritu de
-      unidad pero ello no es suﬁciente. Los adobes de esta pared están unidos y
+      unidad pero ello no es suficiente. Los adobes de esta pared están unidos y
       solo forman una pared y no esperes nada mas de ellos, pues de barro y paja
       son, pero sí espera mucho más de la Patrulla, pues quien la forma no son
       adobes, sino exploradores.
@@ -162,7 +162,7 @@
       su Madre María es también nuestra Madre que nos ama y nos auxilia.
     </p>
     <p>
-      Mi querido BUI CAMEY, no basta con que hayan aﬁanzado el grupo, ahora
+      Mi querido BUI CAMEY, no basta con que hayan afianzado el grupo, ahora
       deben <strong><em>HACER DE LA PATRULLA, UNA FAMILIA.</em></strong>
     </p>
     <h3>CAPITULO II</h3>
@@ -170,7 +170,7 @@
       <strong><em>“En busca del pequeño lobo solitario”</em></strong>
     </p>
     <p>
-      Lo que su abuelo le dĳera sobre la patrulla, tenía a Buí ciertamente
+      Lo que su abuelo le dijera sobre la patrulla, tenía a Buí ciertamente
       desconcertado. Todo el día y en todo momento pensaba sobre el tema.
       Gustaba caminar para idear una solución al problema ¿pero era un problema
       en realidad?.
@@ -185,7 +185,7 @@
       Aquel día sábado y caluroso, lo veía al pequeño explorador caminar rumbo
       al pueblo, por supuesto siempre con la idea de cómo hacer de la Patrulla
       una familia. Su andar se detuvo cuando sin quererlo chocó a un señor,
-      quien mirándolo con marcado enojo le dĳo a Buí:
+      quien mirándolo con marcado enojo le dijo a Buí:
     </p>
     <p>
       – No miras por donde caminas (para luego seguir en un loco intercambio de
@@ -233,7 +233,7 @@
       Al llegar, la Patrulla ya se encontraba reunida en el refugio, estaban
       todos ellos ÑORQUINCO, MAMUIL, AÑELO, TREVELIN, HUINCUL, CHIUIDO, NENEO
       RUCA y HUECHULAFQUEN, y allí escu- charon muy atentos los que el Abuelo
-      Líder les dĳera:
+      Líder les dijera:
     </p>
     <p>
       – ¿Han oído los rumores en el pueblo? Pues no dicen toda la verdad. Es
@@ -246,11 +246,11 @@
       de los bosques.
     </p>
     <p>
-      ÑORQUINCO quien tenía a su lado a su ﬁel amigo y mascota, el perrito
+      ÑORQUINCO quien tenía a su lado a su fiel amigo y mascota, el perrito
       ÑORQUIN, enérgicmente salió en defensa del pobre lobo: “¡No podemos dejar
       que lo maten, no ha hecho nada malo para recibir semejante castigo!”.
     </p>
-    <p>– Ha matado ya a dos ovejas (le dĳo TREVELIN)</p>
+    <p>– Ha matado ya a dos ovejas (le dijo TREVELIN)</p>
     <p>
       – Si lo hizo, es por subsistir, no lo ha hecho por maldad, como el hombre
       cuando parte de cacería y que hasta felicidad siente por matar animales,
@@ -266,13 +266,13 @@
       encontrarse.
     </p>
     <p>
-      Tras recibir las instrucciones del Abuelo, BUI CAMEY acercándose le dĳo:
+      Tras recibir las instrucciones del Abuelo, BUI CAMEY acercándose le dijo:
       “Abuelo, a nuestro regreso seguiremos tratando de formar de nuestra
       Patrulla una verdadera familia”.
     </p>
     <p>
       – (Ante ello, el Abuelo MACHINCO se dirigió a todos y especialmente a su
-      nieto Buí) somos una Patrulla que ha sabido aﬁanzarse, pero por ello no
+      nieto Buí) somos una Patrulla que ha sabido afianzarse, pero por ello no
       podemos sentirnos ya satisfechos,
     </p>
     <p>
@@ -296,7 +296,7 @@
       <strong><em>“La patrulla verdadera”</em></strong>
     </p>
     <p>
-      Y al ﬁn, la Patrulla de Fuego partió y en ese atardecer podía vérselos en
+      Y al fin, la Patrulla de Fuego partió y en ese atardecer podía vérselos en
       el camino sinuoso ir avanzando en formación, bandera al frente, como en
       tantas ocasiones.
     </p>
@@ -336,7 +336,7 @@
     </p>
     <p>
       Matecocido y pan fue el desayuno para retomar la marcha, mas antes de
-      hacerlo BUI CAMEY aprovechando la pasividad que brinda la mañana les dĳo a
+      hacerlo BUI CAMEY aprovechando la pasividad que brinda la mañana les dijo a
       sus amigos:
     </p>
     <p>
@@ -345,7 +345,7 @@
     </p>
     <p>
       Con el silencio, todos expresaron estar de acuerdo y bastaron unos
-      segundos para que BUI CAMEY dĳera:
+      segundos para que BUI CAMEY dijera:
     </p>
     <p>
       <strong><em>SEÑOR, GUÍA Y MAESTRO NUESTRO</em></strong>
@@ -390,7 +390,7 @@
     <p>
       En verdad la caminata se hizo pesada, tanto que nadie hablaba ahora
       ahorrando todas las energías. En las llanuras pueden verse a lo lejos las
-      arboledas, que en cierta forma en la larga caminata, marcan como el ﬁn del
+      arboledas, que en cierta forma en la larga caminata, marcan como el fin del
       camino pero que no son más que un pequeño bastión logra- do y que apenas
       traspuesto hay otro muy lejano que alcanzar.
     </p>
@@ -425,7 +425,7 @@
       BUI CAMEY sentado en la rama más alta,
     </p>
     <p>
-      dĳo sin dirigirse a nadie en especial, y es más, parecería que estaba
+      dijo sin dirigirse a nadie en especial, y es más, parecería que estaba
       hablando para sí mismo en voz alta:
     </p>
     <p>
@@ -440,7 +440,7 @@
       casa por casa a buscarlos, nos reunimos allí.
     </p>
     <p>
-      – Bueno (dĳo TREVELIN tratando de justiﬁcar a todos) es que cada uno tiene
+      – Bueno (dijo TREVELIN tratando de justificar a todos) es que cada uno tiene
       lo suyo y a veces no podemos ir, eso es todo.
     </p>
     <p>
@@ -450,19 +450,19 @@
     <p>
       – Sería bueno, entonces, que cada uno diga sus motivos (replicó ÑORQUINCO)
     </p>
-    <p>– Sí, entonces comienza tu (le dĳo HUECHU)</p>
+    <p>– Sí, entonces comienza tu (le dijo HUECHU)</p>
     <p>
       – (ÑORQUINCO aceptó y dio sus motivos) sucede que las tareas de la escuela
       no me dan tiempo alguno, ustedes saben que para las matemáticas soy como
       una roca.
     </p>
     <p>
-      – (MAMUIL se animó y dĳo) yo este … trato de aprender carpintería y por
+      – (MAMUIL se animó y dijo) yo este … trato de aprender carpintería y por
       eso lo estoy ayudan- do a Don Florencio en el pueblo, y ya estoy bastante
       adelantado ¿saben?
     </p>
     <p>
-      – Yo (dĳo TREVELIN) ayudo en las tareas de mi casa, hago esto o aquello y
+      – Yo (dijo TREVELIN) ayudo en las tareas de mi casa, hago esto o aquello y
       entre estas y las tareas de la escuela solo me queda libre la hora de la
       leche.
     </p>
@@ -473,7 +473,7 @@
     <p>– ¿Y vos HUINCUL? (le preguntó MAMUIL)</p>
     <p>
       Pero este levantando los hombros no decía palabra alguna. BUI CAMEY,
-      entonces para ha- cerlo hablar les dĳo a los demás:
+      entonces para ha- cerlo hablar les dijo a los demás:
     </p>
     <p>
       – Yo les voy a decir porque HUINCUL no viene al refugio. Es que en el
@@ -491,12 +491,12 @@
       todos y po- niendo en apuros a HUINCUL)
     </p>
     <p>
-      Sin desperdiciar ese valioso momento para el diálogo, BUI CAMEY dĳo
+      Sin desperdiciar ese valioso momento para el diálogo, BUI CAMEY dijo
       también:
     </p>
     <ul>
       <li>
-        - Todo lo que dĳeron son circunstancias personales por cierto valederas.
+        - Todo lo que dijeron son circunstancias personales por cierto valederas.
         ¿pero no han pensdo en compartirlas? Somos una Patrulla no solo para
         competir o salir de aventuras, sino para preocuparnos unos de los
         problemas de los otros o para compartir aquello que nos gusta.
@@ -537,7 +537,7 @@
       de alegría y amistad.
     </p>
     <p>
-      Unas pequeñas lomitas, daban ﬁn a la pradera y mostraban a su otro lado
+      Unas pequeñas lomitas, daban fin a la pradera y mostraban a su otro lado
       una llanura extesa, pudiendo verse allá a lo lejos, quizás las montañas
       del pequeño lobo solitario. Caminaron y caminaron, tanto lo hicieron que
       esa misma noche estarían ya, en las laderas de las primras montañas.
@@ -547,7 +547,7 @@
     <p>
       Las noches en las montañas son en verdad de una hermosura tal, que es
       imposible describila, solo basta mirar al cielo para perderse en la
-      eternidad del inﬁnito. Y mirando el cielo, vieron una estrella fugaz tan
+      eternidad del infinito. Y mirando el cielo, vieron una estrella fugaz tan
       nítidamente como nadie la había visto jamás (bueno, así ellos lo conta-
       rían) y a su paso un deseo cada uno pidió, guardándoselo en el rincón más
       íntimo del corazón.
@@ -600,7 +600,7 @@
     <p>
       Causaba extrañeza el observarlo, tenía un físico grandioso, sus manos eran
       tan grandes que costaba creerlo, pero su rostro no iba con ese cuerpo
-      fornido, pues mostraba una bondad y simpatía que conquistó su conﬁanza.
+      fornido, pues mostraba una bondad y simpatía que conquistó su confianza.
     </p>
     <p>
       Era un montañés de unos 45 años, eso creo, porque la juventud que
@@ -616,7 +616,7 @@
     <p>NENEO se apresuró a salvar cualquier equivocación diciendo:</p>
     <p>– No tema señor, no somos ningunos duendes salidos de los árboles…</p>
     <p>
-      – ¿Púes bien, entonces? (preguntó el montañés ﬁngiendo estar asombrado)
+      – ¿Púes bien, entonces? (preguntó el montañés fingiendo estar asombrado)
     </p>
     <p>
       – Somos exploradores señor, venimos de Pilcaniyeu (y de esa manera cada
@@ -638,13 +638,13 @@
       montañas, y que está en serio peligro
     </p>
     <p>– ¿Cazadores, verdad?</p>
-    <p>– Si señor (le dĳo HUECHU)</p>
+    <p>– Si señor (le dijo HUECHU)</p>
     <p>
       – Ah, esos cazadores, nunca descansan … nunca aprenderán a respetar a la
       naturaleza, si tan solo ese odio que los ciega les permitiera tan solo por
       un instante ser un poco observado- res, dudo que hicieran lo que hacen …
     </p>
-    <p>– ¿Observar? No entendemos señor Bernardo (dĳo Buí)</p>
+    <p>– ¿Observar? No entendemos señor Bernardo (dijo Buí)</p>
     <p>
       – Por ejemplo si aquellos que hoy persiguen a ese pequeño lobo, supiesen
       mas de él o de cualquier ser de la naturaleza, no harían lo que hacen, y
@@ -773,7 +773,7 @@
       lugar.
     </p>
     <p>
-      El camino se hacía cada vez más duro, y requería mayores sacriﬁcios, y en
+      El camino se hacía cada vez más duro, y requería mayores sacrificios, y en
       la dureza de la caminata empezaron algunos enojos y reproches, tanto que
       hasta BUI CAMEY tuvo que inter- venir para calmar los ánimos.
     </p>
@@ -786,14 +786,14 @@
       El montañés, acostumbrado a una vida solitaria, sabía observarlo todo. Así
       fue que decidió que se detengan a descansar. Cuando todos estuvieron
       sentados a su alrededor les señaló un paraje no muy distante de donde
-      estaban sentados y les dĳo:
+      estaban sentados y les dijo:
     </p>
     <p>
       – Observen allí. En aquel lugar vivía una tribu indígena que emigró hacia
       otras zonas más productivas. Allí, donde eran sus tierras, quedan ahora
       solo las tumbas de sus muertos.
     </p>
-    <p>Luego señalando a uno le dĳo:</p>
+    <p>Luego señalando a uno le dijo:</p>
     <p>
       – Anda, ve tú TREVELIN, llega aquel cementerio y entre aquellas tumbas
       diles todos los im- properios que sabes y todos los que puedas inventar.
@@ -802,8 +802,8 @@
       Enseguida (contestó TREVELIN) y fue e hizo todo cuanto el montañés le
       había indicado. Des- pués de unos minutos volvió y Bernardo le preguntó.
     </p>
-    <p>– ¿Hiciste lo que te dĳe?</p>
-    <p>– Sí, lo hice (dĳo TREVELIN)</p>
+    <p>– ¿Hiciste lo que te dije?</p>
+    <p>– Sí, lo hice (dijo TREVELIN)</p>
     <p>
       – Vuelve entonces, y comienza a hacerles todos los elogios y cumplidos que
       sabes y que puedas inventar.
@@ -813,7 +813,7 @@
       aquellos muertos como si fuesen héroes de la ciencia, de la virtud y de la
       santidad, regresando luego.
     </p>
-    <p>– Hiciste lo que te dĳe (dĳo Bernardo)</p>
+    <p>– Hiciste lo que te dije (dijo Bernardo)</p>
     <p>– Sí señor</p>
     <p>– ¿Y que es lo que las tumbas contestaron a tus alabanzas e insultos?</p>
     <p>– Nada (contestó el niño)</p>
@@ -829,7 +829,7 @@
     </p>
     <p>
       Alguna vez se ve a un niño que logró hacer bien su trabajo y obtener una
-      excelente caliﬁcción en la escuela, pavonearse por el honor conquistado;
+      excelente calificción en la escuela, pavonearse por el honor conquistado;
       creerse algo importante; considerar a sus compañeros como inferiores y
       ofenderse cuando cree no ser tratado como merece
     </p>
@@ -848,11 +848,11 @@
       hace odiosos a todos, hasta que nos encontramos con alguién mas fuerte que
       nosotros y nos ponga en vereda.
     </p>
-    <p>Entonces disgustos, malhumor, rabietas y mala ﬁgura.</p>
+    <p>Entonces disgustos, malhumor, rabietas y mala figura.</p>
     <p>
       Es por ello, que si somos alabados y si nuestras cosas marchan bien, demos
       gracias a Dios; si somos vituperados observemos la calma y si es razonable
-      corrĳámonos y si no es justa, tengamos paciencia.
+      corrijámonos y si no es justa, tengamos paciencia.
     </p>
     <p>
       El que es humilde y bondadoso, será siempre amado por todos. Por Dios y
@@ -953,7 +953,7 @@
       ÑORQUIN, el perrito mascota de la patrulla, movía su cola a la vez que iba
       de uno en otro lenguetéandoles la cara y ladrándoles de cerca. Todos lo
       acariciaban, pero ninguno entendía que él trataba de levantarles el ánimo,
-      y tal fue su perseverancia que al ﬁn tuvo éxito.
+      y tal fue su perseverancia que al fin tuvo éxito.
     </p>
     <p>
       Todos de golpe lo miraron, pensando en los mismo. ¡SI!, él podría olfatear
@@ -1001,7 +1001,7 @@
     </p>
     <p>
       laban seguían apretando los dientes, esforzándose por recuperar los
-      segundos perdidos. Por ﬁn llegó el ﬁn de la subida, allí estaban en lo mas
+      segundos perdidos. Por fin llegó el fin de la subida, allí estaban en lo mas
       alto de la montaña. Alocadamente, miraban aquí y allá.
     </p>
     <p>Allí, allí, por aquel campo gritaron.</p>
@@ -1064,7 +1064,7 @@
     <p>
       El cazador lo miró, hasta pensó en volver a disparar, pero viéndolos tan
       decididos a defender al pobre DIN, bajo su arma y riéndose despectivamente
-      les dĳo:
+      les dijo:
     </p>
     <p>
       – Si quieren quedarse con este lobo, quédense. Lo han salvado, al menos de
@@ -1125,7 +1125,7 @@
     <p>Y así, pasó otro agonizante día.</p>
     <p>
       Quizás alguien hubiese dicho en aquellos momentos y ante esa difícil
-      situación “solo resta ahora esperar”, pero ninguno de los jóvenes lo dĳo,
+      situación “solo resta ahora esperar”, pero ninguno de los jóvenes lo dijo,
       eran exploradores y por serlo jamas se resignaban a esperar sin hacer
       nada, y era mucho lo que aún podían hacer.
     </p>
@@ -1163,7 +1163,7 @@
       pero todos estaban charlando entre ellos y no entendió lo que pasaba.
     </p>
     <p>
-      Aún mas intrigado, miró ﬁjamente a todos para detectar quien de ellos le
+      Aún mas intrigado, miró fijamente a todos para detectar quien de ellos le
       había hecho la broma, pero nada, luego miró al pequeño DIN, quien lo
       miraba con sus bigotes blanqueados por la leche.
     </p>
@@ -1191,7 +1191,7 @@
     </p>
     <p>
       Ya de vuelta y ya de noche, en aquella luna inmensa posada en lo mas alto
-      de la montaña, se reﬂejaba la ﬁgura de DIN, que aullando los saludaba.
+      de la montaña, se reﬂejaba la figura de DIN, que aullando los saludaba.
     </p>
     <p>El pequeño DIN, ahora con su manada, ya nunca mas estará solitario.</p>
     <h3>CAPITULO VII</h3>
@@ -1232,7 +1232,7 @@
       nuestro …
     </p>
     <p>
-      – Ah, ya sé de ustedes, mi Hĳo me ha contado quienes son… y lo valiente y
+      – Ah, ya sé de ustedes, mi Hijo me ha contado quienes son… y lo valiente y
       bueno que han sido… sigan siendo así y hagan lo imposible por formarse
       fuertes, robustos y humildes que el Señor los ayudará siempre, y en sus
       oraciones esta noche, pidan por cada uno de ustedes.
@@ -1261,7 +1261,7 @@
     </p>
     <p>
       En la noche todos tuvieron el mismo pensamiento, recordaron lo que les
-      dĳera aquella Seño- ra y pese al cansancio en sus oraciones pidieron por
+      dijera aquella Seño- ra y pese al cansancio en sus oraciones pidieron por
       cada uno de los integrantes de la Patrulla.
     </p>
     <p>
@@ -1278,26 +1278,26 @@
       y entre ellos una Señora.
     </p>
     <p>
-      Sabe Padre, yo también tuve el mismo sueño, dĳo uno, y el otro y el otro,
+      Sabe Padre, yo también tuve el mismo sueño, dijo uno, y el otro y el otro,
       todos coincidieron en haber tenido un sueño similar, y en todos estaban
       reunidos y entre ellos aquella Señora del bosque.
     </p>
     <p>El Padre Juan, entonces les preguntó:</p>
     <p>– ¿Dónde es que esa Señora vive?</p>
     <p>
-      – Allí, Padre (le dĳo BUI CAMEY) allí en aquel claro del bosque (le
+      – Allí, Padre (le dijo BUI CAMEY) allí en aquel claro del bosque (le
       señalaba)
     </p>
     <p>– Pero en ese lugar no hay ninguna cabaña (aseguró el Abuelo Líder)</p>
-    <p>– Sí Abuelo, allí vive ella (ratiﬁcaron los demás)</p>
+    <p>– Sí Abuelo, allí vive ella (ratificaron los demás)</p>
     <p>– ¿Pero díganme, como es ella? (preguntó el Padre Juan)</p>
     <p>
       – Es tan buena y servicial, que nos hizo recordar a nuestras propias
       madres, nos regaló etos cordones y estas medallas y nos dio buenos
-      consejos, ah… y nos dĳo que nos formemos fuertes, robustos y humildes.
+      consejos, ah… y nos dijo que nos formemos fuertes, robustos y humildes.
     </p>
     <p>
-      – (Ante estas últimas palabras el padre Juan enternecido les dĳo) yo
+      – (Ante estas últimas palabras el padre Juan enternecido les dijo) yo
       también la conocí de niño. Recuérdenla siempre en sus oraciones que ella
       no los olvidará jamás.
     </p>
