--- a/src/20-corresponsabilidad.html
+++ b/src/20-corresponsabilidad.html
@@ -40,7 +40,7 @@
     <h3>- Dinámica:</h3>
     <p>Es el momento propicio para esta consigna porque:</p>
     <p>
-      Los Rastreadores-Hogueras tienen muchas diﬁcultades al trabajar en equipo
+      Los Rastreadores-Hogueras tienen muchas dificultades al trabajar en equipo
     </p>
     <p>
       Se dejan de lado entre ellos o a otro miembro de la comunidad,
@@ -57,7 +57,7 @@
     </p>
     <p>mayor.</p>
     <p>
-      Alguna familia de algún Rastreador está pasando por diﬁcultades laborales
+      Alguna familia de algún Rastreador está pasando por dificultades laborales
       y no parecen
     </p>
     <p>entender muy bien que sucede.</p>
@@ -89,7 +89,7 @@
       dones, mejorar los que tenemos, nacidos de la necesidad del otro. El “que
       nos mejore a todos”, ser parte de la construcción de una vida mejor para
       quienes me rodean (y en especial nuestros Rastredores-Hogueras) eso es la
-      Corresponsabilidad que deﬁne a un animador. Nos debemos a la educación de
+      Corresponsabilidad que define a un animador. Nos debemos a la educación de
       nuestros chicos y eso es una importante responsabilidad, que merece esa
       bús- queda constante que plantea Liniers.
     </p>
@@ -97,7 +97,7 @@
     <ul>
       <li>
         -Esta consigna trata el tema del “Trabajo” dentro de la sociedad. Puede
-        que la familia de alguno del grupo esté pasando por ciertas diﬁcultades
+        que la familia de alguno del grupo esté pasando por ciertas dificultades
         por este tema, que trascienden el sbado de actividades. Con la intención
         de ayudar nos podemos meter en la vida familiar de manera invasiva. Es
         por eso que te recomendamos tratar el tema con cuidado o evitarlo direc-
@@ -117,7 +117,7 @@
     <p>
       <em
         >«El reino de los Cielos es también como un hombre que, al salir de
-        viaje, llamó a sus servidres y les conﬁó sus bienes. A uno le dio cinco
+        viaje, llamó a sus servidres y les confió sus bienes. A uno le dio cinco
         talentos, a otro dos, y uno solo a un tercero, a cada uno según su
         capaci- dad; y después partió. En seguida, el que había recibido cinco
         talentos, fue a negociar con</em
@@ -129,16 +129,16 @@
         otros dos, pero el que recibió uno solo, hizo un pozo y enterró el
         dinero de su señor. Después de un largo tiempo, llegó el señor y arregló
         las cuentas con sus servidores. El que había recibido los cinco talentos
-        se adelantó y le presentó otros cinco. "Señor, le dĳo, me has conﬁado
+        se adelantó y le presentó otros cinco. "Señor, le dijo, me has confiado
         cinco talentos: aquí están los otros cinco que he ganado". "Está bien,
-        servidor bueno y ﬁel, le dĳo su señor, ya que respondiste ﬁelmente en lo
+        servidor bueno y fiel, le dijo su señor, ya que respondiste fielmente en lo
         poco, te encargaré de mucho más: entra a participar del gozo de tu
-        señor". Llegó luego el que había recibido dos talentos y le dĳo: "Señor,
-        me has conﬁado dos talentos: aquí están los otros dos que he ganado".
-        "Está bien, servidor bueno y ﬁel, ya que respondiste ﬁelmente en lo
+        señor". Llegó luego el que había recibido dos talentos y le dijo: "Señor,
+        me has confiado dos talentos: aquí están los otros dos que he ganado".
+        "Está bien, servidor bueno y fiel, ya que respondiste fielmente en lo
         poco, te encargaré de mucho más: entra a participar del gozo de tu
         señor". Llegó luego el que había recibido un solo talento. "Señor, le
-        dĳo, sé que eres un hombre exigente: cosechas donde no has sembrado y
+        dijo, sé que eres un hombre exigente: cosechas donde no has sembrado y
         recoges donde no has esparcido. Por eso tuve miedo y fui a enterrar tu
         talento: ¡aquí tienes lo tuyo!". Pero el señor le respondió: "Servidor
         malo y perezoso, si sabías que cosecho donde no he sembrado y recojo
@@ -209,7 +209,7 @@
         posibilidad podes saltear directamente al punto 8)
       </li>
       <li>
-        <strong>2.</strong> Juntar entre todos una buena cantidad de leña ﬁna y
+        <strong>2.</strong> Juntar entre todos una buena cantidad de leña fina y
         mediana.
       </li>
       <li>
@@ -249,7 +249,7 @@
         y escriba brevemente los dones que puede ver en él.
       </li>
       <li>
-        <strong>11.</strong> Mantener un clima de conﬁanza y respeto para
+        <strong>11.</strong> Mantener un clima de confianza y respeto para
         facilitar el diálogo grupal.
       </li>
       <li>
@@ -292,9 +292,9 @@
         así también sucede con Cristo. Porque todos hemos sido bautizados en un
         solo Espíritu para formar un solo Cuerpo –judíos y griegos, esclavos y
         hombres libres– y todos hemos bebido de un mismo Espíritu. El cuerpo no
-        se compone de un solo miembro sino de muchos. Si el pie dĳera: “Como no
+        se compone de un solo miembro sino de muchos. Si el pie dijera: “Como no
         soy mano, no formo parte del cuerpo”, ¿acaso por eso no seguiría siendo
-        parte de él? Y si el oído dĳera: “Ya que no soy ojo, no formo parte del
+        parte de él? Y si el oído dijera: “Ya que no soy ojo, no formo parte del
         cuerpo”, ¿acaso dejaría de ser parte de él? Si todo el cuerpo fuera ojo,
         ¿dónde estaría el oído? Y si todo fuera oído, ¿dónde estaría el olfato?
         Pero Dios ha dispuesto a cada uno de los miembros en el cuerpo, según un
@@ -372,7 +372,7 @@
     <ol>
       <li>
         <strong>10.</strong> Realizar un dibujo de un cuerpo y escribir el
-        nombre en el miembro con el que se sienta identiﬁcado o que simbolice
+        nombre en el miembro con el que se sienta identificado o que simbolice
         algo especial para el.
       </li>
       <li>
@@ -417,21 +417,21 @@
       <li>
         <strong>1.</strong> Armar varios grupos y entregarle a cada uno una
         parte del texto "Jóvenes trabajadores" con una serie de anécdota sobre
-        un oﬁcio de la vida de Don Bosco y María Mazzarello.
+        un oficio de la vida de Don Bosco y María Mazzarello.
         <strong
           ><em>Don Bosco - María Mazzarello: Jóvenes trabajadores</em></strong
         >
-        Don Bosco de joven se preocupó por ir aprendiendo distintos oﬁcios con
+        Don Bosco de joven se preocupó por ir aprendiendo distintos oficios con
         los que se mantenla y costeaba sus estudios. Una vez en el oratorio
         donde tos jóvenes se divirtieran sanamente, implementó los talleres
-        donde él mismo fue enseñando entre otros los oﬁcios aprendidos de
+        donde él mismo fue enseñando entre otros los oficios aprendidos de
         estudiante ya medida que los alumnos iban aprendiendo los ponía al
         frente de los talleres
       </li>
     </ol>
     <p>
       María Mazzarello llevó una vida de trabajo, comenzando de mujer joven a
-      trabajar con su fmilia en el campo, y luego aprendiendo algunos oﬁcios.
+      trabajar con su fmilia en el campo, y luego aprendiendo algunos oficios.
       Así nace un pequeño taller, después un minúsculo hospicio para tas niñas
       abandonadas y, aliado, un oratorio festivo. No lleva este nombre, pero
       tiene las características del que Don Bosco ha fundado en Turín: alegría,
@@ -442,7 +442,7 @@
       su vida de trabajo es incansable en los campos y en los vñedos. Mientras
       da la vuelta a la hierba en el prado, escarda opoda las vides, abreva los
       anmales en el establo; cuece la polenta atiende a las mil ocupaciones del
-      campo y de la casa, los ojos de su espíritu están lĳas en Dios y su mundo
+      campo y de la casa, los ojos de su espíritu están lijas en Dios y su mundo
       interior se hace más rico y más grande.
     </p>
     <p>
@@ -455,7 +455,7 @@
       Primero hizo de criado en casa de la patrona; después, se puso al servicio
       de un pariente lejano, con landa y pastelería. Por la mañana, antes de ir
       a clase, barría y fregaba el salón de juego. También el amo le enseñaba el
-      oﬁcio de pastelero, que llegó a conocer perfectamente.
+      oficio de pastelero, que llegó a conocer perfectamente.
     </p>
     <p>
       <strong><em>En el establo:</em></strong> A los 11 años, en la casa de los
@@ -463,16 +463,16 @@
       familia campesina de mejor posición, que trabajaban de sol a sollabrando
       sus tierras, viñedos y campos y cuidando bueyes y vacas. El trabajo de
       Juan, mozo de cuadra, no tenía nada de humillante ni de excepcional. Por
-      las granjas de los alrededores, a ﬁnes de marzo, habría decenas de "mozos"
+      las granjas de los alrededores, a fines de marzo, habría decenas de "mozos"
       como él. Era el camino normal para los muchachos de las familias pobres.
     </p>
     <p>
       <strong><em>Modista y mucho más:</em></strong> Una idea brilla en la mente
-      de María: "¿Y si aprendiera el oﬁcio de modista?". No es el suyo un puro
+      de María: "¿Y si aprendiera el oficio de modista?". No es el suyo un puro
       intento de encontrar nuevo sistema de vida. Invita a su amiga Petronila,
       invitándola a asociarse a ella ''Apenas estemos en condiciones de trabajar
       por nuestra cuenta abriremos un pequeño taller para las niñas del pueblo y
-      les enseñaremos a coser. La ﬁnalidad principal será enseñarles a conocer y
+      les enseñaremos a coser. La finalidad principal será enseñarles a conocer y
       amaral Señor, hacerlas buenas y librarlas de los peligros, pero desde
       ahora pongamos la intención de que cada puntada sea un acto de amor a
       Dios".
@@ -498,11 +498,11 @@
       </li>
       <li>
         <strong>4.</strong> Cada grupo presenta su pequeña obra de teatro,
-        mientras los demás tienen que adivinar de qué oﬁcio se trata.
+        mientras los demás tienen que adivinar de qué oficio se trata.
       </li>
       <li>
         <strong>5.</strong> Al terminar cada presentación comentar más
-        detalladamente sobre el texto y preguntar ¿Para qué sirve este oﬁcio?
+        detalladamente sobre el texto y preguntar ¿Para qué sirve este oficio?
         ¿Qué pasa si no existiera? ¿Qué sentido tiene trabajar? ¿Qué se busca?
         ¿Qué pasa cuando no hay responsabilidad en el trabajo que hace cada uno
         y se buscan otros intereses?
@@ -525,7 +525,7 @@
     <p>
       <strong>Comunidad responsable:</strong> Creemos en un Jesús que supo
       relacionarse con su pueblo y trabajar a la par, a partir de realizar bien
-      sus responsabilidades como hĳo, trabajador y compañero. En un Jesús
+      sus responsabilidades como hijo, trabajador y compañero. En un Jesús
       comprometido, que compartió la responsabilidad de su tarea con la de sus
       amigos y les enseñó a vivir en comunidad. Los apóstoles que supieron
       entenderlo bien, continuaron re-
@@ -551,7 +551,7 @@
     <p>
       <strong>El trabajo:</strong> El trabajo es la forma en que cada uno
       contribuye al desarrollo y bien común de una sociedad. Da sentido a la
-      vida de una persona, la digniﬁca y la hace sentirse útil. Como no todos
+      vida de una persona, la dignifica y la hace sentirse útil. Como no todos
       podemos hacer lo mismo, cada uno se dedica a una tarea en particular, cuyo
       resultado es algún producto o servicio en particular para todos los demás.
       A su vez cada trbajador recibe su retribución lo que le permite acceder a
@@ -613,9 +613,9 @@
         aunque tengan el mimo origen. Están los verdeos. Son sembrados que han
         de servir para forraje verde. De allí su nombre. En ellos todo es
         inmediato, claro, directo. Las hojas son verdes y anchas, los tallos
-        jgosos, las ﬁbras a menudo cargadas de azúcar. Todo invita a ser
-        masticado, comido, devorado. En el verdeo todo busca crecer a ﬁn de ser
-        dedicado a una ﬁnalidad inmediata: ser directamente puesto al servicio
+        jgosos, las fibras a menudo cargadas de azúcar. Todo invita a ser
+        masticado, comido, devorado. En el verdeo todo busca crecer a fin de ser
+        dedicado a una finalidad inmediata: ser directamente puesto al servicio
         de la vida de otro, que al comerlo lo incorporará a su existencia y
         subsistecia. El rebrote gasta hasta las últimas energías de la planta en
         una serie de acciones inmediatas destinadas a alimentar el hambre de
@@ -642,7 +642,7 @@
       <em
         >Los verdeos son indispensables. Mantienen la vida, la aceleran, apuran
         su término. Su sentdo está en lo inmediato. Su término es simplemente su
-        ﬁn. Se agota su sentido en el presente que lo realiza. Y su ﬁnal será el
+        fin. Se agota su sentido en el presente que lo realiza. Y su final será el
         haber sido útil a la vida.</em
       >
     </p>
@@ -657,7 +657,7 @@
     <p>
       <em
         >Aquí todo está en función, en camino hacia algo que sólo tendrá sentido
-        al ﬁnal. Las hojas verdes no serán usadas. Terminarán en chala. Los
+        al final. Las hojas verdes no serán usadas. Terminarán en chala. Los
         troncos, tal vez jugosos, se secarán en pie sin que nadie los aproveche
         ni sepa nada de su ternura o de su dulzura. Regresarán a la tirra luego
         de la dura prueba de la trilla que corta y tritura, y allí el barbecho
@@ -666,7 +666,7 @@
         cansan de reﬂejar el cielo y hasta quizá se cubran de moho en su</em
       >
     </p>
-    <p><em>superﬁcie, como si tuvieran pudor de reﬂejarlo.</em></p>
+    <p><em>superficie, como si tuvieran pudor de reﬂejarlo.</em></p>
     <p>
       <em
         >El sentido de estos sembrados es la semilla. Hacia allí marcha todo lo
@@ -694,7 +694,7 @@
     </p>
     <h3>- Se reﬂexiona:</h3>
     <p>
-      ¿Cuáles eran los talentos del verdeo y de la cosecha? A que se reﬁere con
+      ¿Cuáles eran los talentos del verdeo y de la cosecha? A que se refiere con
       que la semilla vive multiplicada?Casa uno piensa en la parte que más le
       gustó y la relaciona con alguna situación de su vida cotidiana, tratando
       de hacer hincapié en nuestros dones o talentos.
@@ -726,8 +726,8 @@
       <strong><em>El Mundo</em></strong>
       <em
         >Un hombre del pueblo de Neguá, en la costa de Colombia, pudo subir al
-        alto cielo. A la vuelta, contó. Dĳo que había contemplado, desde allá
-        arriba, la vida humana. Y dĳo que somos un mar de fueguitos.</em
+        alto cielo. A la vuelta, contó. Dijo que había contemplado, desde allá
+        arriba, la vida humana. Y dijo que somos un mar de fueguitos.</em
       >
     </p>
     <ul>
